Further cleanup of message.properties file
GeoHash: http://maps.google.com/maps?q=MyCodingMap@52.066626,4.302139

--- a/portal/src/main/resources/i18n/messages_bg.properties
+++ b/portal/src/main/resources/i18n/messages_bg.properties
@@ -7,6 +7,7 @@ _action.alt.more.info=Шракни за повече информация
 _action.alt.next.page=щракнете тук за следващата страница резултати
 _action.alt.previous.page=щракнете тук за предишната страница резултати
 _action.alt.table.view=Табличен изглед
+_action.chooselanguage=Избери език
 _action.personal.page=My Personal Page
 _action.previous=Предишно
 _action.refine.your.search=Уточнете търсенето
@@ -95,10 +96,6 @@ _locale.sk=Словашки
 _locale.sl=Словенски
 _locale.sr=Сръбски
 _locale.sv=Шведски
-_menu.i18n.chooselanguage=Избери език
-_messages.error.emailformaterror=Увери се, че е-mail-ът е правилно записан и опитай наново
-_messages.error.emailsendfailed=Е-mail-ът не може да бъде изпратен
-_messages.notification.emailsent=Е-mail-ът е изпратен
 _metadata.dc.contributor=Участник
 _metadata.dc.coverage=Обсег
 _metadata.dc.creator=Автор
@@ -153,6 +150,33 @@ _mine.saved.items=Запазени обекти
 _mine.saved.searches=Запазени търсения
 _mine.saved.tags=Запазени тагове
 _mine.user.information=Данни за потребителя
+_mine.user.notification.emailformaterror=Увери се, че е-mail-ът е правилно записан и опитай наново
+_mine.user.notification.emailsendfailed=Е-mail-ът не може да бъде изпратен
+_mine.user.notification.emailsent=Е-mail-ът е изпратен
+_mine.user.notification.failure.search.saved=Търсенето не можа да се запише
+_mine.user.register-request.emailalreadyregistered=Този e-mail е регистриран вече
+_mine.user.register.email.has.been.sent=Изпратен е e-mail на следния адрес
+_mine.user.register.emailclicktoconfirm=Моля щракнете върху връзката, за да потвърдите регистрацията си
+_mine.user.register.emailuse=Ще използвате e-mail-а си и паролата си за влизане
+_mine.user.register.entervalidemail=Моля въведете валиден е-mail адрес
+_mine.user.register.enteryouremail=Въведете e-mail-а си
+_mine.user.register.errordetails=Подробности за грешката
+_mine.user.register.finishregistration=Приключване на регистрацията
+_mine.user.register.iagree=Съгласен съм
+_mine.user.register.linkexpired=Връзката, която сте ползвали за завършване на регистрацията е невалидна или е изтекла.
+_mine.user.register.mycodeofconduct=Разбирам, че My Personal Page ми позволява да създавам тагове за всеки обект, за който пожелая. Съгласен съм да не създавам тагове, които могат да се възприемат като обидни, заплашителни, незаконни, унизителни, зловредни, с елементи на насилие, подбудителни, враждебни, порнографски, отблъскващи, измамнически, нарушаващи личните или обществените права, изпълнени с омраза или такива, които предизвикват възражение на расова, етническа или друга основа. Като щраквам върху тази кутийка се съгласявам да спазвам това споразумение и разбирам, че ако не го спазвам, моето членство в My Personal Page ще бъде прекратено.
+_mine.user.register.mycodeofconductrequired=Трябва да се съгласите с нашите правила, за да се регистрирате в My Personal Page.
+_mine.user.register.password=Парола
+_mine.user.register.password.choose=Изберете парола
+_mine.user.register.password.explain=Паролата трябва е между 6 и 30 символа дълга
+_mine.user.register.pick.user.name=Когато сте влезнали, се вижда потребителското ви име
+_mine.user.register.please.follow.link=Моля щракни на връзката, дадена в e-maila, за да завършиш регистрацията
+_mine.user.register.register=Регистрирай се
+_mine.user.register.registration.failed=Възникнала е грешка в процеса на регистрация. Моля опитайте отново
+_mine.user.register.repeat.password=Повторете паролата
+_mine.user.register.requiredfield=Това е задължително поле
+_mine.user.register.username.choose=Изберете потребителско име
+_mine.user.register.username.explain=Когато сте влезнали, се вижда потребителското ви име
 _mine.user.registration.notification.succeed=Регистрирахте се успешно
 _mine.user.validation.username.in.use=е в употреба. Моля изберете друго потребителско име
 _mine.username=Потребителско име
@@ -171,37 +195,14 @@ _portal.ui.navigation.of=от
 _portal.ui.navigation.page=Страница
 _portal.ui.navigation.results=Резултати
 _portal.ui.notification.error=Грешка
-_portal.ui.notification.failure.search.saved=Търсенето не можа да се запише
 _portal.ui.notification.noitemsfound=Няма намерени обекти
 _portal.ui.reset.searchbox=Рестартиране
 _portal.ui.viewingrelateditems=Виждате подобни обекти
-_register-request.emailalreadyregistered=Този e-mail е регистриран вече
-_register.email.has.been.sent=Изпратен е e-mail на следния адрес
-_register.emailclicktoconfirm=Моля щракнете върху връзката, за да потвърдите регистрацията си
-_register.emailuse=Ще използвате e-mail-а си и паролата си за влизане
-_register.entervalidemail=Моля въведете валиден е-mail адрес
-_register.enteryouremail=Въведете e-mail-а си
-_register.errordetails=Подробности за грешката
-_register.finishregistration=Приключване на регистрацията
-_register.iagree=Съгласен съм
-_register.linkexpired=Връзката, която сте ползвали за завършване на регистрацията е невалидна или е изтекла.
-_register.mycodeofconduct=Разбирам, че My Personal Page ми позволява да създавам тагове за всеки обект, за който пожелая. Съгласен съм да не създавам тагове, които могат да се възприемат като обидни, заплашителни, незаконни, унизителни, зловредни, с елементи на насилие, подбудителни, враждебни, порнографски, отблъскващи, измамнически, нарушаващи личните или обществените права, изпълнени с омраза или такива, които предизвикват възражение на расова, етническа или друга основа. Като щраквам върху тази кутийка се съгласявам да спазвам това споразумение и разбирам, че ако не го спазвам, моето членство в My Personal Page ще бъде прекратено.
-_register.mycodeofconductrequired=Трябва да се съгласите с нашите правила, за да се регистрирате в My Personal Page.
-_register.password=Парола
-_register.password.choose=Изберете парола
-_register.password.explain=Паролата трябва е между 6 и 30 символа дълга
-_register.pick.user.name=Когато сте влезнали, се вижда потребителското ви име
-_register.please.follow.link=Моля щракни на връзката, дадена в e-maila, за да завършиш регистрацията
-_register.register=Регистрирай се
-_register.registration.failed=Възникнала е грешка в процеса на регистрация. Моля опитайте отново
-_register.repeat.password=Повторете паролата
-_register.requiredfield=Това е задължително поле
-_register.username.choose=Изберете потребителско име
-_register.username.explain=Когато сте влезнали, се вижда потребителското ви име
 _search.boolean.and=и
 _search.boolean.not=не
 _search.boolean.or=или
 _search.field.any.field=което и да е
+_search.field.country=Страна
 _search.field.creator=Създател
 _search.field.date=Дата
 _search.field.description=Описание
@@ -225,7 +226,6 @@ _unused.bosnia.and.herzegovina=Босна и Херцеговина
 _unused.browse.through.time=Търси във времето
 _unused.contacts=Контакти
 _unused.contributors=Доставчици
-_unused.country=Страна
 _unused.createaccount=Създай свой потребителски адрес
 _unused.emailwelcome=Добре дошли в My Personal Page
 _unused.enewsoptin=Информирайте ме за развитието на Europeana.
