--- a/portal/src/main/resources/i18n/messages_ca.properties
+++ b/portal/src/main/resources/i18n/messages_ca.properties
@@ -7,6 +7,7 @@ _action.alt.more.info=Cliqueu per més informació
 _action.alt.next.page=Cliqueu aquí per anar a la pàgina següent de resultats
 _action.alt.previous.page=cliqueu aquí per anar a la pàgina anterior de resultats
 _action.alt.table.view=Visualització en taula
+_action.chooselanguage=Escolliu una llengua
 _action.personal.page=La Meva Europeana
 _action.previous=Anterior
 _action.refine.your.search=Afineu la vostra cerca
@@ -95,10 +96,6 @@ _locale.sk=Eslovac
 _locale.sl=Eslovè
 _locale.sr=Serbi
 _locale.sv=Suec
-_menu.i18n.chooselanguage=Escolliu una llengua
-_messages.error.emailformaterror=Si us plau, comproveu que el correu elctrònic tingui el format correcte i intenteu-lo de nou
-_messages.error.emailsendfailed=No s'ha pogut enviar el correu electrònic
-_messages.notification.emailsent=Correu electrònic enviat
 _metadata.dc.contributor=Contribuïdor
 _metadata.dc.coverage=Abast
 _metadata.dc.creator=Autor
@@ -153,6 +150,33 @@ _mine.saved.items=Ítems guardats
 _mine.saved.searches=Cerques guardades
 _mine.saved.tags=Etiquetes guardades
 _mine.user.information=Informació de l'usuari
+_mine.user.notification.emailformaterror=Si us plau, comproveu que el correu elctrònic tingui el format correcte i intenteu-lo de nou
+_mine.user.notification.emailsendfailed=No s'ha pogut enviar el correu electrònic
+_mine.user.notification.emailsent=Correu electrònic enviat
+_mine.user.notification.failure.search.saved=Guardar la cerca ha fallat
+_mine.user.register-request.emailalreadyregistered=Aquest correu electrònic ja ha estat registrat
+_mine.user.register.email.has.been.sent=S'ha enviat un correu electrònic a l'adreça següent
+_mine.user.register.emailclicktoconfirm=Si us plau, cliqueu el següent enllaç per confirmar el vostre registre
+_mine.user.register.emailuse=Utilitzeu el vostre correu electrònic i contrasenya per connectar-vos
+_mine.user.register.entervalidemail=Si us plau, entreu una adreça de correu vàlida
+_mine.user.register.enteryouremail=Entreu el vostre correu electrònic
+_mine.user.register.errordetails=Detalls de l'error
+_mine.user.register.finishregistration=Registre finalitzat
+_mine.user.register.iagree=Estic d'acord
+_mine.user.register.linkexpired=L'enllaç que vau utilitzar per registrar-vos és invàlid o ha expirat
+_mine.user.register.mycodeofconduct=Entenc que la Meva Europeana em dóna l'oportunitat de crear etiquetes per a qualsevol ítem que desitgi. Estic d'acord en no crear etiquetes que puguin ser considerades difamatòries, perjudicials, amenaçadores, il•legals, abusives, infamatòries, il•lícites, assetjadores, pornogràfiques, obscenes, fraudulentes, que envaeixin la privacitat o els drets de publicitat, odioses, racials o ètniques o de qualsevol mena que puguin ser objectables. En fer clic en aquesta casella accepto complir aquest acord, i entenc que si no ho faig, la meva condició de membre de la Meva Europeana es donarà per finalitzada.
+_mine.user.register.mycodeofconductrequired=Per registrar-vos a la Meva Europeana heu d'estar d'acord amb el seu codi de conducta
+_mine.user.register.password=Contrasenya
+_mine.user.register.password.choose=Escolliu una contrasenya
+_mine.user.register.password.explain=Les contrasenyes han de tenir entre 6 i 30 caràcters
+_mine.user.register.pick.user.name=Quan us hagueu connectat es visualitzarà el vostre nom d'usuari
+_mine.user.register.please.follow.link=Si us plau, seguiu l'enllaç del correu electrònic i completeu el procés de registre
+_mine.user.register.register=Registreu-vos
+_mine.user.register.registration.failed=S'ha produït un error mentre us registraveu. Si us plau, intenteu-lo de nou
+_mine.user.register.repeat.password=Repetiu la contrasenya
+_mine.user.register.requiredfield=És un camp obligatori
+_mine.user.register.username.choose=Escolliu un nom d'usuari
+_mine.user.register.username.explain=Quan us hagueu connectat es visualitzarà el vostre nom d'usuari
 _mine.user.registration.notification.succeed=Us heu registrat amb èxit
 _mine.user.validation.username.in.use=és en ús. Si us plau, escolliu un altre nom d'usuari
 _mine.username=Nom d'usuari
@@ -171,37 +195,14 @@ _portal.ui.navigation.of=de
 _portal.ui.navigation.page=Pàgina
 _portal.ui.navigation.results=Resultats
 _portal.ui.notification.error=Error
-_portal.ui.notification.failure.search.saved=Guardar la cerca ha fallat
 _portal.ui.notification.noitemsfound=No s'han trobat ítems
 _portal.ui.reset.searchbox=Reinicialitzar
 _portal.ui.viewingrelateditems=Esteu visualitzant ítems relacionats
-_register-request.emailalreadyregistered=Aquest correu electrònic ja ha estat registrat
-_register.email.has.been.sent=S'ha enviat un correu electrònic a l'adreça següent
-_register.emailclicktoconfirm=Si us plau, cliqueu el següent enllaç per confirmar el vostre registre
-_register.emailuse=Utilitzeu el vostre correu electrònic i contrasenya per connectar-vos
-_register.entervalidemail=Si us plau, entreu una adreça de correu vàlida
-_register.enteryouremail=Entreu el vostre correu electrònic
-_register.errordetails=Detalls de l'error
-_register.finishregistration=Registre finalitzat
-_register.iagree=Estic d'acord
-_register.linkexpired=L'enllaç que vau utilitzar per registrar-vos és invàlid o ha expirat
-_register.mycodeofconduct=Entenc que la Meva Europeana em dóna l'oportunitat de crear etiquetes per a qualsevol ítem que desitgi. Estic d'acord en no crear etiquetes que puguin ser considerades difamatòries, perjudicials, amenaçadores, il•legals, abusives, infamatòries, il•lícites, assetjadores, pornogràfiques, obscenes, fraudulentes, que envaeixin la privacitat o els drets de publicitat, odioses, racials o ètniques o de qualsevol mena que puguin ser objectables. En fer clic en aquesta casella accepto complir aquest acord, i entenc que si no ho faig, la meva condició de membre de la Meva Europeana es donarà per finalitzada.
-_register.mycodeofconductrequired=Per registrar-vos a la Meva Europeana heu d'estar d'acord amb el seu codi de conducta
-_register.password=Contrasenya
-_register.password.choose=Escolliu una contrasenya
-_register.password.explain=Les contrasenyes han de tenir entre 6 i 30 caràcters
-_register.pick.user.name=Quan us hagueu connectat es visualitzarà el vostre nom d'usuari
-_register.please.follow.link=Si us plau, seguiu l'enllaç del correu electrònic i completeu el procés de registre
-_register.register=Registreu-vos
-_register.registration.failed=S'ha produït un error mentre us registraveu. Si us plau, intenteu-lo de nou
-_register.repeat.password=Repetiu la contrasenya
-_register.requiredfield=És un camp obligatori
-_register.username.choose=Escolliu un nom d'usuari
-_register.username.explain=Quan us hagueu connectat es visualitzarà el vostre nom d'usuari
 _search.boolean.and=i
 _search.boolean.not=no
 _search.boolean.or=o
 _search.field.any.field=Qualsevol camp
+_search.field.country=País
 _search.field.creator=Creador
 _search.field.date=Data
 _search.field.description=Descripció
@@ -225,7 +226,6 @@ _unused.bosnia.and.herzegovina=Bòsnia i Hercegovina
 _unused.browse.through.time=Navegueu pel temps
 _unused.contacts=Contactes
 _unused.contributors=Contribuïdors
-_unused.country=País
 _unused.createaccount=Crear un compte
 _unused.emailwelcome=Benvingut a la Meva Europeana
 _unused.enewsoptin=Informeu-me dels nous desenvolupaments d'Europeana
