--- a/portal/src/main/resources/i18n/messages_cs.properties
+++ b/portal/src/main/resources/i18n/messages_cs.properties
@@ -7,6 +7,7 @@ _action.alt.more.info=Další informace
 _action.alt.next.page=Následující stránka výsledků
 _action.alt.previous.page=Předcházejí stránka výsledků
 _action.alt.table.view=Tabulka zobrazených výsledků
+_action.chooselanguage=Zvol jazyk
 _action.personal.page=Moje Europeana
 _action.previous=Předcházející
 _action.refine.your.search=Přeformuluj svůj dotaz
@@ -95,10 +96,6 @@ _locale.sk=Slovenština (slo)
 _locale.sl=Slovinština (slv)
 _locale.sr=Srbština (scc)
 _locale.sv=Švédština (sve/swe)
-_menu.i18n.chooselanguage=Zvol jazyk
-_messages.error.emailformaterror=Ujisti se, že je tvůj e-mail správně zformátován a zkus to znovu
-_messages.error.emailsendfailed=E-mail nemohl být odeslán
-_messages.notification.emailsent=E-mail byl odeslán
 _metadata.dc.contributor=Přispěvatel
 _metadata.dc.coverage=Pokrytí
 _metadata.dc.creator=Autor
@@ -153,6 +150,33 @@ _mine.saved.items=Uložené položky
 _mine.saved.searches=Uložená vyhledávání
 _mine.saved.tags=Uložená pole
 _mine.user.information=Informace pro uživatele
+_mine.user.notification.emailformaterror=Ujisti se, že je tvůj e-mail správně zformátován a zkus to znovu
+_mine.user.notification.emailsendfailed=E-mail nemohl být odeslán
+_mine.user.notification.emailsent=E-mail byl odeslán
+_mine.user.notification.failure.search.saved=Chyba ukládání výsledků vyhledávání
+_mine.user.register-request.emailalreadyregistered=Tato e-mailová adresa je již zaregistrována
+_mine.user.register.email.has.been.sent=E-mail byl zaslán na následující adresu
+_mine.user.register.emailclicktoconfirm=Kliknutím na následující link potvrďte svou registraci
+_mine.user.register.emailuse=K přihlášení na tuto stránku použij svou e-mailovou adresu a heslo
+_mine.user.register.entervalidemail=Vložte platnou e-mailovou adresu, prosím
+_mine.user.register.enteryouremail=Vlož svou e-mailovou adresu
+_mine.user.register.errordetails=Údaje o chybě
+_mine.user.register.finishregistration=Dokonči registraci
+_mine.user.register.iagree=Souhlasím
+_mine.user.register.linkexpired=Odkaz, který jsi použil/a k dokončení registrace je neplatný nebo mu vypršela platnost
+_mine.user.register.mycodeofconduct=I understand that the Delving portal gives me the opportunity to create tags for any item I wish. I agree that I will not create any tags that could be considered libelous, harmful, threatening, unlawful, defamatory, infringing, abusive, inflammatory, harassing, pornographic, obscene, fraudulent, invasive of privacy or publicity rights, hateful, or racially, ethnically or otherwise objectionable. By clicking this box I agree to abide by this agreement, and understand that if I don't my login on the portal will be terminated.
+_mine.user.register.mycodeofconductrequired=You must agree to our code of conduct to register for portal membership
+_mine.user.register.password=Heslo
+_mine.user.register.password.choose=Zvol si heslo
+_mine.user.register.password.explain=Heslo musí obsahovat od 6 do 30 znaků
+_mine.user.register.pick.user.name=Tvoje uživatelské jméno bude zobrazeno po přihlášení
+_mine.user.register.please.follow.link=Otevři odkaz zaslaný tímto e-mailem a dokonči registraci
+_mine.user.register.register=Zaregistrovat se
+_mine.user.register.registration.failed=Při zpracování Vašeho požadavku na registraci se objevila chyba. Zkuste registraci znovu.
+_mine.user.register.repeat.password=Zadej heslo znovu
+_mine.user.register.requiredfield=Povinné pole
+_mine.user.register.username.choose=Zvol si uživatelské jméno
+_mine.user.register.username.explain=Tvoje uživatelské jméno bude zobrazeno po přihlášení
 _mine.user.registration.notification.succeed=Registrace proběhla úspěšně
 _mine.user.validation.username.in.use=Toto uživatelské jméno je již obsazeno. Vyber si jiné
 _mine.username=Uživatelské jméno
@@ -171,37 +195,14 @@ _portal.ui.navigation.of=Z
 _portal.ui.navigation.page=Strana
 _portal.ui.navigation.results=Výsledky
 _portal.ui.notification.error=Chyba
-_portal.ui.notification.failure.search.saved=Chyba ukládání výsledků vyhledávání
 _portal.ui.notification.noitemsfound=Nic nenalezeno
 _portal.ui.reset.searchbox=Vymaž
 _portal.ui.viewingrelateditems=Příbuzný materiál
-_register-request.emailalreadyregistered=Tato e-mailová adresa je již zaregistrována
-_register.email.has.been.sent=E-mail byl zaslán na následující adresu
-_register.emailclicktoconfirm=Kliknutím na následující link potvrďte svou registraci
-_register.emailuse=K přihlášení na tuto stránku použij svou e-mailovou adresu a heslo
-_register.entervalidemail=Vložte platnou e-mailovou adresu, prosím
-_register.enteryouremail=Vlož svou e-mailovou adresu
-_register.errordetails=Údaje o chybě
-_register.finishregistration=Dokonči registraci
-_register.iagree=Souhlasím
-_register.linkexpired=Odkaz, který jsi použil/a k dokončení registrace je neplatný nebo mu vypršela platnost
-_register.mycodeofconduct=I understand that the Delving portal gives me the opportunity to create tags for any item I wish. I agree that I will not create any tags that could be considered libelous, harmful, threatening, unlawful, defamatory, infringing, abusive, inflammatory, harassing, pornographic, obscene, fraudulent, invasive of privacy or publicity rights, hateful, or racially, ethnically or otherwise objectionable. By clicking this box I agree to abide by this agreement, and understand that if I don't my login on the portal will be terminated.
-_register.mycodeofconductrequired=You must agree to our code of conduct to register for portal membership
-_register.password=Heslo
-_register.password.choose=Zvol si heslo
-_register.password.explain=Heslo musí obsahovat od 6 do 30 znaků
-_register.pick.user.name=Tvoje uživatelské jméno bude zobrazeno po přihlášení
-_register.please.follow.link=Otevři odkaz zaslaný tímto e-mailem a dokonči registraci
-_register.register=Zaregistrovat se
-_register.registration.failed=Při zpracování Vašeho požadavku na registraci se objevila chyba. Zkuste registraci znovu.
-_register.repeat.password=Zadej heslo znovu
-_register.requiredfield=Povinné pole
-_register.username.choose=Zvol si uživatelské jméno
-_register.username.explain=Tvoje uživatelské jméno bude zobrazeno po přihlášení
 _search.boolean.and=A
 _search.boolean.not=NE
 _search.boolean.or=NEBO
 _search.field.any.field=Jakékoli pole
+_search.field.country=Země
 _search.field.creator=Tvůrce
 _search.field.date=Datum
 _search.field.description=Popis
@@ -225,7 +226,6 @@ _unused.bosnia.and.herzegovina=Bosna a Hercegovina
 _unused.browse.through.time=Procházej časem
 _unused.contacts=Kontakty
 _unused.contributors=Přispěvatelé
-_unused.country=Země
 _unused.createaccount=Vytvoř účet
 _unused.emailwelcome=Vítej v Mých Europeanech
 _unused.enewsoptin=Informujte mě o novinkách týkajících se Euroepan
