--- a/portal/src/main/resources/i18n/messages_da.properties
+++ b/portal/src/main/resources/i18n/messages_da.properties
@@ -7,6 +7,7 @@ _action.alt.more.info=Klik for yderligere information
 _action.alt.next.page=Næste resultatliste
 _action.alt.previous.page=klik her for forrige resultatliste
 _action.alt.table.view=Tabeloversigt
+_action.chooselanguage=Vælg et sprog
 _action.personal.page=Mit Europeana
 _action.previous=Forrige
 _action.refine.your.search=Præcisér din søgning
@@ -95,10 +96,6 @@ _locale.sk=Slovakisk
 _locale.sl=Slovensk
 _locale.sr=Serbisk
 _locale.sv=Svensk
-_menu.i18n.chooselanguage=Vælg et sprog
-_messages.error.emailformaterror=Kontroller venligst at e-mailen er korrekt
-_messages.error.emailsendfailed=E-mail kunne ikke sendes
-_messages.notification.emailsent=E-mail afsendt
 _metadata.dc.contributor=Bidragsyder
 _metadata.dc.coverage=Dækker
 _metadata.dc.creator=Forfatter
@@ -153,6 +150,33 @@ _mine.saved.items=Gemte referencer
 _mine.saved.searches=Gemte søgninger
 _mine.saved.tags=Gemte nøgleord
 _mine.user.information=Brugerinformation
+_mine.user.notification.emailformaterror=Kontroller venligst at e-mailen er korrekt
+_mine.user.notification.emailsendfailed=E-mail kunne ikke sendes
+_mine.user.notification.emailsent=E-mail afsendt
+_mine.user.notification.failure.search.saved=Gem søgning mislykkedes
+_mine.user.register-request.emailalreadyregistered=Denne e-mail er allerede registreret
+_mine.user.register.email.has.been.sent=Der er afsendt en e-mail til adressen
+_mine.user.register.emailclicktoconfirm=Klik på linket for at bekræfte din registrering
+_mine.user.register.emailuse=Du skal bruge din e-mail sammen med dit password for at logge ind på sitet
+_mine.user.register.entervalidemail=Indtast venligst en gyldig e-mailadresse
+_mine.user.register.enteryouremail=Indtast din e-mail
+_mine.user.register.errordetails=Detaljer om fejlmelding
+_mine.user.register.finishregistration=Afslut registrering
+_mine.user.register.iagree=Jeg er indforstået med
+_mine.user.register.linkexpired=Det link du brugte til at afslutte din registrering er ugyldigt eller er udløbet
+_mine.user.register.mycodeofconduct=Jeg har forstået at My Personal Page giver mig mulighed for at tilføje tags (mine egne beskrivelser)til de værker jeg ønsker. Jeg er indforstået med at jeg ikke vil benytte tags, som kan betragtes som injurierende eller ærekrænkende, skadelige, truende, ulovlige, som krænkende ophavsrettigheder, fornærmende, provokerende, chikanerende, pornografiske, sjofle, svigagtige,krænkende private eller offentlige rettigheder, hadefulde eller diskriminerende mht race eller etnicitet eller på anden måde stødende. Ved at klikke i denne boks, bekræfter jeg at ville efterleve denne aftale og er indforstået med at brud på aftalen medfører at jeg udelukkes fra Mit Europeana.
+_mine.user.register.mycodeofconductrequired=For at tilmelde dig Mit Europeana skal du erklære dig enig i vore etiske regler
+_mine.user.register.password=Password
+_mine.user.register.password.choose=Vælg et password
+_mine.user.register.password.explain=Passwords skal være på mindst 6 og max. 30 bogstaver
+_mine.user.register.pick.user.name=Dit brugernavn bliver vist når du har logget på
+_mine.user.register.please.follow.link=Følg venligst linket i e-mailen og afslut registreringen
+_mine.user.register.register=Registrer
+_mine.user.register.registration.failed=En fejl opstod i forbindelse med din registrering. Prøv igen.
+_mine.user.register.repeat.password=Gentag password
+_mine.user.register.requiredfield=Feltet skal udfyldes
+_mine.user.register.username.choose=Vælg et brugernavn
+_mine.user.register.username.explain=Dit brugernavn vil blive vist når du er logget på
 _mine.user.registration.notification.succeed=Du er nu registreret
 _mine.user.validation.username.in.use=Vælg et andet brugernavn
 _mine.username=Brugernavn
@@ -171,37 +195,14 @@ _portal.ui.navigation.of=af
 _portal.ui.navigation.page=Side
 _portal.ui.navigation.results=Resultater
 _portal.ui.notification.error=Fejl
-_portal.ui.notification.failure.search.saved=Gem søgning mislykkedes
 _portal.ui.notification.noitemsfound=Der blev ikke fundet nogen referencer
 _portal.ui.reset.searchbox=Nulstil
 _portal.ui.viewingrelateditems=Se lignende referencer
-_register-request.emailalreadyregistered=Denne e-mail er allerede registreret
-_register.email.has.been.sent=Der er afsendt en e-mail til adressen
-_register.emailclicktoconfirm=Klik på linket for at bekræfte din registrering
-_register.emailuse=Du skal bruge din e-mail sammen med dit password for at logge ind på sitet
-_register.entervalidemail=Indtast venligst en gyldig e-mailadresse
-_register.enteryouremail=Indtast din e-mail
-_register.errordetails=Detaljer om fejlmelding
-_register.finishregistration=Afslut registrering
-_register.iagree=Jeg er indforstået med
-_register.linkexpired=Det link du brugte til at afslutte din registrering er ugyldigt eller er udløbet
-_register.mycodeofconduct=Jeg har forstået at My Personal Page giver mig mulighed for at tilføje tags (mine egne beskrivelser)til de værker jeg ønsker. Jeg er indforstået med at jeg ikke vil benytte tags, som kan betragtes som injurierende eller ærekrænkende, skadelige, truende, ulovlige, som krænkende ophavsrettigheder, fornærmende, provokerende, chikanerende, pornografiske, sjofle, svigagtige,krænkende private eller offentlige rettigheder, hadefulde eller diskriminerende mht race eller etnicitet eller på anden måde stødende. Ved at klikke i denne boks, bekræfter jeg at ville efterleve denne aftale og er indforstået med at brud på aftalen medfører at jeg udelukkes fra Mit Europeana.
-_register.mycodeofconductrequired=For at tilmelde dig Mit Europeana skal du erklære dig enig i vore etiske regler
-_register.password=Password
-_register.password.choose=Vælg et password
-_register.password.explain=Passwords skal være på mindst 6 og max. 30 bogstaver
-_register.pick.user.name=Dit brugernavn bliver vist når du har logget på
-_register.please.follow.link=Følg venligst linket i e-mailen og afslut registreringen
-_register.register=Registrer
-_register.registration.failed=En fejl opstod i forbindelse med din registrering. Prøv igen.
-_register.repeat.password=Gentag password
-_register.requiredfield=Feltet skal udfyldes
-_register.username.choose=Vælg et brugernavn
-_register.username.explain=Dit brugernavn vil blive vist når du er logget på
 _search.boolean.and=og
 _search.boolean.not=ikke
 _search.boolean.or=eller
 _search.field.any.field=Alle felter
+_search.field.country=Land
 _search.field.creator=Kunstner
 _search.field.date=Årstal
 _search.field.description=Beskrivelse
@@ -225,7 +226,6 @@ _unused.bosnia.and.herzegovina=Bosnien og Herzegovina
 _unused.browse.through.time=Vælg et årstal
 _unused.contacts=Kontakt
 _unused.contributors=Bidragydere
-_unused.country=Land
 _unused.createaccount=Opret en konto
 _unused.emailwelcome=Velkommen til MitEuropeana
 _unused.enewsoptin=Hold mig orienteret om nye tiltag i Europeana
