--- a/portal/src/main/resources/i18n/messages_de.properties
+++ b/portal/src/main/resources/i18n/messages_de.properties
@@ -7,6 +7,7 @@ _action.alt.more.info=Für weitere Informationen hier klicken
 _action.alt.next.page=Für die nächste Seite hier klicken
 _action.alt.previous.page=Für die vorige Seite hier klicken
 _action.alt.table.view=Miniaturansicht
+_action.chooselanguage=Wählen Sie eine Sprache
 _action.personal.page=My Personal Page
 _action.previous=Vorige
 _action.refine.your.search=Suche verfeinern
@@ -95,10 +96,6 @@ _locale.sk=slowakisch
 _locale.sl=slowenisch
 _locale.sr=serbisch
 _locale.sv=schwedisch
-_menu.i18n.chooselanguage=Wählen Sie eine Sprache
-_messages.error.emailformaterror=Bitte stellen Sie sicher, dass Ihre E-Mail korrekt formatiert ist und versuchen Sie es erneut.
-_messages.error.emailsendfailed=E-Mail konnte nicht gesendet werden
-_messages.notification.emailsent=E-Mail gesendet
 _metadata.dc.contributor=Weitere beteiligte Person
 _metadata.dc.coverage=Umfang
 _metadata.dc.creator=Autor
@@ -153,6 +150,33 @@ _mine.saved.items=Gespeicherte Objekte
 _mine.saved.searches=Gespeicherte Suchanfragen
 _mine.saved.tags=Gespeicherte Tags
 _mine.user.information=Nutzerinformation
+_mine.user.notification.emailformaterror=Bitte stellen Sie sicher, dass Ihre E-Mail korrekt formatiert ist und versuchen Sie es erneut.
+_mine.user.notification.emailsendfailed=E-Mail konnte nicht gesendet werden
+_mine.user.notification.emailsent=E-Mail gesendet
+_mine.user.notification.failure.search.saved=Speichern der Suche fehlgeschlagen
+_mine.user.register-request.emailalreadyregistered=Diese E-Mail-Adresse ist bereits registriert.
+_mine.user.register.email.has.been.sent=Eine E-Mail wurde an folgende Adresse gesendet
+_mine.user.register.emailclicktoconfirm=Bitte klicken Sie auf den folgenden Link, um Ihre Registrierung zu bestätigen
+_mine.user.register.emailuse=Nutzen Sie Ihre E-Mailadresse zusammen mit Ihrem Passwort, um sich einzuloggen
+_mine.user.register.entervalidemail=Bitte fügen Sie eine gültige E-Mail-Adresse ein
+_mine.user.register.enteryouremail=Tragen Sie Ihre E-Mailadresse ein
+_mine.user.register.errordetails=Fehlerdetails
+_mine.user.register.finishregistration=Registrierung abschließen
+_mine.user.register.iagree=Ich stimme zu
+_mine.user.register.linkexpired=Der Link, den Sie zur Vervollständigung Ihrer Registrierung verwendet haben, ist ungültig oder abgelaufen.
+_mine.user.register.mycodeofconduct=Ich habe verstanden, dass ich in My Personal Page die Möglichkeit habe, Tags für jedes Objekt zu erstellen. Ich verpflichte mich, dass ich keine Tags erstelle, die verleumderisch, schädlich, drohend, rechtswidrig, diffamierend, regelwidrig, missbräuchlich, aufrührerisch, belästigend, pornografisch, obszön oder betrügerisch sind, die in die Privatsphäre eingreifen oder die Öffentlichkeit angreifen, Hass, Rassismus oder sonstige ethnisch begründete Ablehnungen darstellen. Durch Anklicken stimme ich zu, mich an diese Regelungen zu halten und weiß, dass bei Verstoß meine Teilnahme an My Personal Page beendet wird.
+_mine.user.register.mycodeofconductrequired=Sie müssen unseren Verhaltensregeln zustimmen, um sich für My Personal Page registrieren zu können.
+_mine.user.register.password=Passwort
+_mine.user.register.password.choose=Wählen Sie ein Passwort
+_mine.user.register.password.explain=Passwörter müssen 6-30 Zeichen haben
+_mine.user.register.pick.user.name=Ihr Benutzername wird angezeigt, wenn Sie eingeloggt sind
+_mine.user.register.please.follow.link=Bitte folgen Sie dem Link in der E-Mail, um die Registrierung abzuschließen.
+_mine.user.register.register=Registrierung
+_mine.user.register.registration.failed=Bei der Bearbeitung Ihrer Registrierung ist ein Fehler aufgetreten. Bitte versuchen Sie es noch einmal
+_mine.user.register.repeat.password=Passwort wiederholen
+_mine.user.register.requiredfield=Dies ist ein obligatorisches Feld
+_mine.user.register.username.choose=Wählen Sie einen Benutzernamen
+_mine.user.register.username.explain=Ihr Benutzername wird angezeigt, wenn Sie eingeloggt sind
 _mine.user.registration.notification.succeed=Sie haben sich erfolgreich registriert.
 _mine.user.validation.username.in.use=ist schon vergeben. Bitte wählen Sie einen anderen Benutzernamen.
 _mine.username=Nutzername
@@ -171,37 +195,14 @@ _portal.ui.navigation.of=von
 _portal.ui.navigation.page=Seite
 _portal.ui.navigation.results=Ergebnisse
 _portal.ui.notification.error=Fehler
-_portal.ui.notification.failure.search.saved=Speichern der Suche fehlgeschlagen
 _portal.ui.notification.noitemsfound=Keine Objekte gefunden
 _portal.ui.reset.searchbox=Reset
 _portal.ui.viewingrelateditems=Sie betrachten ähnliche Objekte
-_register-request.emailalreadyregistered=Diese E-Mail-Adresse ist bereits registriert.
-_register.email.has.been.sent=Eine E-Mail wurde an folgende Adresse gesendet
-_register.emailclicktoconfirm=Bitte klicken Sie auf den folgenden Link, um Ihre Registrierung zu bestätigen
-_register.emailuse=Nutzen Sie Ihre E-Mailadresse zusammen mit Ihrem Passwort, um sich einzuloggen
-_register.entervalidemail=Bitte fügen Sie eine gültige E-Mail-Adresse ein
-_register.enteryouremail=Tragen Sie Ihre E-Mailadresse ein
-_register.errordetails=Fehlerdetails
-_register.finishregistration=Registrierung abschließen
-_register.iagree=Ich stimme zu
-_register.linkexpired=Der Link, den Sie zur Vervollständigung Ihrer Registrierung verwendet haben, ist ungültig oder abgelaufen.
-_register.mycodeofconduct=Ich habe verstanden, dass ich in My Personal Page die Möglichkeit habe, Tags für jedes Objekt zu erstellen. Ich verpflichte mich, dass ich keine Tags erstelle, die verleumderisch, schädlich, drohend, rechtswidrig, diffamierend, regelwidrig, missbräuchlich, aufrührerisch, belästigend, pornografisch, obszön oder betrügerisch sind, die in die Privatsphäre eingreifen oder die Öffentlichkeit angreifen, Hass, Rassismus oder sonstige ethnisch begründete Ablehnungen darstellen. Durch Anklicken stimme ich zu, mich an diese Regelungen zu halten und weiß, dass bei Verstoß meine Teilnahme an My Personal Page beendet wird.
-_register.mycodeofconductrequired=Sie müssen unseren Verhaltensregeln zustimmen, um sich für My Personal Page registrieren zu können.
-_register.password=Passwort
-_register.password.choose=Wählen Sie ein Passwort
-_register.password.explain=Passwörter müssen 6-30 Zeichen haben
-_register.pick.user.name=Ihr Benutzername wird angezeigt, wenn Sie eingeloggt sind
-_register.please.follow.link=Bitte folgen Sie dem Link in der E-Mail, um die Registrierung abzuschließen.
-_register.register=Registrierung
-_register.registration.failed=Bei der Bearbeitung Ihrer Registrierung ist ein Fehler aufgetreten. Bitte versuchen Sie es noch einmal
-_register.repeat.password=Passwort wiederholen
-_register.requiredfield=Dies ist ein obligatorisches Feld
-_register.username.choose=Wählen Sie einen Benutzernamen
-_register.username.explain=Ihr Benutzername wird angezeigt, wenn Sie eingeloggt sind
 _search.boolean.and=und
 _search.boolean.not=nicht
 _search.boolean.or=oder
 _search.field.any.field=Alle Felder
+_search.field.country=Land
 _search.field.creator=Urheber
 _search.field.date=Datum
 _search.field.description=Beschreibung
@@ -225,7 +226,6 @@ _unused.bosnia.and.herzegovina=Bosnien und Herzegowina
 _unused.browse.through.time=Durch die Zeit browsen
 _unused.contacts=Kontakt
 _unused.contributors=Beiträger
-_unused.country=Land
 _unused.createaccount=Ein Konto anlegen
 _unused.emailwelcome=Willkommen zu My Personal Page
 _unused.enewsoptin=Bitte halten Sie mich über Neuigkeiten der Europeana auf dem Laufenden.
