--- a/portal/src/main/resources/i18n/messages_el.properties
+++ b/portal/src/main/resources/i18n/messages_el.properties
@@ -7,6 +7,7 @@ _action.alt.more.info=Πατήστε εδώ για περισσότερες πλ
 _action.alt.next.page=πατήστε εδώ για την επόμενη σελίδα αποτελεσμάτων
 _action.alt.previous.page=πατήστε εδώ για την προηγούμενη σελίδα αποτελεσμάτων
 _action.alt.table.view=Εμφάνιση πίνακα
+_action.chooselanguage=Επιλέξτε γλώσσα
 _action.personal.page=Η Europeana μου
 _action.previous=Προηγούμενο
 _action.refine.your.search=Επαναπροσδιορίστε την έρευνά σας
@@ -95,10 +96,6 @@ _locale.sk=Σλοβακικά (slo)
 _locale.sl=Σλοβενικά (slv)
 _locale.sr=Σερβικά (scc)
 _locale.sv=Σουηδικά (sve/swe)
-_menu.i18n.chooselanguage=Επιλέξτε γλώσσα
-_messages.error.emailformaterror=Παρακαλούμε να βεβαιωθείτε ότι η διεύθυνση ηλ-ταχυδρομείου σας έχει μορφοποιηθεί σωστά και προσπαθήστε ξανά
-_messages.error.emailsendfailed=Το ηλ-ταχυδρομείο δεν μπορούσε να αποσταλεί
-_messages.notification.emailsent=Το ηλ-ταχυδρομείο απεστάλη
 _metadata.dc.contributor=Συνεργαζόμενος φορέας
 _metadata.dc.coverage=Κάλυψη
 _metadata.dc.creator=Συγγραφέας
@@ -153,6 +150,33 @@ _mine.saved.items=Αποθηκευμένα τεκμήρια
 _mine.saved.searches=Αποθηκευμένες έρευνες
 _mine.saved.tags=Αποθηκευμένες ετικέτες
 _mine.user.information=Πληροφορίες για τον χρήστη
+_mine.user.notification.emailformaterror=Παρακαλούμε να βεβαιωθείτε ότι η διεύθυνση ηλ-ταχυδρομείου σας έχει μορφοποιηθεί σωστά και προσπαθήστε ξανά
+_mine.user.notification.emailsendfailed=Το ηλ-ταχυδρομείο δεν μπορούσε να αποσταλεί
+_mine.user.notification.emailsent=Το ηλ-ταχυδρομείο απεστάλη
+_mine.user.notification.failure.search.saved=Αποτυχία αποθήκευσης της έρευνας
+_mine.user.register-request.emailalreadyregistered=Αυτή η διεύθυνση ηλ-ταχυδρομείου έχει ήδη καταγραφτεί
+_mine.user.register.email.has.been.sent=Ένα μήνυμα ηλ-ταχυδρομείου έχει αποσταλεί στην ακόλουθη διεύθυνση
+_mine.user.register.emailclicktoconfirm=Παρακαλούμε πατήστε στον ακόλουθο σύνδεσμο για να επιβεβαιώσετε την εγγραφή σας
+_mine.user.register.emailuse=Θα χρησιμοποιήσετε τη διεύθυνση ηλ-ταχυδρομείου σας μαζί με τον κωδικό πρόσβασης για να συνδεθείτε με το δικτυακό τόπο
+_mine.user.register.entervalidemail=Παρακαλούμε εισάγετε μια έγκυρη διεύθυνση ηλ-ταχυδρομείου
+_mine.user.register.enteryouremail=Εισαγωγή διεύθυνσης ηλ-ταχυδρομείου
+_mine.user.register.errordetails=Λεπτομέρειες σφάλματος
+_mine.user.register.finishregistration=Τέλος εγγραφής
+_mine.user.register.iagree=Συμφωνώ
+_mine.user.register.linkexpired=Ο σύνδεσμος που χρησιμοποιήσατε για να ολοκληρώσετε την εγγραφή είναι άκυρος ή έχει λήξει.
+_mine.user.register.mycodeofconduct=Κατανοώ ότι η Europeana μου, μού δίνει την ευκαιρία να δημιουργήσω ετικέτες για όποιο τεκμήριο επιθυμώ. Δεσμεύομαι ότι δεν θα δημιουργήσω ετικέτες που μπορούν να θεωρηθούν δυσφημιστικές, επιζήμιες, απειλητικές, παράνομες, συκοφαντικές, παραβατικές, προσβλητικές, εμπρηστικές, παρενοχλητικές, πορνογραφικές, ανήθικες, δόλιες, παρεμβατικές στα δικαιώματα της ιδιωτικής μου ζωής ή δημοσιότητας, που προκαλούν μίσος ή ρατσισμό, εθνικά ή με άλλο τρόπο αποδοκιμαστέες. Πατώντας αυτό το τετραγωνίδιο δεσμεύομαι να τηρήσω αυτή τη συμφωνία και κατανοώ ότι αν δεν το κάνω, τα δικαιώματά μου ως μέλος στη Europeana μου θα τερματιστούν.
+_mine.user.register.mycodeofconductrequired=Πρέπει να συμφωνήσετε με τον κώδικα συμπεριφοράς μας για να εγγραφείτε στη Europeana μου
+_mine.user.register.password=Κωδικός πρόσβασης
+_mine.user.register.password.choose=Επιλέξτε κωδικό πρόσβασης
+_mine.user.register.password.explain=Οι κωδικοί πρόσβασης πρέπει να έχουν μήκος 6-30 χαρακτήρων
+_mine.user.register.pick.user.name=Το όνομα χρήστη θα εμφανιστεί όταν συνδεθείτε
+_mine.user.register.please.follow.link=Παρακαλούμε να ακολουθήσετε το σύνδεσμο που δίδεται στο ηλ-ταχυδρομείο και ολοκληρώστε τη διαδικασία εγγραφής
+_mine.user.register.register=Εγγραφή
+_mine.user.register.registration.failed=Ένα σφάλμα εμφανίστηκε κατά την προσπάθεια επεξεργασίας της εγγραφής σας. Παρακαλούμε προσπαθήστε ξανά
+_mine.user.register.repeat.password=Επαναλάβετε τον κωδικό πρόσβασης
+_mine.user.register.requiredfield=Αυτό είναι απαιτούμενο πεδίο
+_mine.user.register.username.choose=Επιλέξτε ένα όνομα χρήστη
+_mine.user.register.username.explain=Το όνομα χρήστη θα εμφανιστεί όταν συνδεθείτε
 _mine.user.registration.notification.succeed=Η εγγραφή σας ήταν επιτυχής
 _mine.user.validation.username.in.use=χρησιμοποιείται. Παρακαλούμε να επιλέξετε άλλο όνομα χρήστη
 _mine.username=Όνομα χρήστη
@@ -171,37 +195,14 @@ _portal.ui.navigation.of=του
 _portal.ui.navigation.page=Σελίδα
 _portal.ui.navigation.results=Αποτελέσματα
 _portal.ui.notification.error=Σφάλμα
-_portal.ui.notification.failure.search.saved=Αποτυχία αποθήκευσης της έρευνας
 _portal.ui.notification.noitemsfound=Δεν βρέθηκαν τεκμήρια
 _portal.ui.reset.searchbox=Επανεκκίνηση
 _portal.ui.viewingrelateditems=Βλέπετε σχετικά τεκμήρια
-_register-request.emailalreadyregistered=Αυτή η διεύθυνση ηλ-ταχυδρομείου έχει ήδη καταγραφτεί
-_register.email.has.been.sent=Ένα μήνυμα ηλ-ταχυδρομείου έχει αποσταλεί στην ακόλουθη διεύθυνση
-_register.emailclicktoconfirm=Παρακαλούμε πατήστε στον ακόλουθο σύνδεσμο για να επιβεβαιώσετε την εγγραφή σας
-_register.emailuse=Θα χρησιμοποιήσετε τη διεύθυνση ηλ-ταχυδρομείου σας μαζί με τον κωδικό πρόσβασης για να συνδεθείτε με το δικτυακό τόπο
-_register.entervalidemail=Παρακαλούμε εισάγετε μια έγκυρη διεύθυνση ηλ-ταχυδρομείου
-_register.enteryouremail=Εισαγωγή διεύθυνσης ηλ-ταχυδρομείου
-_register.errordetails=Λεπτομέρειες σφάλματος
-_register.finishregistration=Τέλος εγγραφής
-_register.iagree=Συμφωνώ
-_register.linkexpired=Ο σύνδεσμος που χρησιμοποιήσατε για να ολοκληρώσετε την εγγραφή είναι άκυρος ή έχει λήξει.
-_register.mycodeofconduct=Κατανοώ ότι η Europeana μου, μού δίνει την ευκαιρία να δημιουργήσω ετικέτες για όποιο τεκμήριο επιθυμώ. Δεσμεύομαι ότι δεν θα δημιουργήσω ετικέτες που μπορούν να θεωρηθούν δυσφημιστικές, επιζήμιες, απειλητικές, παράνομες, συκοφαντικές, παραβατικές, προσβλητικές, εμπρηστικές, παρενοχλητικές, πορνογραφικές, ανήθικες, δόλιες, παρεμβατικές στα δικαιώματα της ιδιωτικής μου ζωής ή δημοσιότητας, που προκαλούν μίσος ή ρατσισμό, εθνικά ή με άλλο τρόπο αποδοκιμαστέες. Πατώντας αυτό το τετραγωνίδιο δεσμεύομαι να τηρήσω αυτή τη συμφωνία και κατανοώ ότι αν δεν το κάνω, τα δικαιώματά μου ως μέλος στη Europeana μου θα τερματιστούν.
-_register.mycodeofconductrequired=Πρέπει να συμφωνήσετε με τον κώδικα συμπεριφοράς μας για να εγγραφείτε στη Europeana μου
-_register.password=Κωδικός πρόσβασης
-_register.password.choose=Επιλέξτε κωδικό πρόσβασης
-_register.password.explain=Οι κωδικοί πρόσβασης πρέπει να έχουν μήκος 6-30 χαρακτήρων
-_register.pick.user.name=Το όνομα χρήστη θα εμφανιστεί όταν συνδεθείτε
-_register.please.follow.link=Παρακαλούμε να ακολουθήσετε το σύνδεσμο που δίδεται στο ηλ-ταχυδρομείο και ολοκληρώστε τη διαδικασία εγγραφής
-_register.register=Εγγραφή
-_register.registration.failed=Ένα σφάλμα εμφανίστηκε κατά την προσπάθεια επεξεργασίας της εγγραφής σας. Παρακαλούμε προσπαθήστε ξανά
-_register.repeat.password=Επαναλάβετε τον κωδικό πρόσβασης
-_register.requiredfield=Αυτό είναι απαιτούμενο πεδίο
-_register.username.choose=Επιλέξτε ένα όνομα χρήστη
-_register.username.explain=Το όνομα χρήστη θα εμφανιστεί όταν συνδεθείτε
 _search.boolean.and=και
 _search.boolean.not=όχι
 _search.boolean.or=ή
 _search.field.any.field=Οποιοδήποτε πεδίο
+_search.field.country=Χώρα
 _search.field.creator=Δημιουργός
 _search.field.date=Ημερομηνία
 _search.field.description=Περιγραφή
@@ -225,7 +226,6 @@ _unused.bosnia.and.herzegovina=Βοσνία και Ερζεγοβίνη
 _unused.browse.through.time=Χρονολογική φυλλομέτρηση
 _unused.contacts=Επικοινωνία
 _unused.contributors=Συνεργαζόμενοι φορείς
-_unused.country=Χώρα
 _unused.createaccount=Δημιουργία λογαριασμού
 _unused.emailwelcome=Καλώς ορίσατε στη Europeana
 _unused.enewsoptin=Κρατήστε με ενήμερο/η για τις νέες εξελίξεις της Europeana
