--- a/portal/src/main/resources/i18n/messages_es.properties
+++ b/portal/src/main/resources/i18n/messages_es.properties
@@ -7,6 +7,7 @@ _action.alt.more.info=Pinche aquí para más información
 _action.alt.next.page=pinche aquí para ir a los resultados de la página siguiente
 _action.alt.previous.page=pinche aquí para volver a los resultados de la página anterior
 _action.alt.table.view=Visualización en Tabla
+_action.chooselanguage=Seleccione un idioma
 _action.personal.page=Mi Europeana
 _action.previous=Anterior
 _action.refine.your.search=Refine su búsqueda
@@ -95,10 +96,6 @@ _locale.sk=Eslovaco (slo)
 _locale.sl=Esloveno (slv)
 _locale.sr=Serbio (scc)
 _locale.sv=Sueco (sve/swe)
-_menu.i18n.chooselanguage=Seleccione un idioma
-_messages.error.emailformaterror=Por favor, asegúrese que su dirección de correo es correcta y vuélvalo a intentar
-_messages.error.emailsendfailed=El correo no pudo ser enviado
-_messages.notification.emailsent=Correo enviado
 _metadata.dc.contributor=Colaborador
 _metadata.dc.coverage=Cobertura
 _metadata.dc.creator=Autor
@@ -153,6 +150,33 @@ _mine.saved.items=Elementos guardados
 _mine.saved.searches=Búsquedas guardadas
 _mine.saved.tags=Etiquetas guardadas
 _mine.user.information=Información de usuario
+_mine.user.notification.emailformaterror=Por favor, asegúrese que su dirección de correo es correcta y vuélvalo a intentar
+_mine.user.notification.emailsendfailed=El correo no pudo ser enviado
+_mine.user.notification.emailsent=Correo enviado
+_mine.user.notification.failure.search.saved=Fallo en la grabación de la búsqueda
+_mine.user.register-request.emailalreadyregistered=Esta dirección de correo ya está registrada
+_mine.user.register.email.has.been.sent=Se ha enviado un correo electrónico a la siguiente dirección
+_mine.user.register.emailclicktoconfirm=Por favor, pinche en el siguiente enlace para confirmar su registro
+_mine.user.register.emailuse=Necesitará su dirección de correo electrónico y su contraseña para entrar en el sitio
+_mine.user.register.entervalidemail=Por favor introduzca una dirección de email válida
+_mine.user.register.enteryouremail=Introduzca su dirección de correo electrónico
+_mine.user.register.errordetails=Detalles de error
+_mine.user.register.finishregistration=Finalizar registro
+_mine.user.register.iagree=Acepto
+_mine.user.register.linkexpired=El enlace que utilizó para completar el registro no es válido o ha caducado
+_mine.user.register.mycodeofconduct=Entiendo que Mi Europeana me ofrece la oportunidad de crear etiquetas para cualquier elemento. Me comprometo a no crear ninguna etiqueta que pueda considerarse calumniosa, perjudicial, amenazante, ilícita, difamatoria, infractora, abusiva, incendiaria, molesta, pornográfica, obscena, fraudulenta, invasiva de la privacidad o los derechos publicitarios, odiosa o cuestionable desde un punto de vista racial u étnico. Seleccionando esta casilla acepto cumplir con este acuerdo y entiendo que si no lo hago mi pertenencia a Mi Europeana se considerará finalizada.
+_mine.user.register.mycodeofconductrequired=Debe aceptar nuestro código de conducta para registrarse en Mi Europeana
+_mine.user.register.password=Contraseña
+_mine.user.register.password.choose=Elija una contraseña
+_mine.user.register.password.explain=La contraseña debe tener entre 6 y 30 caracteres
+_mine.user.register.pick.user.name=Su nombre de usuario aparecerá cuando
+_mine.user.register.please.follow.link=Por favor, pinche en el enlace enviado a su correo para finalizar con el proceso de registro
+_mine.user.register.register=Registrarse
+_mine.user.register.registration.failed=Ha ocurrido un error durante el proceso de registro. Por favor, inténtelo de nuevo
+_mine.user.register.repeat.password=Repita la contraseña
+_mine.user.register.requiredfield=Este es un campo obligatorio
+_mine.user.register.username.choose=Elija un nombre de usuario
+_mine.user.register.username.explain=Su nombre de usuario se mostrará cuando esté conectado
 _mine.user.registration.notification.succeed=Se ha registrado corecctamente
 _mine.user.validation.username.in.use=ya está en uso. Por favor, elija otro nombre de usuario
 _mine.username=Nombre de usuario
@@ -171,37 +195,14 @@ _portal.ui.navigation.of=de
 _portal.ui.navigation.page=Página
 _portal.ui.navigation.results=Resultados
 _portal.ui.notification.error=Error
-_portal.ui.notification.failure.search.saved=Fallo en la grabación de la búsqueda
 _portal.ui.notification.noitemsfound=No se encuentran resultados
 _portal.ui.reset.searchbox=reiniciar
 _portal.ui.viewingrelateditems=Se muestran los elementos relacionados
-_register-request.emailalreadyregistered=Esta dirección de correo ya está registrada
-_register.email.has.been.sent=Se ha enviado un correo electrónico a la siguiente dirección
-_register.emailclicktoconfirm=Por favor, pinche en el siguiente enlace para confirmar su registro
-_register.emailuse=Necesitará su dirección de correo electrónico y su contraseña para entrar en el sitio
-_register.entervalidemail=Por favor introduzca una dirección de email válida
-_register.enteryouremail=Introduzca su dirección de correo electrónico
-_register.errordetails=Detalles de error
-_register.finishregistration=Finalizar registro
-_register.iagree=Acepto
-_register.linkexpired=El enlace que utilizó para completar el registro no es válido o ha caducado
-_register.mycodeofconduct=Entiendo que Mi Europeana me ofrece la oportunidad de crear etiquetas para cualquier elemento. Me comprometo a no crear ninguna etiqueta que pueda considerarse calumniosa, perjudicial, amenazante, ilícita, difamatoria, infractora, abusiva, incendiaria, molesta, pornográfica, obscena, fraudulenta, invasiva de la privacidad o los derechos publicitarios, odiosa o cuestionable desde un punto de vista racial u étnico. Seleccionando esta casilla acepto cumplir con este acuerdo y entiendo que si no lo hago mi pertenencia a Mi Europeana se considerará finalizada.
-_register.mycodeofconductrequired=Debe aceptar nuestro código de conducta para registrarse en Mi Europeana
-_register.password=Contraseña
-_register.password.choose=Elija una contraseña
-_register.password.explain=La contraseña debe tener entre 6 y 30 caracteres
-_register.pick.user.name=Su nombre de usuario aparecerá cuando
-_register.please.follow.link=Por favor, pinche en el enlace enviado a su correo para finalizar con el proceso de registro
-_register.register=Registrarse
-_register.registration.failed=Ha ocurrido un error durante el proceso de registro. Por favor, inténtelo de nuevo
-_register.repeat.password=Repita la contraseña
-_register.requiredfield=Este es un campo obligatorio
-_register.username.choose=Elija un nombre de usuario
-_register.username.explain=Su nombre de usuario se mostrará cuando esté conectado
 _search.boolean.and=Y
 _search.boolean.not=No
 _search.boolean.or=O
 _search.field.any.field=Cualquier campo
+_search.field.country=País
 _search.field.creator=Creador
 _search.field.date=Fecha
 _search.field.description=Descripción
@@ -225,7 +226,6 @@ _unused.bosnia.and.herzegovina=Bosnia Herzegovina
 _unused.browse.through.time=Navegue a través del tiempo
 _unused.contacts=Contactos
 _unused.contributors=colaboradores
-_unused.country=País
 _unused.createaccount=Crear una cuenta
 _unused.emailwelcome=Bienvenido/a a MiEuropeana
 _unused.enewsoptin=Manténganme informado/a de todas las novedades de Europeana.
