--- a/portal/src/main/resources/i18n/messages_et.properties
+++ b/portal/src/main/resources/i18n/messages_et.properties
@@ -7,6 +7,7 @@ _action.alt.more.info=Rohkem teavet
 _action.alt.next.page=Järgmine tulemuste lehekülg
 _action.alt.previous.page=Eelmine tulemuste lehekülg
 _action.alt.table.view=Vaata tabelina
+_action.chooselanguage=Vali keel
 _action.personal.page=Minu Europeana
 _action.previous=Eelmine
 _action.refine.your.search=Täpsusta päringut
@@ -95,10 +96,6 @@ _locale.sk=slovaki (slo)
 _locale.sl=sloveeni (slv)
 _locale.sr=serbia (scc)
 _locale.sv=rootsi (sve/swe)
-_menu.i18n.chooselanguage=Vali keel
-_messages.error.emailformaterror=Palun kontrolli e-posti aadressi õigsust ja proovi uuesti
-_messages.error.emailsendfailed=E-kirja saatmine ebaõnnestus
-_messages.notification.emailsent=E-kiri saadetud
 _metadata.dc.contributor=Kaasautor
 _metadata.dc.coverage=Hõlme
 _metadata.dc.creator=Autor
@@ -153,6 +150,33 @@ _mine.saved.items=Salvestatud objektid
 _mine.saved.searches=Salvestatud päringud
 _mine.saved.tags=Salvestatud märksõnad
 _mine.user.information=Kasutajaandmed
+_mine.user.notification.emailformaterror=Palun kontrolli e-posti aadressi õigsust ja proovi uuesti
+_mine.user.notification.emailsendfailed=E-kirja saatmine ebaõnnestus
+_mine.user.notification.emailsent=E-kiri saadetud
+_mine.user.notification.failure.search.saved=Päringu salvestamine ebaõnnestus
+_mine.user.register-request.emailalreadyregistered=See e-posti aadress on juba registreeritud
+_mine.user.register.email.has.been.sent=E-kiri on saadetud järgmisele aadressile
+_mine.user.register.emailclicktoconfirm=Registreerimise kinnitamiseks klõpsa järgmisele lingile
+_mine.user.register.emailuse=E-posti aadress ja salasõna on vajalikud sellele veebilehele sisselogimiseks
+_mine.user.register.entervalidemail=Palun sisestage korrektne e-posti aadrss
+_mine.user.register.enteryouremail=Sisesta e-posti aadress
+_mine.user.register.errordetails=Veaandmed
+_mine.user.register.finishregistration=Registreerumise lõpetamine
+_mine.user.register.iagree=Nõustun
+_mine.user.register.linkexpired=Registreerumise lõpuleviimiseks kasutatud link on vigane või aegunud
+_mine.user.register.mycodeofconduct=Ma olen teadlik, et Minu Europeana annab mulle võimalusi lisada kõigile objektidele märksõnu. Ma luban käesolevaga, et ei lisa märksõnu, mida võib tõlgendada laimavate, kahjulike, ähvardavate, ebaseaduslike, solvavate, ahistavate, pornograafiliste, labaste, rahvuslikku või rassivaenu õhutavate, kellegi privaatsust ja muid õigusi rikkuvate või muul viisil ebakohastena. Sellele nupule klõpsates kinnitan ma oma nõustumist eelnevalt öelduga. Nende reeglite eiramine toob kaasa Minu Europeana kasutajatunnuse kustutamise.
+_mine.user.register.mycodeofconductrequired=Minu Europeanaga liitumiseks peate nõustuma meie sisekorra eeskirjadega
+_mine.user.register.password=Salasõna
+_mine.user.register.password.choose=Valige salasõna
+_mine.user.register.password.explain=Salasõna pikkus peab olema 6-30 tähemärki
+_mine.user.register.pick.user.name=Kasutajanime näidatakse pärast sisselogimist
+_mine.user.register.please.follow.link=Palun klõpsa e-kirjas antud lingile ja vii registreerimine lõpule
+_mine.user.register.register=Registreeru
+_mine.user.register.registration.failed=Sinu registreeringu töötlemisel tekkis viga. Palun proovi uuesti
+_mine.user.register.repeat.password=Korrake salasõna
+_mine.user.register.requiredfield=Selle välja täitmine on kohustuslik
+_mine.user.register.username.choose=Vali kasutajanimi
+_mine.user.register.username.explain=Kui olete sisse loginud, näidatakse Teie kasutajanime
 _mine.user.registration.notification.succeed=Registreerumine õnnestus
 _mine.user.validation.username.in.use=on juba kasutusel. Palun valige teistsugune kasutajanimi
 _mine.username=Kasutajanimi
@@ -171,37 +195,14 @@ _portal.ui.navigation.of=of
 _portal.ui.navigation.page=Lehekülg
 _portal.ui.navigation.results=Tulemused
 _portal.ui.notification.error=Viga
-_portal.ui.notification.failure.search.saved=Päringu salvestamine ebaõnnestus
 _portal.ui.notification.noitemsfound=Tulemusi ei leitud
 _portal.ui.reset.searchbox=Alusta uuesti
 _portal.ui.viewingrelateditems=Seotud objektide vaatamine
-_register-request.emailalreadyregistered=See e-posti aadress on juba registreeritud
-_register.email.has.been.sent=E-kiri on saadetud järgmisele aadressile
-_register.emailclicktoconfirm=Registreerimise kinnitamiseks klõpsa järgmisele lingile
-_register.emailuse=E-posti aadress ja salasõna on vajalikud sellele veebilehele sisselogimiseks
-_register.entervalidemail=Palun sisestage korrektne e-posti aadrss
-_register.enteryouremail=Sisesta e-posti aadress
-_register.errordetails=Veaandmed
-_register.finishregistration=Registreerumise lõpetamine
-_register.iagree=Nõustun
-_register.linkexpired=Registreerumise lõpuleviimiseks kasutatud link on vigane või aegunud
-_register.mycodeofconduct=Ma olen teadlik, et Minu Europeana annab mulle võimalusi lisada kõigile objektidele märksõnu. Ma luban käesolevaga, et ei lisa märksõnu, mida võib tõlgendada laimavate, kahjulike, ähvardavate, ebaseaduslike, solvavate, ahistavate, pornograafiliste, labaste, rahvuslikku või rassivaenu õhutavate, kellegi privaatsust ja muid õigusi rikkuvate või muul viisil ebakohastena. Sellele nupule klõpsates kinnitan ma oma nõustumist eelnevalt öelduga. Nende reeglite eiramine toob kaasa Minu Europeana kasutajatunnuse kustutamise.
-_register.mycodeofconductrequired=Minu Europeanaga liitumiseks peate nõustuma meie sisekorra eeskirjadega
-_register.password=Salasõna
-_register.password.choose=Valige salasõna
-_register.password.explain=Salasõna pikkus peab olema 6-30 tähemärki
-_register.pick.user.name=Kasutajanime näidatakse pärast sisselogimist
-_register.please.follow.link=Palun klõpsa e-kirjas antud lingile ja vii registreerimine lõpule
-_register.register=Registreeru
-_register.registration.failed=Sinu registreeringu töötlemisel tekkis viga. Palun proovi uuesti
-_register.repeat.password=Korrake salasõna
-_register.requiredfield=Selle välja täitmine on kohustuslik
-_register.username.choose=Vali kasutajanimi
-_register.username.explain=Kui olete sisse loginud, näidatakse Teie kasutajanime
 _search.boolean.and=ja
 _search.boolean.not=mitte
 _search.boolean.or=või
 _search.field.any.field=Mistahes väli
+_search.field.country=Riik
 _search.field.creator=Autor
 _search.field.date=Kuupäev
 _search.field.description=Kirjeldus
@@ -225,7 +226,6 @@ _unused.bosnia.and.herzegovina=Bosnia ja Hertsegoviina
 _unused.browse.through.time=Sirvimine läbi aja
 _unused.contacts=Kontaktandmed
 _unused.contributors=Vahendajad
-_unused.country=Riik
 _unused.createaccount=Kasutajakonto loomine
 _unused.emailwelcome=Tere tulemast Minu Europeanasse
 _unused.enewsoptin=Palun mind teavitada Europeana edasiarendustest
