--- a/portal/src/main/resources/i18n/messages_fi.properties
+++ b/portal/src/main/resources/i18n/messages_fi.properties
@@ -7,6 +7,7 @@ _action.alt.more.info=Lisätietoja saat klikkaamalla tästä
 _action.alt.next.page=Seuraavan sivun tulokset saat näkyviin klikkaamalla tästä
 _action.alt.previous.page=Edellisen sivun tulokset saat näkyviin klikkaamalla tästä
 _action.alt.table.view=Taulukkonäkymä
+_action.chooselanguage=Valitse kieli
 _action.personal.page=Minun Europeanani
 _action.previous=Edellinen
 _action.refine.your.search=Tarkenna hakua
@@ -95,10 +96,6 @@ _locale.sk=slovakia (slo)
 _locale.sl=slovenia (slv)
 _locale.sr=serbia (scc)
 _locale.sv=ruotsi (sve/swe)
-_menu.i18n.chooselanguage=Valitse kieli
-_messages.error.emailformaterror=Tarkista että sähköpostisi tiedot ovat oikein ja yritä uudelleen
-_messages.error.emailsendfailed=Sähköpostin lähettäminen epäonnistui
-_messages.notification.emailsent=Sähköposti on lähetetty
 _metadata.dc.contributor=Muu tekijä
 _metadata.dc.coverage=Kattavuus
 _metadata.dc.creator=Tekijä
@@ -153,6 +150,33 @@ _mine.saved.items=Tallennetut kohteet
 _mine.saved.searches=Tallennetut haut
 _mine.saved.tags=Tallennetut tagit
 _mine.user.information=Tiedot käyttäjästä
+_mine.user.notification.emailformaterror=Tarkista että sähköpostisi tiedot ovat oikein ja yritä uudelleen
+_mine.user.notification.emailsendfailed=Sähköpostin lähettäminen epäonnistui
+_mine.user.notification.emailsent=Sähköposti on lähetetty
+_mine.user.notification.failure.search.saved=Haun tallentaminen epäonnistui
+_mine.user.register-request.emailalreadyregistered=Tämä sähköposti on jo rekisteröity
+_mine.user.register.email.has.been.sent=Sähköposti on lähetetty osoitteeseen
+_mine.user.register.emailclicktoconfirm=Vahvista rekisteröitymisesi klikkaamalla linkkiä
+_mine.user.register.emailuse=Kirjaudu käyttämällä sähköpostiosoitetta ja salasanaa
+_mine.user.register.entervalidemail=Lisää tähän voimassa oleva sähköpostiosoite
+_mine.user.register.enteryouremail=Syötä sähköpostiosoitteesi
+_mine.user.register.errordetails=Virheen tiedot
+_mine.user.register.finishregistration=Hyväksy rekisteröityminen
+_mine.user.register.iagree=Hyväksyn
+_mine.user.register.linkexpired=Rekisteröitymiseen käyttämäsi linkki on virheellinen tai vanhentunut.
+_mine.user.register.mycodeofconduct=Ymmärrän, että "Minun Europeanani" antaa mahdollisuuden luoda tageja mistä tahansa aiheesta. Sitoudun siihen, että en luo tageja, joita voi pitää herjaavina, vahingollisina, uhkaavina, lainvastaisina, loukkaavina, kajoavina, solvaavina, yllyttävinä, häiritsevinä, pornografisina, rivoina, valheellisina, yksityisiä tai julkisia oikeuksia loukkaavina, vastenmielisinä tai rotuun tai etniseen alkuperään liittyvistä syistä ei-toivottuina. Klikkaamalla tätä laatikkoa sitoudun tähän sopimukseen ja ymmärrän, että jos en niin tee, niin jäsenyyteni "Minun Europeanaani" lakkautetaan.
+_mine.user.register.mycodeofconductrequired=Sinun on hyväksyttävä menettelyohjeemme rekisteröityäksesi ”Minun Europeanaani”
+_mine.user.register.password=Salasana
+_mine.user.register.password.choose=Valitse salasana
+_mine.user.register.password.explain=Salasanan tulee olla 6 - 30 merkkiä pitkä
+_mine.user.register.pick.user.name=Käyttäjätunnus tulee näkyviin kun olet kirjautunut sisään
+_mine.user.register.please.follow.link=Rekisteröidy sähköpostissa olevan linkin kautta
+_mine.user.register.register=Rekisteröityminen
+_mine.user.register.registration.failed=Rekisteröitymisesi käsittelyssä on tapahtunut virhe. Yritä uudelleen
+_mine.user.register.repeat.password=Toista salasana
+_mine.user.register.requiredfield=Tämä on pakollinen kenttä
+_mine.user.register.username.choose=Valitse käyttäjätunnus
+_mine.user.register.username.explain=Käyttäjätunnus tulee näkyviin kun olet kirjautunut sisään
 _mine.user.registration.notification.succeed=Rekisteröitymisesi onnistui
 _mine.user.validation.username.in.use=on käytössä. Valitse toinen käyttäjätunnus
 _mine.username=Käyttäjätunnus
@@ -171,37 +195,14 @@ _portal.ui.navigation.of=mistä:
 _portal.ui.navigation.page=Sivu
 _portal.ui.navigation.results=Tulokset
 _portal.ui.notification.error=Virhe
-_portal.ui.notification.failure.search.saved=Haun tallentaminen epäonnistui
 _portal.ui.notification.noitemsfound=Kohteita ei löytynyt
 _portal.ui.reset.searchbox=Päivitä
 _portal.ui.viewingrelateditems=Muita tähän liittyviä kohteita
-_register-request.emailalreadyregistered=Tämä sähköposti on jo rekisteröity
-_register.email.has.been.sent=Sähköposti on lähetetty osoitteeseen
-_register.emailclicktoconfirm=Vahvista rekisteröitymisesi klikkaamalla linkkiä
-_register.emailuse=Kirjaudu käyttämällä sähköpostiosoitetta ja salasanaa
-_register.entervalidemail=Lisää tähän voimassa oleva sähköpostiosoite
-_register.enteryouremail=Syötä sähköpostiosoitteesi
-_register.errordetails=Virheen tiedot
-_register.finishregistration=Hyväksy rekisteröityminen
-_register.iagree=Hyväksyn
-_register.linkexpired=Rekisteröitymiseen käyttämäsi linkki on virheellinen tai vanhentunut.
-_register.mycodeofconduct=Ymmärrän, että "Minun Europeanani" antaa mahdollisuuden luoda tageja mistä tahansa aiheesta. Sitoudun siihen, että en luo tageja, joita voi pitää herjaavina, vahingollisina, uhkaavina, lainvastaisina, loukkaavina, kajoavina, solvaavina, yllyttävinä, häiritsevinä, pornografisina, rivoina, valheellisina, yksityisiä tai julkisia oikeuksia loukkaavina, vastenmielisinä tai rotuun tai etniseen alkuperään liittyvistä syistä ei-toivottuina. Klikkaamalla tätä laatikkoa sitoudun tähän sopimukseen ja ymmärrän, että jos en niin tee, niin jäsenyyteni "Minun Europeanaani" lakkautetaan.
-_register.mycodeofconductrequired=Sinun on hyväksyttävä menettelyohjeemme rekisteröityäksesi ”Minun Europeanaani”
-_register.password=Salasana
-_register.password.choose=Valitse salasana
-_register.password.explain=Salasanan tulee olla 6 - 30 merkkiä pitkä
-_register.pick.user.name=Käyttäjätunnus tulee näkyviin kun olet kirjautunut sisään
-_register.please.follow.link=Rekisteröidy sähköpostissa olevan linkin kautta
-_register.register=Rekisteröityminen
-_register.registration.failed=Rekisteröitymisesi käsittelyssä on tapahtunut virhe. Yritä uudelleen
-_register.repeat.password=Toista salasana
-_register.requiredfield=Tämä on pakollinen kenttä
-_register.username.choose=Valitse käyttäjätunnus
-_register.username.explain=Käyttäjätunnus tulee näkyviin kun olet kirjautunut sisään
 _search.boolean.and=ja
 _search.boolean.not=ei
 _search.boolean.or=tai
 _search.field.any.field=Kaikki kentät
+_search.field.country=Maa
 _search.field.creator=Tekijä
 _search.field.date=Aika
 _search.field.description=Kuvaus
@@ -225,7 +226,6 @@ _unused.bosnia.and.herzegovina=Bosnia-Herzegovina
 _unused.browse.through.time=Selaa aikakausittain
 _unused.contacts=Yhteystiedot
 _unused.contributors=Osallistujat
-_unused.country=Maa
 _unused.createaccount=Luo tili
 _unused.emailwelcome=Tervetuloa minun Europeanaani
 _unused.enewsoptin=Pidä minut ajan tasalla Europeanan kehityksestä
