--- a/portal/src/main/resources/i18n/messages_fr.properties
+++ b/portal/src/main/resources/i18n/messages_fr.properties
@@ -7,6 +7,7 @@ _action.alt.more.info=Cliquer ici pour plus d'information
 _action.alt.next.page=Cliquer ici pour visualiser les résultats de la page suivante
 _action.alt.previous.page=Cliquer ici pour visualiser les résultats de la page précédente
 _action.alt.table.view=Voir le tableau
+_action.chooselanguage=Choisir une langue
 _action.personal.page=Mon Europeana
 _action.previous=Précédent
 _action.refine.your.search=Affiner votre recherche
@@ -95,10 +96,6 @@ _locale.sk=Slovaque (slo)
 _locale.sl=Slovène (slv)
 _locale.sr=Serbe (scc)
 _locale.sv=Suédois (sve/swe)
-_menu.i18n.chooselanguage=Choisir une langue
-_messages.error.emailformaterror=Veuillez vous assurer de la validité de votre adresse mél et réessayer
-_messages.error.emailsendfailed=le mél. n'a pas pu être envoyé
-_messages.notification.emailsent=Mél. envoyé
 _metadata.dc.contributor=Contributeur
 _metadata.dc.coverage=Couverture
 _metadata.dc.creator=Auteur
@@ -153,6 +150,33 @@ _mine.saved.items=Objets sauvegardés
 _mine.saved.searches=Recherches sauvegardées
 _mine.saved.tags=Etiquettes sauvegardées
 _mine.user.information=Information pour l'utilisateur
+_mine.user.notification.emailformaterror=Veuillez vous assurer de la validité de votre adresse mél et réessayer
+_mine.user.notification.emailsendfailed=le mél. n'a pas pu être envoyé
+_mine.user.notification.emailsent=Mél. envoyé
+_mine.user.notification.failure.search.saved=Sauvegarde de la recherche échouée
+_mine.user.register-request.emailalreadyregistered=Cette adresse mél est déjà enregistrée
+_mine.user.register.email.has.been.sent=Un mél. a été envoyé à l'adresse suivante
+_mine.user.register.emailclicktoconfirm=Veuillez cliquer sur le lien pour confirmer votre inscription
+_mine.user.register.emailuse=Vous devez entrer votre adresse mél et votre mot de passe pour vous ouvrir une session
+_mine.user.register.entervalidemail=Veuillez entrer une adresse mél. valide
+_mine.user.register.enteryouremail=Entrer votre adresse mél.
+_mine.user.register.errordetails=Détails de l'erreur
+_mine.user.register.finishregistration=Finir l'enregistrement
+_mine.user.register.iagree=J'accepte
+_mine.user.register.linkexpired=Le lien que vous utilisez pour terminer votre inscription est invalide ou a expiré
+_mine.user.register.mycodeofconduct=J’accepte les conditions sous lesquelles je crée les étiquettes pour les objets que j’aurai choisis. J'accepte de ne pas créer d'étiquette qui pourrait être considérée comme diffamatoire, dommageable, préjudiciable, illégale, calomnieuse, incorrecte, injurieuse, provocatrice, gênante, pornographique, obscène, malhonnête, haineuse ou raciale d'un point de vue ethnique ou de toute autre manière qui pourrait être considérée comme choquante. J’accepte de ne pas créer d’étiquette qui serait susceptible de porter atteinte au respect de la vie privée ou qui ne pourrait être diffusé. En cliquant sur cette case, j'accepte de respecter les termes de l'accord. Dans le cas contraire, mon inscription à Europeana sera interrompue.
+_mine.user.register.mycodeofconductrequired=Vous acceptez notre code de conduite pour vous inscrire sur Mon Europeana
+_mine.user.register.password=Mot de passe
+_mine.user.register.password.choose=Choisir un mot de passe
+_mine.user.register.password.explain=La longueur du mot de passe doit être entre 6-30 caractères
+_mine.user.register.pick.user.name=Votre nom d'utilisateur s'affichera une fois connecté
+_mine.user.register.please.follow.link=Veuillez suivre le lien envoyé sur votre adresse mél pour finir votre enregistrement.
+_mine.user.register.register=S´enregistrer
+_mine.user.register.registration.failed=Une erreur s'est produite lors de votre enregistrement. Veuillez recommencer
+_mine.user.register.repeat.password=Répéter le mot de passe
+_mine.user.register.requiredfield=C'est un champ requis
+_mine.user.register.username.choose=Choisir un nom d'utilisateur
+_mine.user.register.username.explain=Votre nom d'utilisateur s'affichera une fois connecté
 _mine.user.registration.notification.succeed=Vous êtes enregistré avec succès
 _mine.user.validation.username.in.use=déjà utilisé. Veuillez choisir un autre nom d'utilisateur
 _mine.username=Nom d'utilisateur
@@ -171,37 +195,14 @@ _portal.ui.navigation.of=de
 _portal.ui.navigation.page=Page
 _portal.ui.navigation.results=Résultats
 _portal.ui.notification.error=Erreur
-_portal.ui.notification.failure.search.saved=Sauvegarde de la recherche échouée
 _portal.ui.notification.noitemsfound=Pas d'objets trouvés
 _portal.ui.reset.searchbox=Réinitialiser
 _portal.ui.viewingrelateditems=Visualiser les objets en relation
-_register-request.emailalreadyregistered=Cette adresse mél est déjà enregistrée
-_register.email.has.been.sent=Un mél. a été envoyé à l'adresse suivante
-_register.emailclicktoconfirm=Veuillez cliquer sur le lien pour confirmer votre inscription
-_register.emailuse=Vous devez entrer votre adresse mél et votre mot de passe pour vous ouvrir une session
-_register.entervalidemail=Veuillez entrer une adresse mél. valide
-_register.enteryouremail=Entrer votre adresse mél.
-_register.errordetails=Détails de l'erreur
-_register.finishregistration=Finir l'enregistrement
-_register.iagree=J'accepte
-_register.linkexpired=Le lien que vous utilisez pour terminer votre inscription est invalide ou a expiré
-_register.mycodeofconduct=J’accepte les conditions sous lesquelles je crée les étiquettes pour les objets que j’aurai choisis. J'accepte de ne pas créer d'étiquette qui pourrait être considérée comme diffamatoire, dommageable, préjudiciable, illégale, calomnieuse, incorrecte, injurieuse, provocatrice, gênante, pornographique, obscène, malhonnête, haineuse ou raciale d'un point de vue ethnique ou de toute autre manière qui pourrait être considérée comme choquante. J’accepte de ne pas créer d’étiquette qui serait susceptible de porter atteinte au respect de la vie privée ou qui ne pourrait être diffusé. En cliquant sur cette case, j'accepte de respecter les termes de l'accord. Dans le cas contraire, mon inscription à Europeana sera interrompue.
-_register.mycodeofconductrequired=Vous acceptez notre code de conduite pour vous inscrire sur Mon Europeana
-_register.password=Mot de passe
-_register.password.choose=Choisir un mot de passe
-_register.password.explain=La longueur du mot de passe doit être entre 6-30 caractères
-_register.pick.user.name=Votre nom d'utilisateur s'affichera une fois connecté
-_register.please.follow.link=Veuillez suivre le lien envoyé sur votre adresse mél pour finir votre enregistrement.
-_register.register=S´enregistrer
-_register.registration.failed=Une erreur s'est produite lors de votre enregistrement. Veuillez recommencer
-_register.repeat.password=Répéter le mot de passe
-_register.requiredfield=C'est un champ requis
-_register.username.choose=Choisir un nom d'utilisateur
-_register.username.explain=Votre nom d'utilisateur s'affichera une fois connecté
 _search.boolean.and=et
 _search.boolean.not=sauf
 _search.boolean.or=ou
 _search.field.any.field=N'importe quel champ
+_search.field.country=Pays
 _search.field.creator=Createur
 _search.field.date=Date
 _search.field.description=Description
@@ -225,7 +226,6 @@ _unused.bosnia.and.herzegovina=Bosnie-Herzégovine
 _unused.browse.through.time=Feuilleter dans le temps
 _unused.contacts=Contacts
 _unused.contributors=Contributeurs
-_unused.country=Pays
 _unused.createaccount=Créer un compte
 _unused.emailwelcome=Bienvenue sur Mon Europeana
 _unused.enewsoptin=Rester en contact avec les nouveaux développements d'Europeana
