--- a/portal/src/main/resources/i18n/messages_ga.properties
+++ b/portal/src/main/resources/i18n/messages_ga.properties
@@ -7,6 +7,7 @@ _action.alt.more.info=Cliceáil anseo le haghaidh tuilleadh eolais
 _action.alt.next.page=cliceáil anseo le haghaidh an chéad leathanaigh torthaí eile
 _action.alt.previous.page=cliceáil anseo le haghaidh leathanch na dtorthaí roimhe seo
 _action.alt.table.view=Amharc tábla
+_action.chooselanguage=Roghnaigh Teanga
 _action.personal.page=My Personal Page
 _action.previous=Roimhe
 _action.refine.your.search=Beachtaigh do chuardach
@@ -95,10 +96,6 @@ _locale.sk=Slóvaicis (slo)
 _locale.sl=Slóivéinis (slv)
 _locale.sr=Seirbis (scc)
 _locale.sv=Sualainnis (sve/swe)
-_menu.i18n.chooselanguage=Roghnaigh Teanga
-_messages.error.emailformaterror=Cinntigh le do thoil go bhfuil do r-phost formáidithe i gceart agus triail arís é
-_messages.error.emailsendfailed=Níor seoladh an R-phost
-_messages.notification.emailsent=R-phost seolta
 _metadata.dc.contributor=Rannpháirtí
 _metadata.dc.coverage=Clúdach
 _metadata.dc.creator=Údar
@@ -153,6 +150,33 @@ _mine.saved.items=Míreanna sábhailte
 _mine.saved.searches=Cuardaigh shábháilte
 _mine.saved.tags=Clibeanna sábhailte
 _mine.user.information=Eolas úsáideora
+_mine.user.notification.emailformaterror=Cinntigh le do thoil go bhfuil do r-phost formáidithe i gceart agus triail arís é
+_mine.user.notification.emailsendfailed=Níor seoladh an R-phost
+_mine.user.notification.emailsent=R-phost seolta
+_mine.user.notification.failure.search.saved=Sábháil cuardach teipthe
+_mine.user.register-request.emailalreadyregistered=Tá an r-phost seo cláraithe cheana
+_mine.user.register.email.has.been.sent=Seoladh r-phost chuig an seoladh seo leanas
+_mine.user.register.emailclicktoconfirm=Cliceáil ar an nasc seo leanas le do thoil chun do chláru a chinntiú
+_mine.user.register.emailuse=Úsáidfidh tú do r-phost mar aon le do phasfhocal chun logáil isteach ar an suíomh
+_mine.user.register.entervalidemail=Cuir isteach seoladh r-phoist bailí le do thoil
+_mine.user.register.enteryouremail=Cuir isteach do r-phost
+_mine.user.register.errordetails=Sonraí earráide
+_mine.user.register.finishregistration=Críochnaigh an clárú
+_mine.user.register.iagree=Aontaím
+_mine.user.register.linkexpired=Tá an nasc a d'úsáid tú chun an clárú a dhéanamh neamhbhailí nó éagtha
+_mine.user.register.mycodeofconduct=Tuigim go dtugann My Personal Page an deis dom clibeanna a chruthú do mhír ar bith is mian liom. Aontaím nach gcruthóidh mé aon chlibeanna a d'fhéadfadh a bheith aithiseach, díobhálach, bagrach, mídhleathach, clúmhillteach, sáraitheach, díblithe, gríosaitheach, ciapthach, pornagrafach, gáirsiúil, calaoiseach, ina shárú príobháide nó cearta poiblíochta, gráiniúil, nó inlochtaithe ar bhonn ciníoch, eitneach nó ar aon bhonn eile. Trí chliceáil ar an mbosca seo aontaím go gcloífidh mé leis an gcomhaontú seo agus sa chás nach gcloífidh tuigim go gcuirfear deireadh le mo bhallraíocht ar My Personal Page.
+_mine.user.register.mycodeofconductrequired=You must agree to our code of conduct to register for portal membership
+_mine.user.register.password=Pasfhocal
+_mine.user.register.password.choose=Roghnaigh pasfhocal
+_mine.user.register.password.explain=Caithfear pasfhocail a bheith idir 6 agus 30 carachtar ar fad
+_mine.user.register.pick.user.name=Taispeánfar d'ainm úsáideora nuair a bheidh tú logáílte isteach
+_mine.user.register.please.follow.link=Lean an nasc atá san r-phost le do thoil chun an próiseas cláraithe a chríochnú
+_mine.user.register.register=Cláraigh
+_mine.user.register.registration.failed=Tharla earráid agus do chlárú á phróiseáil. Triail arís é le do thoil
+_mine.user.register.repeat.password=Athscríobh an pasfhocal
+_mine.user.register.requiredfield=Is réimse riachtanach é seo
+_mine.user.register.username.choose=Roghnaigh ainm úsáideora
+_mine.user.register.username.explain=Taispeánfar d'ainm úsáideora nuair a bheidh tú logáilte isteach
 _mine.user.registration.notification.succeed=D'éirigh leat tú féin a chlárú
 _mine.user.validation.username.in.use=in úsáid. Roghnaigh ainm úsáideora eile le do thoil
 _mine.username=Ainm úsáideora
@@ -171,37 +195,14 @@ _portal.ui.navigation.of=de
 _portal.ui.navigation.page=Leathanach
 _portal.ui.navigation.results=Torthaí
 _portal.ui.notification.error=Earráid
-_portal.ui.notification.failure.search.saved=Sábháil cuardach teipthe
 _portal.ui.notification.noitemsfound=Ní bhfuarthas aon mhíreanna
 _portal.ui.reset.searchbox=Athshocraigh
 _portal.ui.viewingrelateditems=Tá tú ag féachaint ar mhíreanna gaolmhara
-_register-request.emailalreadyregistered=Tá an r-phost seo cláraithe cheana
-_register.email.has.been.sent=Seoladh r-phost chuig an seoladh seo leanas
-_register.emailclicktoconfirm=Cliceáil ar an nasc seo leanas le do thoil chun do chláru a chinntiú
-_register.emailuse=Úsáidfidh tú do r-phost mar aon le do phasfhocal chun logáil isteach ar an suíomh
-_register.entervalidemail=Cuir isteach seoladh r-phoist bailí le do thoil
-_register.enteryouremail=Cuir isteach do r-phost
-_register.errordetails=Sonraí earráide
-_register.finishregistration=Críochnaigh an clárú
-_register.iagree=Aontaím
-_register.linkexpired=Tá an nasc a d'úsáid tú chun an clárú a dhéanamh neamhbhailí nó éagtha
-_register.mycodeofconduct=Tuigim go dtugann My Personal Page an deis dom clibeanna a chruthú do mhír ar bith is mian liom. Aontaím nach gcruthóidh mé aon chlibeanna a d'fhéadfadh a bheith aithiseach, díobhálach, bagrach, mídhleathach, clúmhillteach, sáraitheach, díblithe, gríosaitheach, ciapthach, pornagrafach, gáirsiúil, calaoiseach, ina shárú príobháide nó cearta poiblíochta, gráiniúil, nó inlochtaithe ar bhonn ciníoch, eitneach nó ar aon bhonn eile. Trí chliceáil ar an mbosca seo aontaím go gcloífidh mé leis an gcomhaontú seo agus sa chás nach gcloífidh tuigim go gcuirfear deireadh le mo bhallraíocht ar My Personal Page.
-_register.mycodeofconductrequired=You must agree to our code of conduct to register for portal membership
-_register.password=Pasfhocal
-_register.password.choose=Roghnaigh pasfhocal
-_register.password.explain=Caithfear pasfhocail a bheith idir 6 agus 30 carachtar ar fad
-_register.pick.user.name=Taispeánfar d'ainm úsáideora nuair a bheidh tú logáílte isteach
-_register.please.follow.link=Lean an nasc atá san r-phost le do thoil chun an próiseas cláraithe a chríochnú
-_register.register=Cláraigh
-_register.registration.failed=Tharla earráid agus do chlárú á phróiseáil. Triail arís é le do thoil
-_register.repeat.password=Athscríobh an pasfhocal
-_register.requiredfield=Is réimse riachtanach é seo
-_register.username.choose=Roghnaigh ainm úsáideora
-_register.username.explain=Taispeánfar d'ainm úsáideora nuair a bheidh tú logáilte isteach
 _search.boolean.and=agus
 _search.boolean.not=ni
 _search.boolean.or=nó
 _search.field.any.field=Réimse ar bith
+_search.field.country=Tír
 _search.field.creator=Cruthaitheoir
 _search.field.date=Dáta
 _search.field.description=Cur síos
@@ -225,7 +226,6 @@ _unused.bosnia.and.herzegovina=An Bhoisnia-Heirseagaivéin
 _unused.browse.through.time=Brabhsáil trí am
 _unused.contacts=Teagmhálacha
 _unused.contributors=Rannpháirtithe
-_unused.country=Tír
 _unused.createaccount=Cruthaigh cuntas
 _unused.emailwelcome=Fáilte chuig My Personal Page
 _unused.enewsoptin=Keep me in touch with new developments to Europeana
