--- a/portal/src/main/resources/i18n/messages_hu.properties
+++ b/portal/src/main/resources/i18n/messages_hu.properties
@@ -7,6 +7,7 @@ _action.alt.more.info=További információk
 _action.alt.next.page=Következő
 _action.alt.previous.page=Előző
 _action.alt.table.view=Táblázatos megjelenítés
+_action.chooselanguage=Nyelvválasztás
 _action.personal.page=Az én Europeanám
 _action.previous=Előző
 _action.refine.your.search=Szűkítse a keresést
@@ -95,10 +96,6 @@ _locale.sk=szlovák
 _locale.sl=szlovén
 _locale.sr=szerb
 _locale.sv=svéd
-_menu.i18n.chooselanguage=Nyelvválasztás
-_messages.error.emailformaterror=Kérjük, ellenőrizze, hogy az e-mail cím megfelelő-e.
-_messages.error.emailsendfailed=Az e-mail küldése sikertelen.
-_messages.notification.emailsent=E-mail elküldve
 _metadata.dc.contributor=Közreműködő
 _metadata.dc.coverage=Tartalom
 _metadata.dc.creator=Szerző
@@ -153,6 +150,33 @@ _mine.saved.items=Mentett elemek
 _mine.saved.searches=Mentett keresések
 _mine.saved.tags=Mentett címkék
 _mine.user.information=Felhasználói információ
+_mine.user.notification.emailformaterror=Kérjük, ellenőrizze, hogy az e-mail cím megfelelő-e.
+_mine.user.notification.emailsendfailed=Az e-mail küldése sikertelen.
+_mine.user.notification.emailsent=E-mail elküldve
+_mine.user.notification.failure.search.saved=A keresés mentése sikertelen.
+_mine.user.register-request.emailalreadyregistered=Ezzel az e-mail címmel már regisztráltak.
+_mine.user.register.email.has.been.sent=E-mailt küldtünk az alábbi címre:
+_mine.user.register.emailclicktoconfirm=A regisztráció megerősítéséhez kérjük, kattintson az alábbi linkre
+_mine.user.register.emailuse=A bejelentkezéshez az e-mail címét és jelszavát fogja használni.
+_mine.user.register.entervalidemail=Kérem, adjon meg egy valós e-mail címet.
+_mine.user.register.enteryouremail=Írja be az e-mail címét!
+_mine.user.register.errordetails=A hiba részletes leírása
+_mine.user.register.finishregistration=A regisztráció befejezése.
+_mine.user.register.iagree=Elfogadom
+_mine.user.register.linkexpired=A link, amelyet a regisztráció befejezéséhez használt, érvénytelen vagy lejárt.
+_mine.user.register.mycodeofconduct=Tudom, hogy Az én Europeánám lehetővé teszi, hogy bármely digitális dokumentumhoz címkét hozzak létre. Megígérem, hogy nem hozok létre olyan címkét, amely sértő, károsító, fenyegető, törvénytelen, rágalmazó, gyalázkodó, zaklató, pornográf, obszcén, tisztességtelen, sérti a magán vagy közösségi jogokat, gyűlölködő, és faji, etnikai vagy egyéb okból elítélendő. A négyzetre történő kattintással elfogadom, hogy betartom ezt a megállapodást. Amennyiben ettől eltérek, Az én Europeanámban való tagságom megszűnik.
+_mine.user.register.mycodeofconductrequired=El kell fogadnia a My Personal Page Felhasználói magatártásra vonatkozó szabályait
+_mine.user.register.password=Jelszó
+_mine.user.register.password.choose=Válasszon jelszót!
+_mine.user.register.password.explain=A jelszónak 6-30 karakter hosszúnak kell lennie.
+_mine.user.register.pick.user.name=A felhasználóneve akkor jelenik meg, ha bejelentkezik.
+_mine.user.register.please.follow.link=Kérjük, kattintson az alábbi linkre a regisztráció befejezéséhez!
+_mine.user.register.register=Regisztráció
+_mine.user.register.registration.failed=A regisztráció során hiba történt. Kérjük, próbálja meg újra.
+_mine.user.register.repeat.password=Jelszó megismétlése
+_mine.user.register.requiredfield=Ez egy kötelező mező.
+_mine.user.register.username.choose=Válasszon felhasználónevet!
+_mine.user.register.username.explain=A felhasználónevét bejelentkezéskor fogjuk megjeleníteni.
 _mine.user.registration.notification.succeed=Ön sikeresen regisztrált.
 _mine.user.validation.username.in.use=használatban van. Kérjük, hogy válasszon másik felhasználónevet.
 _mine.username=A felhasználónév
@@ -171,37 +195,14 @@ _portal.ui.navigation.of=:
 _portal.ui.navigation.page=Oldal
 _portal.ui.navigation.results=Eredmények
 _portal.ui.notification.error=Hiba
-_portal.ui.notification.failure.search.saved=A keresés mentése sikertelen.
 _portal.ui.notification.noitemsfound=Nincs találat
 _portal.ui.reset.searchbox=Törlés
 _portal.ui.viewingrelateditems=A kapcsolódó elemek megtekintése
-_register-request.emailalreadyregistered=Ezzel az e-mail címmel már regisztráltak.
-_register.email.has.been.sent=E-mailt küldtünk az alábbi címre:
-_register.emailclicktoconfirm=A regisztráció megerősítéséhez kérjük, kattintson az alábbi linkre
-_register.emailuse=A bejelentkezéshez az e-mail címét és jelszavát fogja használni.
-_register.entervalidemail=Kérem, adjon meg egy valós e-mail címet.
-_register.enteryouremail=Írja be az e-mail címét!
-_register.errordetails=A hiba részletes leírása
-_register.finishregistration=A regisztráció befejezése.
-_register.iagree=Elfogadom
-_register.linkexpired=A link, amelyet a regisztráció befejezéséhez használt, érvénytelen vagy lejárt.
-_register.mycodeofconduct=Tudom, hogy Az én Europeánám lehetővé teszi, hogy bármely digitális dokumentumhoz címkét hozzak létre. Megígérem, hogy nem hozok létre olyan címkét, amely sértő, károsító, fenyegető, törvénytelen, rágalmazó, gyalázkodó, zaklató, pornográf, obszcén, tisztességtelen, sérti a magán vagy közösségi jogokat, gyűlölködő, és faji, etnikai vagy egyéb okból elítélendő. A négyzetre történő kattintással elfogadom, hogy betartom ezt a megállapodást. Amennyiben ettől eltérek, Az én Europeanámban való tagságom megszűnik.
-_register.mycodeofconductrequired=El kell fogadnia a My Personal Page Felhasználói magatártásra vonatkozó szabályait
-_register.password=Jelszó
-_register.password.choose=Válasszon jelszót!
-_register.password.explain=A jelszónak 6-30 karakter hosszúnak kell lennie.
-_register.pick.user.name=A felhasználóneve akkor jelenik meg, ha bejelentkezik.
-_register.please.follow.link=Kérjük, kattintson az alábbi linkre a regisztráció befejezéséhez!
-_register.register=Regisztráció
-_register.registration.failed=A regisztráció során hiba történt. Kérjük, próbálja meg újra.
-_register.repeat.password=Jelszó megismétlése
-_register.requiredfield=Ez egy kötelező mező.
-_register.username.choose=Válasszon felhasználónevet!
-_register.username.explain=A felhasználónevét bejelentkezéskor fogjuk megjeleníteni.
 _search.boolean.and=és
 _search.boolean.not=nem
 _search.boolean.or=vagy
 _search.field.any.field=Bármely kulcsszó
+_search.field.country=Ország
 _search.field.creator=Létrehozó
 _search.field.date=Dátum
 _search.field.description=Leírás
@@ -225,7 +226,6 @@ _unused.bosnia.and.herzegovina=Bosznia-Hercegovina
 _unused.browse.through.time=Idő szerinti keresés
 _unused.contacts=Kapcsolat
 _unused.contributors=Közreműködők
-_unused.country=Ország
 _unused.createaccount=Felhasználói fiók létrehozása
 _unused.emailwelcome=Üdvözüljük Az én Europeanámban
 _unused.enewsoptin=Tájékoztatssanak az Europeana új fejlesztéseiről
