--- a/portal/src/main/resources/i18n/messages_is.properties
+++ b/portal/src/main/resources/i18n/messages_is.properties
@@ -7,6 +7,7 @@ _action.alt.more.info=Smelltu til að fá meiri upplýsingar
 _action.alt.next.page=smelltu hér til að sjá næstu síðu í niðurstöðum
 _action.alt.previous.page=smelltu hér til að sjá fyrri síðu í niðurstöðum
 _action.alt.table.view=Skpða töflu
+_action.chooselanguage=Veldu tungumál
 _action.personal.page=Mitt Europeana
 _action.previous=Fyrri
 _action.refine.your.search=Þrengri leit
@@ -95,10 +96,6 @@ _locale.sk=Slóvakíska (slo)
 _locale.sl=Slóvenska (slv)
 _locale.sr=Serbneska (scc)
 _locale.sv=Sænska (sve/swe)
-_menu.i18n.chooselanguage=Veldu tungumál
-_messages.error.emailformaterror=Athugaðu hvort netfangið þitt sé örugglega rétt skráð og reyndu aftur
-_messages.error.emailsendfailed=Ekki var hægt að senda tölvupóst
-_messages.notification.emailsent=Búið að senda tölvupóst
 _metadata.dc.contributor=Samverkamenn
 _metadata.dc.coverage=Yfirgrip
 _metadata.dc.creator=Höfundur
@@ -153,6 +150,33 @@ _mine.saved.items=Vistuð eintök
 _mine.saved.searches=Vistaðar leitir
 _mine.saved.tags=Vistaðar tilvísanir
 _mine.user.information=Notendaupplýsingar
+_mine.user.notification.emailformaterror=Athugaðu hvort netfangið þitt sé örugglega rétt skráð og reyndu aftur
+_mine.user.notification.emailsendfailed=Ekki var hægt að senda tölvupóst
+_mine.user.notification.emailsent=Búið að senda tölvupóst
+_mine.user.notification.failure.search.saved=Vistun á leit mistókst
+_mine.user.register-request.emailalreadyregistered=Þetta netfang er þegar skráð
+_mine.user.register.email.has.been.sent=Tölvupóstur var sendur á þetta netfang
+_mine.user.register.emailclicktoconfirm=Smelltu á eftirfarandi slóð til að staðfesta insskráningu
+_mine.user.register.emailuse=Þú skalt nota netfangið þitt ásamt lykilorði við innskráningu
+_mine.user.register.entervalidemail=Skráðu lögmætt netfang
+_mine.user.register.enteryouremail=Skráðu netfangið þitt
+_mine.user.register.errordetails=Villulýsing
+_mine.user.register.finishregistration=Ljúka skráningu
+_mine.user.register.iagree=Ég samþykki
+_mine.user.register.linkexpired=Slóðin sem notuð var til að ljúka innskráningu er ógild eða ekki virk lengur
+_mine.user.register.mycodeofconduct=Ég geri mér grein fyrir að Mitt Europeana gefur mér kost á að búa til tilvísanir fyrir hvaða eintak sem er. Ég samþykki að búa ekki til tilvísanir sem líta má á sem róg, skaðlegar, hótandi,  ólöglegar, ærumeiðandi, yfirgangssamar, móðgandi, æsandi, ögrandi,  klámfengin, ruddaleg, sviksamleg,  í bága við friðhelgi einkalífs eða útgáfurétt, hatursfull eða sýni  uppruna eða kynþætti óvirðingu. Með því að smella á þennan reit samþykki ég að fylgja þessu  samkomulagi og geri mér grein fyrir að geri ég það ekki mun aðild minni að Mínu Europeana verða sagt upp.
+_mine.user.register.mycodeofconductrequired=Þú verður að samþykkja hegðunarreglur okkar til að geta skráð þig í Mitt Europeana.
+_mine.user.register.password=Aðgangsorð
+_mine.user.register.password.choose=Veldu lykilorð
+_mine.user.register.password.explain=Lykilorð verður að vera 6-60 stafir að lengd
+_mine.user.register.pick.user.name=Notendanafnið þitt birtist þegar þú hefur lokið innskráningu
+_mine.user.register.please.follow.link=Smelltu á tengilinn í tölvupóstinum til að ljúka skráningarferlinu
+_mine.user.register.register=Skráning
+_mine.user.register.registration.failed=Við úrvinnslu á skráningarupplýsingum fannst villa. Vinsamlegast reynið aftur
+_mine.user.register.repeat.password=Endurtaka lykilorð
+_mine.user.register.requiredfield=Þetta svið verður að fylla út
+_mine.user.register.username.choose=Veldu notendanafn
+_mine.user.register.username.explain=Notendanafnið þitt birtist þegar þú hefur skráð þig inn
 _mine.user.registration.notification.succeed=Skráning tókst
 _mine.user.validation.username.in.use=er þegar í notkun. Vinsamlegast veljið annað notandanafn
 _mine.username=Notendanafn
@@ -171,37 +195,14 @@ _portal.ui.navigation.of=af
 _portal.ui.navigation.page=Siða
 _portal.ui.navigation.results=Niðurstöður
 _portal.ui.notification.error=Villa
-_portal.ui.notification.failure.search.saved=Vistun á leit mistókst
 _portal.ui.notification.noitemsfound=Engin skjöl fundust
 _portal.ui.reset.searchbox=Endurstilla
 _portal.ui.viewingrelateditems=Þú ert að horfa á skyld eintök
-_register-request.emailalreadyregistered=Þetta netfang er þegar skráð
-_register.email.has.been.sent=Tölvupóstur var sendur á þetta netfang
-_register.emailclicktoconfirm=Smelltu á eftirfarandi slóð til að staðfesta insskráningu
-_register.emailuse=Þú skalt nota netfangið þitt ásamt lykilorði við innskráningu
-_register.entervalidemail=Skráðu lögmætt netfang
-_register.enteryouremail=Skráðu netfangið þitt
-_register.errordetails=Villulýsing
-_register.finishregistration=Ljúka skráningu
-_register.iagree=Ég samþykki
-_register.linkexpired=Slóðin sem notuð var til að ljúka innskráningu er ógild eða ekki virk lengur
-_register.mycodeofconduct=Ég geri mér grein fyrir að Mitt Europeana gefur mér kost á að búa til tilvísanir fyrir hvaða eintak sem er. Ég samþykki að búa ekki til tilvísanir sem líta má á sem róg, skaðlegar, hótandi,  ólöglegar, ærumeiðandi, yfirgangssamar, móðgandi, æsandi, ögrandi,  klámfengin, ruddaleg, sviksamleg,  í bága við friðhelgi einkalífs eða útgáfurétt, hatursfull eða sýni  uppruna eða kynþætti óvirðingu. Með því að smella á þennan reit samþykki ég að fylgja þessu  samkomulagi og geri mér grein fyrir að geri ég það ekki mun aðild minni að Mínu Europeana verða sagt upp.
-_register.mycodeofconductrequired=Þú verður að samþykkja hegðunarreglur okkar til að geta skráð þig í Mitt Europeana.
-_register.password=Aðgangsorð
-_register.password.choose=Veldu lykilorð
-_register.password.explain=Lykilorð verður að vera 6-60 stafir að lengd
-_register.pick.user.name=Notendanafnið þitt birtist þegar þú hefur lokið innskráningu
-_register.please.follow.link=Smelltu á tengilinn í tölvupóstinum til að ljúka skráningarferlinu
-_register.register=Skráning
-_register.registration.failed=Við úrvinnslu á skráningarupplýsingum fannst villa. Vinsamlegast reynið aftur
-_register.repeat.password=Endurtaka lykilorð
-_register.requiredfield=Þetta svið verður að fylla út
-_register.username.choose=Veldu notendanafn
-_register.username.explain=Notendanafnið þitt birtist þegar þú hefur skráð þig inn
 _search.boolean.and=og
 _search.boolean.not=ekki
 _search.boolean.or=eða
 _search.field.any.field=Öll svið
+_search.field.country=Land
 _search.field.creator=Höfundur
 _search.field.date=Dagsetning
 _search.field.description=Lýsing
@@ -225,7 +226,6 @@ _unused.bosnia.and.herzegovina=Bosníu og Hersegóvínu
 _unused.browse.through.time=Fletta í tímaröð
 _unused.contacts=Hafa samband
 _unused.contributors=Eftirtaldir leggja til efni
-_unused.country=Land
 _unused.createaccount=Stofna aðgang
 _unused.emailwelcome=Velkomin að Mitt Europeana
 _unused.enewsoptin=Leyfðu mér að fylgjast með  nýjungum í Europeana
