--- a/portal/src/main/resources/i18n/messages_lt.properties
+++ b/portal/src/main/resources/i18n/messages_lt.properties
@@ -7,6 +7,7 @@ _action.alt.more.info=Spausti čia, norint daugiau informacijos
 _action.alt.next.page=Spausti čia, norint matyti rezultatų kitą puslapį
 _action.alt.previous.page=Spausti čia, norint matyti rezultatų ankstesnį puslapį
 _action.alt.table.view=Lentelės peržiūra
+_action.chooselanguage=Pasirinkite kalbą
 _action.personal.page=Mano Europeana
 _action.previous=Ankstesnis
 _action.refine.your.search=Atnaujinti paiešką
@@ -95,10 +96,6 @@ _locale.sk=Slovakų (slo)
 _locale.sl=Slovėnų (slv)
 _locale.sr=Serbų (scc)
 _locale.sv=Švedų (sve/swe)
-_menu.i18n.chooselanguage=Pasirinkite kalbą
-_messages.error.emailformaterror=Įsitikinkite, kad jūsų elektroninio pašto adresas yra teisingas, ir bandykite darkart
-_messages.error.emailsendfailed=Elektroninio pašto laiškas neišsiųstas
-_messages.notification.emailsent=Elektroninio pašto laiškas išsiųstas
 _metadata.dc.contributor=Bendraautorius
 _metadata.dc.coverage=Aprėptis
 _metadata.dc.creator=Autorius
@@ -153,6 +150,33 @@ _mine.saved.items=Išsaugoti vienetai
 _mine.saved.searches=Išsaugotos užklausos
 _mine.saved.tags=Išsaugoti žymenys
 _mine.user.information=Vartotojo informacija
+_mine.user.notification.emailformaterror=Įsitikinkite, kad jūsų elektroninio pašto adresas yra teisingas, ir bandykite darkart
+_mine.user.notification.emailsendfailed=Elektroninio pašto laiškas neišsiųstas
+_mine.user.notification.emailsent=Elektroninio pašto laiškas išsiųstas
+_mine.user.notification.failure.search.saved=Paieškos išsaugojimas nepavyko
+_mine.user.register-request.emailalreadyregistered=Šis elektroninio pašto adresas jau užregistruotas
+_mine.user.register.email.has.been.sent=Elektroninis laiškas išsiųstas šiuo adresu
+_mine.user.register.emailclicktoconfirm=Prašome spausti šią nuorodą ir patvirtinti savo registraciją
+_mine.user.register.emailuse=Norėdami prisijungti prie tinklalapio, jūs naudosite savo elektroninio pašto adresą ir slaptažodį
+_mine.user.register.entervalidemail=Prašome įrašyti veikiantį elektroninio pašto adresą
+_mine.user.register.enteryouremail=Įveskite savo elektroninio pašto adresą
+_mine.user.register.errordetails=Apie klaidas smulkiau
+_mine.user.register.finishregistration=Baigti registraciją
+_mine.user.register.iagree=Sutinku
+_mine.user.register.linkexpired=Jūsų naudojama nuoroda registracijai užbaigti klaidinga arba neveikianti
+_mine.user.register.mycodeofconduct=Suprantu, kad My Personal Page man suteikia galimybę susikurti žymes bet kuriam mano norimam objektui. Sutinku, kad nekursiu tokių žymių, kurios būtų šmeižikiškos, žalingos, grasinančios, neteisėtos,įžeidžiančios, pažeidžiančios įstatymus, užgaulios, kurstančios, pornografinės, nepadorios, apgaulingos, grobikiškos privačiųjų ar viešųjų teisių požiūriu,  skleidžiančios rasinę bei etninę  neapykantą ar užgaulios kitais požiūriais. Spustelėjus šį langelį išreiškiu sutikimą laikytis šio susitarimo ir suprantu, kad jei jo nesilaikysiu, mano narystė tinklalapyje My Personal Page bus nutraukta.
+_mine.user.register.mycodeofconductrequired=Privalote sutikti su registravimosi My Personal Page tvarka
+_mine.user.register.password=Slaptažodis
+_mine.user.register.password.choose=Pasirinkite slaptažodį
+_mine.user.register.password.explain=Slaptažodį turi sudaryti 6-30 ženklų
+_mine.user.register.pick.user.name=Prisijungimo metu bus pateikiamas jūsų vartotojo vardas
+_mine.user.register.please.follow.link=Prašome naudotis elektroniniame laiške pateiktąja nuoroda ir užbaigti registraciją
+_mine.user.register.register=Registruotis
+_mine.user.register.registration.failed=Registracijos metu įvyko klaida. Bandykite dar kartą
+_mine.user.register.repeat.password=Pakartokite slaptažodį
+_mine.user.register.requiredfield=Šį lauką būtina užpildyti
+_mine.user.register.username.choose=Pasirinkite vartotojo vardą
+_mine.user.register.username.explain=Jūsų vartotojo vardas bus parodomas jums prisijungiant
 _mine.user.registration.notification.succeed=Registracija baigta
 _mine.user.validation.username.in.use=jau naudojamas. Pasirinkite kitą vartotojo vardą
 _mine.username=Vartotojo vardas
@@ -171,37 +195,14 @@ _portal.ui.navigation.of={preposition, gram.}
 _portal.ui.navigation.page=Puslapis
 _portal.ui.navigation.results=Rezultatai
 _portal.ui.notification.error=Klaida
-_portal.ui.notification.failure.search.saved=Paieškos išsaugojimas nepavyko
 _portal.ui.notification.noitemsfound=Nerasta
 _portal.ui.reset.searchbox=Į pradžią
 _portal.ui.viewingrelateditems=Žiūrite susijusius vienetus
-_register-request.emailalreadyregistered=Šis elektroninio pašto adresas jau užregistruotas
-_register.email.has.been.sent=Elektroninis laiškas išsiųstas šiuo adresu
-_register.emailclicktoconfirm=Prašome spausti šią nuorodą ir patvirtinti savo registraciją
-_register.emailuse=Norėdami prisijungti prie tinklalapio, jūs naudosite savo elektroninio pašto adresą ir slaptažodį
-_register.entervalidemail=Prašome įrašyti veikiantį elektroninio pašto adresą
-_register.enteryouremail=Įveskite savo elektroninio pašto adresą
-_register.errordetails=Apie klaidas smulkiau
-_register.finishregistration=Baigti registraciją
-_register.iagree=Sutinku
-_register.linkexpired=Jūsų naudojama nuoroda registracijai užbaigti klaidinga arba neveikianti
-_register.mycodeofconduct=Suprantu, kad My Personal Page man suteikia galimybę susikurti žymes bet kuriam mano norimam objektui. Sutinku, kad nekursiu tokių žymių, kurios būtų šmeižikiškos, žalingos, grasinančios, neteisėtos,įžeidžiančios, pažeidžiančios įstatymus, užgaulios, kurstančios, pornografinės, nepadorios, apgaulingos, grobikiškos privačiųjų ar viešųjų teisių požiūriu,  skleidžiančios rasinę bei etninę  neapykantą ar užgaulios kitais požiūriais. Spustelėjus šį langelį išreiškiu sutikimą laikytis šio susitarimo ir suprantu, kad jei jo nesilaikysiu, mano narystė tinklalapyje My Personal Page bus nutraukta.
-_register.mycodeofconductrequired=Privalote sutikti su registravimosi My Personal Page tvarka
-_register.password=Slaptažodis
-_register.password.choose=Pasirinkite slaptažodį
-_register.password.explain=Slaptažodį turi sudaryti 6-30 ženklų
-_register.pick.user.name=Prisijungimo metu bus pateikiamas jūsų vartotojo vardas
-_register.please.follow.link=Prašome naudotis elektroniniame laiške pateiktąja nuoroda ir užbaigti registraciją
-_register.register=Registruotis
-_register.registration.failed=Registracijos metu įvyko klaida. Bandykite dar kartą
-_register.repeat.password=Pakartokite slaptažodį
-_register.requiredfield=Šį lauką būtina užpildyti
-_register.username.choose=Pasirinkite vartotojo vardą
-_register.username.explain=Jūsų vartotojo vardas bus parodomas jums prisijungiant
 _search.boolean.and=ir
 _search.boolean.not=ne
 _search.boolean.or=arba
 _search.field.any.field=Bet kuris laukas
+_search.field.country=Valstybė
 _search.field.creator=Kūrėjas
 _search.field.date=Data
 _search.field.description=Aprašymas
@@ -225,7 +226,6 @@ _unused.bosnia.and.herzegovina=Bosnija ir Hercegovina
 _unused.browse.through.time=Peržiūra per tam tikrą laiką
 _unused.contacts=Kontaktai
 _unused.contributors=Bendradarbiaujančios organizacijos
-_unused.country=Valstybė
 _unused.createaccount=Sukurti paskyrą
 _unused.emailwelcome=Sveiki atvykę į ManoEuropeana
 _unused.enewsoptin=Informuokite mane apie Europeana naujoves.
