--- a/portal/src/main/resources/i18n/messages_lv.properties
+++ b/portal/src/main/resources/i18n/messages_lv.properties
@@ -7,6 +7,7 @@ _action.alt.more.info=Saņemt papildus informāciju
 _action.alt.next.page=uz nākošajiem rezultātiem
 _action.alt.previous.page=uz iepriekšējiem rezultātiem
 _action.alt.table.view=Tabulas skats
+_action.chooselanguage=Izvēlēties valodu
 _action.personal.page=Mana Europeana
 _action.previous=Iepriekšējais
 _action.refine.your.search=Precizēt meklēšanu
@@ -95,10 +96,6 @@ _locale.sk=slovāku
 _locale.sl=slovēņu
 _locale.sr=serbu
 _locale.sv=zviedru
-_menu.i18n.chooselanguage=Izvēlēties valodu
-_messages.error.emailformaterror=Lūdzu pārbaudiet jūsu e-pasta adreses pareizību un mēģiniet vēlreiz
-_messages.error.emailsendfailed=E-pasta nosūtīšana neizdevās
-_messages.notification.emailsent=E-pasts nosūtīts
 _metadata.dc.contributor=Līdzradītājs
 _metadata.dc.coverage=Aptvērums
 _metadata.dc.creator=Autors
@@ -153,6 +150,33 @@ _mine.saved.items=Saglabātie objekti
 _mine.saved.searches=Saglabātie meklējumi
 _mine.saved.tags=Saglabātie tagi
 _mine.user.information=Informācija lietotājiem
+_mine.user.notification.emailformaterror=Lūdzu pārbaudiet jūsu e-pasta adreses pareizību un mēģiniet vēlreiz
+_mine.user.notification.emailsendfailed=E-pasta nosūtīšana neizdevās
+_mine.user.notification.emailsent=E-pasts nosūtīts
+_mine.user.notification.failure.search.saved=Meklējuma saglabāšana neizdevās
+_mine.user.register-request.emailalreadyregistered=Šis e-pasta adrese jau ir piereģistrēta
+_mine.user.register.email.has.been.sent=E-pasts tika nosūtīts uz sekojošu adresi
+_mine.user.register.emailclicktoconfirm=Lūdzu klikšķināt uz saiti, lai apstiprinātu savu reģistrāciju
+_mine.user.register.emailuse=Lai pieslēgtos vietnei, lietojiet savu e-pasta adresi un paroli
+_mine.user.register.entervalidemail=Lūdzu ievadiet pareizu e-pasta adresi
+_mine.user.register.enteryouremail=Ievadiet savu e-pastu
+_mine.user.register.errordetails=Kļūdas apraksts
+_mine.user.register.finishregistration=Pabeigt reģistrāciju
+_mine.user.register.iagree=Piekrītu
+_mine.user.register.linkexpired=Saite, ko lietojāt reģistrācijas pabeigšanai, nav derīga vai tās derīguma termiņš ir beidzies
+_mine.user.register.mycodeofconduct=Man ir skaidrs, ka Mana Europeana dod man iespēju izveidot tagus jebkuram dokumentam. Es apņemos neveidot tagus, kas varētu tikt uzskatīti par nomelnojošiem, kaitējošiem, draudus saturošiem, pretlikumīgiem, apmelojošiem, aizskarošiem, apvainojošiem, uzbrūkošiem, iebiedējošiem, pornogrāfiskiem, neķītriem, negodīgiem, privātās vai publiskās tiesības ierobežojošiem, naidīgiem, rasistiski, etniski vai citādus iebildumus raisošiem. Ieklikšķinot šajā lodziņā, es apņemos ievērot šo vienošanos un saprotu, ka pretējā gadījumā mana dalība Mana Europeana tiks apturēta.
+_mine.user.register.mycodeofconductrequired=Lai reģistrētos Mana Europeana, jums ir jāsniedz sava piekrišana mūsu Uzvedības kodeksam.
+_mine.user.register.password=Parole
+_mine.user.register.password.choose=Izvēlēties paroli
+_mine.user.register.password.explain=Parolei jābūt no 6-30 rakstu zīmēm
+_mine.user.register.pick.user.name=Jūsu lietotāja vārds tiks parādīts pēc pieslēgšanās
+_mine.user.register.please.follow.link=Lūdzu izvēlēties e-pastā norādīto saiti, lai pabeigtu reģistrāciju
+_mine.user.register.register=Piereģistrēties
+_mine.user.register.registration.failed=Apstrādājot jūsu reģistrācijas datus, radusies kļūda. Lūdzu mēģiniet vēlreiz
+_mine.user.register.repeat.password=Atkārtot paroli
+_mine.user.register.requiredfield=Šis lauks ir obligāts
+_mine.user.register.username.choose=Izvēlēties lietotāja vārdu
+_mine.user.register.username.explain=Jūsu lietotāja vārds tiks parādīts pēc pieslēgšanās
 _mine.user.registration.notification.succeed=Jūsu reģistrācija ir veiksmīga
 _mine.user.validation.username.in.use=jau ir izmantots. Lūdzu izvēlieties citu.
 _mine.username=Lietotāja vārds
@@ -171,37 +195,14 @@ _portal.ui.navigation.of=no
 _portal.ui.navigation.page=Lappuse
 _portal.ui.navigation.results=Rezultāti
 _portal.ui.notification.error=Kļūda
-_portal.ui.notification.failure.search.saved=Meklējuma saglabāšana neizdevās
 _portal.ui.notification.noitemsfound=Nekas nav atrasts
 _portal.ui.reset.searchbox=Notīrīt
 _portal.ui.viewingrelateditems=Jūs aplūkojat saistītus objektus
-_register-request.emailalreadyregistered=Šis e-pasta adrese jau ir piereģistrēta
-_register.email.has.been.sent=E-pasts tika nosūtīts uz sekojošu adresi
-_register.emailclicktoconfirm=Lūdzu klikšķināt uz saiti, lai apstiprinātu savu reģistrāciju
-_register.emailuse=Lai pieslēgtos vietnei, lietojiet savu e-pasta adresi un paroli
-_register.entervalidemail=Lūdzu ievadiet pareizu e-pasta adresi
-_register.enteryouremail=Ievadiet savu e-pastu
-_register.errordetails=Kļūdas apraksts
-_register.finishregistration=Pabeigt reģistrāciju
-_register.iagree=Piekrītu
-_register.linkexpired=Saite, ko lietojāt reģistrācijas pabeigšanai, nav derīga vai tās derīguma termiņš ir beidzies
-_register.mycodeofconduct=Man ir skaidrs, ka Mana Europeana dod man iespēju izveidot tagus jebkuram dokumentam. Es apņemos neveidot tagus, kas varētu tikt uzskatīti par nomelnojošiem, kaitējošiem, draudus saturošiem, pretlikumīgiem, apmelojošiem, aizskarošiem, apvainojošiem, uzbrūkošiem, iebiedējošiem, pornogrāfiskiem, neķītriem, negodīgiem, privātās vai publiskās tiesības ierobežojošiem, naidīgiem, rasistiski, etniski vai citādus iebildumus raisošiem. Ieklikšķinot šajā lodziņā, es apņemos ievērot šo vienošanos un saprotu, ka pretējā gadījumā mana dalība Mana Europeana tiks apturēta.
-_register.mycodeofconductrequired=Lai reģistrētos Mana Europeana, jums ir jāsniedz sava piekrišana mūsu Uzvedības kodeksam.
-_register.password=Parole
-_register.password.choose=Izvēlēties paroli
-_register.password.explain=Parolei jābūt no 6-30 rakstu zīmēm
-_register.pick.user.name=Jūsu lietotāja vārds tiks parādīts pēc pieslēgšanās
-_register.please.follow.link=Lūdzu izvēlēties e-pastā norādīto saiti, lai pabeigtu reģistrāciju
-_register.register=Piereģistrēties
-_register.registration.failed=Apstrādājot jūsu reģistrācijas datus, radusies kļūda. Lūdzu mēģiniet vēlreiz
-_register.repeat.password=Atkārtot paroli
-_register.requiredfield=Šis lauks ir obligāts
-_register.username.choose=Izvēlēties lietotāja vārdu
-_register.username.explain=Jūsu lietotāja vārds tiks parādīts pēc pieslēgšanās
 _search.boolean.and=un
 _search.boolean.not=ne
 _search.boolean.or=vai
 _search.field.any.field=Jebkurš lauks
+_search.field.country=Valsts
 _search.field.creator=Autors
 _search.field.date=Datums
 _search.field.description=Apraksts
@@ -225,7 +226,6 @@ _unused.bosnia.and.herzegovina=Bosnija un Hercogovina
 _unused.browse.through.time=Pārlūkot laikā
 _unused.contacts=Saziņai
 _unused.contributors=Līdzradītāji
-_unused.country=Valsts
 _unused.createaccount=Izveidot kontu
 _unused.emailwelcome=Sveicināti Mana Europeana
 _unused.enewsoptin=Vēlos būt lietas kursā par Europeana jaunumiem.
