--- a/portal/src/main/resources/i18n/messages_mt.properties
+++ b/portal/src/main/resources/i18n/messages_mt.properties
@@ -7,6 +7,7 @@ _action.alt.more.info=Ikklikkja hawn għal aktar informazzjoni
 _action.alt.next.page=Ikklikkja hawn għall-paġna segwenti tar-riżultati
 _action.alt.previous.page=ikklikkja hawn għall-paġna preċedenti tar-riżultati
 _action.alt.table.view=Dehra għamla ta' tabella
+_action.chooselanguage=Agħżel lingwa
 _action.personal.page=L-Europeana Tiegħi
 _action.previous=Ta' qabel
 _action.refine.your.search=Irfina t-tiftixa tiegħek
@@ -95,10 +96,6 @@ _locale.sk=Slovakk (slo)
 _locale.sl=Sloven (slv)
 _locale.sr=Serb (scc)
 _locale.sv=Żvediż (sve/swe)
-_menu.i18n.chooselanguage=Agħżel lingwa
-_messages.error.emailformaterror=Kun żġur li l-ittre tiegħek ifformattjata sew u erġa' pprova
-_messages.error.emailsendfailed=L-ittre ma setgħetx tintbagħat
-_messages.notification.emailsent=L-ittre ntbagħtet
 _metadata.dc.contributor=Kontributur
 _metadata.dc.coverage=Kopertura
 _metadata.dc.creator=Awtur
@@ -153,6 +150,33 @@ _mine.saved.items=Oġġetti ssejvjati
 _mine.saved.searches=Tiftixiet issejvjati
 _mine.saved.tags=Tikketti ssejvjati
 _mine.user.information=Informazzjoni fuq l-użatur
+_mine.user.notification.emailformaterror=Kun żġur li l-ittre tiegħek ifformattjata sew u erġa' pprova
+_mine.user.notification.emailsendfailed=L-ittre ma setgħetx tintbagħat
+_mine.user.notification.emailsent=L-ittre ntbagħtet
+_mine.user.notification.failure.search.saved=L-issejvjar tat-tiftixa falla
+_mine.user.register-request.emailalreadyregistered=Dan l-indirizz ġa rreġistrat
+_mine.user.register.email.has.been.sent=Intbgħatet ittre fl-indirizz li ġej
+_mine.user.register.emailclicktoconfirm=Ikklikkja l-link li ġejja biex tikkonferma r-reġistrazzjoni tiegħek
+_mine.user.register.emailuse=Biex tidħol fis-sit, tuża l-indirizz u l-password tiegħek
+_mine.user.register.entervalidemail=Daħħal indirizz elettroniku validu
+_mine.user.register.enteryouremail=Daħħal l-indirizz tiegħek
+_mine.user.register.errordetails=Dettalji tal-iżball
+_mine.user.register.finishregistration=Spiċċa r-reġistrazzjoni
+_mine.user.register.iagree=Naqbel
+_mine.user.register.linkexpired=Il-link li użajt biex tirreġistra invalida jew skaduta.
+_mine.user.register.mycodeofconduct=Nifhem li L-Europeana Tiegħi jagħtini l-opportunità li noħloq tikketti għal kwalunkwe oġġett li nixtieq. Naqbel li ma noħloq ebda tikketta li tista' titqies libelluża, dannuża, ta' theddida, illeġittima, defamatorja, trażgredenti, abbużiva, xewwiexa, fastidjuża, pornografika, oxxena, frodulenti, li tinvadi d-drittijiet tal-privatezza jew tal-pubbliċità, odjuża, jew oġġezzjonabbli razzjalment, etnikament jew b'xi mod ieħor. Meta qed nikklikkja dil-kaxxa naqbel li nimxi ma' dan il-ftehim, u nifhem li fin-nuqqas is-sħubija tiegħi f'L-Europeana Tiegħi tiġi mitmuma.
+_mine.user.register.mycodeofconductrequired=Trid taqbel mal-kodiċi tal-kondotta tagħna biex tirreġistra għal L-Europeana Tiegħi
+_mine.user.register.password=Password
+_mine.user.register.password.choose=Agħżel password
+_mine.user.register.password.explain=Il-passwords iridu jkunu twal minn 6 sa 30 karattru
+_mine.user.register.pick.user.name=Meta tidħol jintwera ismek ta' użatur
+_mine.user.register.please.follow.link=Segwi l-link provduta fl-ittre u spiċċa l-proċess ta' reġistrazzjoni
+_mine.user.register.register=Irreġistra
+_mine.user.register.registration.failed=Sar żball waqt li r-reġistrazzjoni tiegħek kienet qed tipprova tiġi pproċessata. Jekk jogħġbok erġa' pprova.
+_mine.user.register.repeat.password=Irrepeti l-password
+_mine.user.register.requiredfield=Dan qasam meħtieġ
+_mine.user.register.username.choose=Agħżel isem ta' użatur
+_mine.user.register.username.explain=Meta tidħol jintwera ismek ta' użatur
 _mine.user.registration.notification.succeed=Irreġistrajt b'suċċess
 _mine.user.validation.username.in.use=qed jintuża. Jekk jogħġbok agħżel isem ieħor ta' użatur
 _mine.username=Isem ta' użatur
@@ -171,37 +195,14 @@ _portal.ui.navigation.of=minn
 _portal.ui.navigation.page=Paġna
 _portal.ui.navigation.results=Riżultati
 _portal.ui.notification.error=Żball
-_portal.ui.notification.failure.search.saved=L-issejvjar tat-tiftixa falla
 _portal.ui.notification.noitemsfound=Ma nstab l-ebda oġġett
 _portal.ui.reset.searchbox=Issettja mill-ġdid
 _portal.ui.viewingrelateditems=Qed tara oġġetti relatati
-_register-request.emailalreadyregistered=Dan l-indirizz ġa rreġistrat
-_register.email.has.been.sent=Intbgħatet ittre fl-indirizz li ġej
-_register.emailclicktoconfirm=Ikklikkja l-link li ġejja biex tikkonferma r-reġistrazzjoni tiegħek
-_register.emailuse=Biex tidħol fis-sit, tuża l-indirizz u l-password tiegħek
-_register.entervalidemail=Daħħal indirizz elettroniku validu
-_register.enteryouremail=Daħħal l-indirizz tiegħek
-_register.errordetails=Dettalji tal-iżball
-_register.finishregistration=Spiċċa r-reġistrazzjoni
-_register.iagree=Naqbel
-_register.linkexpired=Il-link li użajt biex tirreġistra invalida jew skaduta.
-_register.mycodeofconduct=Nifhem li L-Europeana Tiegħi jagħtini l-opportunità li noħloq tikketti għal kwalunkwe oġġett li nixtieq. Naqbel li ma noħloq ebda tikketta li tista' titqies libelluża, dannuża, ta' theddida, illeġittima, defamatorja, trażgredenti, abbużiva, xewwiexa, fastidjuża, pornografika, oxxena, frodulenti, li tinvadi d-drittijiet tal-privatezza jew tal-pubbliċità, odjuża, jew oġġezzjonabbli razzjalment, etnikament jew b'xi mod ieħor. Meta qed nikklikkja dil-kaxxa naqbel li nimxi ma' dan il-ftehim, u nifhem li fin-nuqqas is-sħubija tiegħi f'L-Europeana Tiegħi tiġi mitmuma.
-_register.mycodeofconductrequired=Trid taqbel mal-kodiċi tal-kondotta tagħna biex tirreġistra għal L-Europeana Tiegħi
-_register.password=Password
-_register.password.choose=Agħżel password
-_register.password.explain=Il-passwords iridu jkunu twal minn 6 sa 30 karattru
-_register.pick.user.name=Meta tidħol jintwera ismek ta' użatur
-_register.please.follow.link=Segwi l-link provduta fl-ittre u spiċċa l-proċess ta' reġistrazzjoni
-_register.register=Irreġistra
-_register.registration.failed=Sar żball waqt li r-reġistrazzjoni tiegħek kienet qed tipprova tiġi pproċessata. Jekk jogħġbok erġa' pprova.
-_register.repeat.password=Irrepeti l-password
-_register.requiredfield=Dan qasam meħtieġ
-_register.username.choose=Agħżel isem ta' użatur
-_register.username.explain=Meta tidħol jintwera ismek ta' użatur
 _search.boolean.and=u
 _search.boolean.not=mhux
 _search.boolean.or=jew
 _search.field.any.field=Kwalunkwe qasam
+_search.field.country=Pajjiż
 _search.field.creator=Ħallieq
 _search.field.date=Data
 _search.field.description=Deskrizzjoni
@@ -225,7 +226,6 @@ _unused.bosnia.and.herzegovina=Il-Bożnja-Ħerzegovina
 _unused.browse.through.time=Qalleb kronoloġikament
 _unused.contacts=Kuntatti
 _unused.contributors=Kontributuri
-_unused.country=Pajjiż
 _unused.createaccount=Oħloq kont
 _unused.emailwelcome=Merħba f'L-Europeana Tiegħi
 _unused.enewsoptin=Avżani dwar żviluppi ġodda fl-Europeana
