--- a/portal/src/main/resources/i18n/messages_pl.properties
+++ b/portal/src/main/resources/i18n/messages_pl.properties
@@ -7,6 +7,7 @@ _action.alt.more.info=Kliknij by uzyskać więcej informacji
 _action.alt.next.page=Kliknij by przejść do następnej strony
 _action.alt.previous.page=Kliknij by przejść do poprzedniej strony
 _action.alt.table.view=Widok tabeli
+_action.chooselanguage=Wybierz język
 _action.personal.page=Moja Europeana
 _action.previous=Poprzedni
 _action.refine.your.search=Ogranicz wyszukiwanie
@@ -95,10 +96,6 @@ _locale.sk=słowacki (slo)
 _locale.sl=Słoweński (slv)
 _locale.sr=Serbski (scc)
 _locale.sv=Szwedzki (sve/swe)
-_menu.i18n.chooselanguage=Wybierz język
-_messages.error.emailformaterror=Sprawdź, czy email jest prawidłowo sformatowany i spróbuj ponownie
-_messages.error.emailsendfailed=Email nie został wysłany
-_messages.notification.emailsent=Email wysłany
 _metadata.dc.contributor=Współautor
 _metadata.dc.coverage=Zakres
 _metadata.dc.creator=Autor
@@ -153,6 +150,33 @@ _mine.saved.items=Zachowane dokumenty
 _mine.saved.searches=Zachowane wyszukiwania
 _mine.saved.tags=Zachowane tagi
 _mine.user.information=Informacja o użytkowniku
+_mine.user.notification.emailformaterror=Sprawdź, czy email jest prawidłowo sformatowany i spróbuj ponownie
+_mine.user.notification.emailsendfailed=Email nie został wysłany
+_mine.user.notification.emailsent=Email wysłany
+_mine.user.notification.failure.search.saved=Zachowanie wyszukiwania nie powiodło się
+_mine.user.register-request.emailalreadyregistered=Email został zarejestrowany
+_mine.user.register.email.has.been.sent=Email został wysłany pod następujący adres
+_mine.user.register.emailclicktoconfirm=Kliknij poniższy link by potwierdzić rejestrację
+_mine.user.register.emailuse=W celu zalogowania się na stronę będziesz używać adresu email oraz hasła
+_mine.user.register.entervalidemail=Proszę wprowadzić poprawny adres e-mail
+_mine.user.register.enteryouremail=Wpisz adres email
+_mine.user.register.errordetails=Informacja o błędzie
+_mine.user.register.finishregistration=Zakończ rejestrację
+_mine.user.register.iagree=Wyrażam zgodę
+_mine.user.register.linkexpired=Link, którego używasz w celu dokończenia rejestracji jest niepoprawny lub wygasł
+_mine.user.register.mycodeofconduct=Przyjmuję do wiadomości, że Moja Europeana daje mi sposobność tworzenia tagów dla dowolnych obiektów cyfrowych. Zgadzam się na nietworzenie tagów, które mogłyby być zrozumiane jako oszczercze, krzywdzące, zawierające pogróżki, bezprawne, szkalujące, naruszające prawo, obelżywe, podżegające, nękające, pornograficzne, nieprzyzwoite, fałszywe, zakłócające prawo do prywatności lub reklamy, nienawistne lub budzące sprzeciw ze względów rasowych, etnicznych lub innych. Kliknięcie w to okienko oznacza, że zgadzam się przestrzegać tego regulaminu i rozumiem, że jego złamanie oznaczać będzie wygaśnięcie mojego członkostwa.
+_mine.user.register.mycodeofconductrequired=Aby zarejstrować się w serwisie Moja Europeana, musisz zaakceptować regulamin użytkownika.
+_mine.user.register.password=Hasło
+_mine.user.register.password.choose=Wybierz hasło
+_mine.user.register.password.explain=Hasło musi mieć długość od 6 do znaków
+_mine.user.register.pick.user.name=Nazwa użytkownika zostanie wyświetlona po zalogowaniu
+_mine.user.register.please.follow.link=Prosimy użyć linku znajdującego się w emailu i dokończyć proces rejestracji
+_mine.user.register.register=Rejestracja
+_mine.user.register.registration.failed=Podczas przetwarzania rejestracji wystąpił błąd. Proszę ponowić próbę
+_mine.user.register.repeat.password=Powtórz hasło
+_mine.user.register.requiredfield=To pole jest wymagane
+_mine.user.register.username.choose=Wybierz nazwę użytkownika
+_mine.user.register.username.explain=Nazwa użytkownika będzie wyświetlana po zalogowaniu
 _mine.user.registration.notification.succeed=Rejestracja zakończona powodzeniem
 _mine.user.validation.username.in.use=już wykorzystywana. Proszę wybrać inną nazwę użytkownika
 _mine.username=Nazwa użytkownika
@@ -171,37 +195,14 @@ _portal.ui.navigation.of=z
 _portal.ui.navigation.page=Strona
 _portal.ui.navigation.results=Wyniki
 _portal.ui.notification.error=Błąd
-_portal.ui.notification.failure.search.saved=Zachowanie wyszukiwania nie powiodło się
 _portal.ui.notification.noitemsfound=Brak wyników wyszukiwania
 _portal.ui.reset.searchbox=Wyczyść
 _portal.ui.viewingrelateditems=Oglądasz powiązane dokumenty
-_register-request.emailalreadyregistered=Email został zarejestrowany
-_register.email.has.been.sent=Email został wysłany pod następujący adres
-_register.emailclicktoconfirm=Kliknij poniższy link by potwierdzić rejestrację
-_register.emailuse=W celu zalogowania się na stronę będziesz używać adresu email oraz hasła
-_register.entervalidemail=Proszę wprowadzić poprawny adres e-mail
-_register.enteryouremail=Wpisz adres email
-_register.errordetails=Informacja o błędzie
-_register.finishregistration=Zakończ rejestrację
-_register.iagree=Wyrażam zgodę
-_register.linkexpired=Link, którego używasz w celu dokończenia rejestracji jest niepoprawny lub wygasł
-_register.mycodeofconduct=Przyjmuję do wiadomości, że Moja Europeana daje mi sposobność tworzenia tagów dla dowolnych obiektów cyfrowych. Zgadzam się na nietworzenie tagów, które mogłyby być zrozumiane jako oszczercze, krzywdzące, zawierające pogróżki, bezprawne, szkalujące, naruszające prawo, obelżywe, podżegające, nękające, pornograficzne, nieprzyzwoite, fałszywe, zakłócające prawo do prywatności lub reklamy, nienawistne lub budzące sprzeciw ze względów rasowych, etnicznych lub innych. Kliknięcie w to okienko oznacza, że zgadzam się przestrzegać tego regulaminu i rozumiem, że jego złamanie oznaczać będzie wygaśnięcie mojego członkostwa.
-_register.mycodeofconductrequired=Aby zarejstrować się w serwisie Moja Europeana, musisz zaakceptować regulamin użytkownika.
-_register.password=Hasło
-_register.password.choose=Wybierz hasło
-_register.password.explain=Hasło musi mieć długość od 6 do znaków
-_register.pick.user.name=Nazwa użytkownika zostanie wyświetlona po zalogowaniu
-_register.please.follow.link=Prosimy użyć linku znajdującego się w emailu i dokończyć proces rejestracji
-_register.register=Rejestracja
-_register.registration.failed=Podczas przetwarzania rejestracji wystąpił błąd. Proszę ponowić próbę
-_register.repeat.password=Powtórz hasło
-_register.requiredfield=To pole jest wymagane
-_register.username.choose=Wybierz nazwę użytkownika
-_register.username.explain=Nazwa użytkownika będzie wyświetlana po zalogowaniu
 _search.boolean.and=i
 _search.boolean.not=nie
 _search.boolean.or=lub
 _search.field.any.field=Dowolne pole
+_search.field.country=Kraj
 _search.field.creator=Twórca
 _search.field.date=Data
 _search.field.description=Opis
@@ -225,7 +226,6 @@ _unused.bosnia.and.herzegovina=Bośnia i Hercegowina
 _unused.browse.through.time=Przeglądaj oś czasu
 _unused.contacts=Kontakt
 _unused.contributors=Dostawcy treści
-_unused.country=Kraj
 _unused.createaccount=Utwórz konto
 _unused.emailwelcome=Witamy w Moja Europeana
 _unused.enewsoptin=Chcę być informowany o nowościach Europeany
