--- a/portal/src/main/resources/i18n/messages_ro.properties
+++ b/portal/src/main/resources/i18n/messages_ro.properties
@@ -7,6 +7,7 @@ _action.alt.more.info=Click pentru a obţine mai multă informaţie
 _action.alt.next.page=Click aici pentru următoarea pagină cu rezultate
 _action.alt.previous.page=Click aici pentru precedenta pagină cu rezultate
 _action.alt.table.view=Prezentare tabelară
+_action.chooselanguage=Alegeţi o limbă
 _action.personal.page=My Personal Page
 _action.previous=Precedentul
 _action.refine.your.search=Rafinaţi-vă interogarea
@@ -95,10 +96,6 @@ _locale.sk=Slovacă (slo)
 _locale.sl=Slovenă (slv)
 _locale.sr=Sârbă (scc)
 _locale.sv=Suedeză (sve/swe)
-_menu.i18n.chooselanguage=Alegeţi o limbă
-_messages.error.emailformaterror=Vă rog să vă asiguraţi că adresa dvs. de meil este corect formată şi reîncercaţi
-_messages.error.emailsendfailed=Meilul n-a putut fi expediat
-_messages.notification.emailsent=Meil expediat
 _metadata.dc.contributor=Contributor
 _metadata.dc.coverage=Relatare
 _metadata.dc.creator=Autor
@@ -153,6 +150,33 @@ _mine.saved.items=Resurse salvate
 _mine.saved.searches=Interogări salvate
 _mine.saved.tags=Descriptori salvaţi
 _mine.user.information=Informaţii despre utilizator
+_mine.user.notification.emailformaterror=Vă rog să vă asiguraţi că adresa dvs. de meil este corect formată şi reîncercaţi
+_mine.user.notification.emailsendfailed=Meilul n-a putut fi expediat
+_mine.user.notification.emailsent=Meil expediat
+_mine.user.notification.failure.search.saved=Salvarea interogării a eşuat
+_mine.user.register-request.emailalreadyregistered=Această adresă de meil este deja înregistrată
+_mine.user.register.email.has.been.sent=Un meil a fost expediat la următoarea adresă
+_mine.user.register.emailclicktoconfirm=Vă rug să clickaţi pe acest link pentru a vă confirma înregistrarea
+_mine.user.register.emailuse=Veţi utiliza adresa dvs. de meil împreună cu parola dvs. pentru a vă loga pe sait
+_mine.user.register.entervalidemail=Vă rugăm să introduceţi o adresa de meil validă
+_mine.user.register.enteryouremail=Introduceţi adresa dvs. de meil
+_mine.user.register.errordetails=Detalii ale erorii
+_mine.user.register.finishregistration=Finalizaţi înregistrarea
+_mine.user.register.iagree=Consimt
+_mine.user.register.linkexpired=Link-ul pe care l-aţi folosit pentru a completa înregistrarea este invalid sau expirat.
+_mine.user.register.mycodeofconduct=Înţeleg că My Personal Page îmi oferă posibilitatea de a crea descriptori pentru oricare resursă. Sunt de acord să nu creez descriptori care pot fi consideraţi defăimători, vătămători, ameninţători, ilegali, abuzivi, inflamatori, deranjanţi, pornografici, obsceni, frauduloşi, care încalcă intimitatea sau drepturile de publicitate, odioşi sau care pot provoca obiecţii de natură rasială, etnică sau de altă natură. Bifând această casetă, consimt să respect această înţelegere, şi înţeleg că dacă o încalc, calitatea mea de membru al My Personal Page va fi anulată.
+_mine.user.register.mycodeofconductrequired=Pentru a vă înregistra în My Personal Page trebuie să acceptați codul nostru de conduită
+_mine.user.register.password=Parola
+_mine.user.register.password.choose=Alegeţi o parolă
+_mine.user.register.password.explain=Parola trebuie să aibă o lungime de 6 - 30 de caractere
+_mine.user.register.pick.user.name=Numele dvs. utilizator va fi afişat când sunteţi logat
+_mine.user.register.please.follow.link=Vă rog urmaţi link-ul furnizat în meil şi finalizaţi procedura de înregistrare
+_mine.user.register.register=Înregistraţi-vă
+_mine.user.register.registration.failed=O eroare s-a strecurat în timpul procesării înregistrării dvs. Vă rog să încercaţi din nou
+_mine.user.register.repeat.password=Repetaţi parola
+_mine.user.register.requiredfield=Acesta este un câmp obligatoriu
+_mine.user.register.username.choose=Alegeţi un nume-utilizator
+_mine.user.register.username.explain=Numele dvs. utilizator va fi afişat cînd sunteţi logat
 _mine.user.registration.notification.succeed=V-aţi înregistrat cu succes
 _mine.user.validation.username.in.use=este deja utilizat. Vă rog să alegeţi un alt nume-utilizator
 _mine.username=Uneme-utilizator
@@ -171,37 +195,14 @@ _portal.ui.navigation.of=a(l)/ai/ale
 _portal.ui.navigation.page=Pagină
 _portal.ui.navigation.results=rezultate
 _portal.ui.notification.error=Eroare
-_portal.ui.notification.failure.search.saved=Salvarea interogării a eşuat
 _portal.ui.notification.noitemsfound=Nu s-a găsit nici o resursă
 _portal.ui.reset.searchbox=Resetează
 _portal.ui.viewingrelateditems=Vedeţi toate resursele asociate
-_register-request.emailalreadyregistered=Această adresă de meil este deja înregistrată
-_register.email.has.been.sent=Un meil a fost expediat la următoarea adresă
-_register.emailclicktoconfirm=Vă rug să clickaţi pe acest link pentru a vă confirma înregistrarea
-_register.emailuse=Veţi utiliza adresa dvs. de meil împreună cu parola dvs. pentru a vă loga pe sait
-_register.entervalidemail=Vă rugăm să introduceţi o adresa de meil validă
-_register.enteryouremail=Introduceţi adresa dvs. de meil
-_register.errordetails=Detalii ale erorii
-_register.finishregistration=Finalizaţi înregistrarea
-_register.iagree=Consimt
-_register.linkexpired=Link-ul pe care l-aţi folosit pentru a completa înregistrarea este invalid sau expirat.
-_register.mycodeofconduct=Înţeleg că My Personal Page îmi oferă posibilitatea de a crea descriptori pentru oricare resursă. Sunt de acord să nu creez descriptori care pot fi consideraţi defăimători, vătămători, ameninţători, ilegali, abuzivi, inflamatori, deranjanţi, pornografici, obsceni, frauduloşi, care încalcă intimitatea sau drepturile de publicitate, odioşi sau care pot provoca obiecţii de natură rasială, etnică sau de altă natură. Bifând această casetă, consimt să respect această înţelegere, şi înţeleg că dacă o încalc, calitatea mea de membru al My Personal Page va fi anulată.
-_register.mycodeofconductrequired=Pentru a vă înregistra în My Personal Page trebuie să acceptați codul nostru de conduită
-_register.password=Parola
-_register.password.choose=Alegeţi o parolă
-_register.password.explain=Parola trebuie să aibă o lungime de 6 - 30 de caractere
-_register.pick.user.name=Numele dvs. utilizator va fi afişat când sunteţi logat
-_register.please.follow.link=Vă rog urmaţi link-ul furnizat în meil şi finalizaţi procedura de înregistrare
-_register.register=Înregistraţi-vă
-_register.registration.failed=O eroare s-a strecurat în timpul procesării înregistrării dvs. Vă rog să încercaţi din nou
-_register.repeat.password=Repetaţi parola
-_register.requiredfield=Acesta este un câmp obligatoriu
-_register.username.choose=Alegeţi un nume-utilizator
-_register.username.explain=Numele dvs. utilizator va fi afişat cînd sunteţi logat
 _search.boolean.and=şi
 _search.boolean.not=nu
 _search.boolean.or=sau
 _search.field.any.field=Oricare câmp
+_search.field.country=Ţara
 _search.field.creator=Creator
 _search.field.date=Data
 _search.field.description=Descriere
@@ -225,7 +226,6 @@ _unused.bosnia.and.herzegovina=Bosnia şi Herzegovina
 _unused.browse.through.time=Baleiază cronologic
 _unused.contacts=Contacte
 _unused.contributors=Contributori
-_unused.country=Ţara
 _unused.createaccount=Creaţi un cont
 _unused.emailwelcome=Bine ați venit pe My Personal Page
 _unused.enewsoptin=Țineți-mă la curent cu evoluțiile Europeana
