--- a/portal/src/main/resources/i18n/messages_sl.properties
+++ b/portal/src/main/resources/i18n/messages_sl.properties
@@ -7,6 +7,7 @@ _action.alt.more.info=Za več informacij kliknite tukaj
 _action.alt.next.page=Za prikaz naslednje strani z rezultati kliknite tukaj
 _action.alt.previous.page=za prikaz prejšnje strani z rezultati kliknite tukaj
 _action.alt.table.view=Poglej kot tabelo
+_action.chooselanguage=Izberite jezik
 _action.personal.page=Moja Europeana
 _action.previous=Nazaj
 _action.refine.your.search=Napredno iskanje
@@ -95,10 +96,6 @@ _locale.sk=slovaščina (slo)
 _locale.sl=slovenščina (slv)
 _locale.sr=srbščina (scc)
 _locale.sv=švedščina (sve/swe)
-_menu.i18n.chooselanguage=Izberite jezik
-_messages.error.emailformaterror=Prosimo preverite, če je navedeni naslov pravilen, nato poskusite znova
-_messages.error.emailsendfailed=Sporočila ni bilo mogoče poslati
-_messages.notification.emailsent=Sporočilo poslano
 _metadata.dc.contributor=Prispevali
 _metadata.dc.coverage=Pokritost
 _metadata.dc.creator=Avtor
@@ -153,6 +150,33 @@ _mine.saved.items=Shranjeni predmeti
 _mine.saved.searches=Shranjena iskanja
 _mine.saved.tags=Shranjeni zaznamki
 _mine.user.information=Podatki o uporabniku
+_mine.user.notification.emailformaterror=Prosimo preverite, če je navedeni naslov pravilen, nato poskusite znova
+_mine.user.notification.emailsendfailed=Sporočila ni bilo mogoče poslati
+_mine.user.notification.emailsent=Sporočilo poslano
+_mine.user.notification.failure.search.saved=Shranjevanje iskanja ni uspelo
+_mine.user.register-request.emailalreadyregistered=Uporabnik s tem elektronskim naslovom se je že registriral
+_mine.user.register.email.has.been.sent=Na navedeni naslov smo poslali sporočilo
+_mine.user.register.emailclicktoconfirm=Za potrditev registracije prosimo sledite spodnji povezavi
+_mine.user.register.emailuse=Uporabniško ime in geslo boste potrebovali za prijavo na stran
+_mine.user.register.entervalidemail=Prosimo vnesite veljaven elektronski naslov
+_mine.user.register.enteryouremail=Vnesite vaš elektronski naslov
+_mine.user.register.errordetails=Podrobnosti o napaki
+_mine.user.register.finishregistration=Zaključi registracijo
+_mine.user.register.iagree=Strinjam se
+_mine.user.register.linkexpired=Povezava, ki ste jo vnesli za zaključek registracije, je neveljavna oziroma je potekla.
+_mine.user.register.mycodeofconduct=Storitev Moja Europeana mi omogoča ustvarjanje zaznamkov za kateri koli predmet. Zavedam se, da ustvarjanje zaznamkov z namenom klevetanja, oškodovanja, groženja, obrekovanja, žaljenja, podžiganja rasnih, etničnih ali drugih predsodkov, nadlegovanja, goljufanja, širjenja neprimernih vsebin, kršenja osebnih ali drugih pravic, ali kakršne koli druge zlorabe storitve ni dovoljeno. S klikom na »Strinjam se« izražam svoje soglasje k zgornjim pogojem; strinjam se tudi, da se mi, v kolikor navedenih pogojev ne bom spoštoval, članstvo lahko ukine.
+_mine.user.register.mycodeofconductrequired=Za registracijo v storitev Moja Europeana morate potrditi, da se strinjate s pravili ravnanja
+_mine.user.register.password=Geslo
+_mine.user.register.password.choose=Izberite geslo
+_mine.user.register.password.explain=Geslo mora biti dolgo od 6 do 30 črk.
+_mine.user.register.pick.user.name=Vaše uporabniško ime bo prikazano, ko boste prijavljeni
+_mine.user.register.please.follow.link=Za zaključek registracije prosimo sledite povezavi v sporočilu
+_mine.user.register.register=Registracija
+_mine.user.register.registration.failed=Med obdelavo vaše registracije je prišlo do napake. Prosimo, poskusite znova
+_mine.user.register.repeat.password=Ponovno vnesite geslo
+_mine.user.register.requiredfield=To polje je obvezno
+_mine.user.register.username.choose=Izberite uporabniško ime
+_mine.user.register.username.explain=Vaše uporabniško ime bo prikazano, ko boste prijavljeni
 _mine.user.registration.notification.succeed=Uspešno ste se registrirali
 _mine.user.validation.username.in.use=je že uporabljeno. Prosimo, izberite drugo uporabniško ime
 _mine.username=Uporabniško ime
@@ -171,37 +195,14 @@ _portal.ui.navigation.of=od
 _portal.ui.navigation.page=Stran
 _portal.ui.navigation.results=Rezultati
 _portal.ui.notification.error=Napaka
-_portal.ui.notification.failure.search.saved=Shranjevanje iskanja ni uspelo
 _portal.ui.notification.noitemsfound=Ni zadetkov
 _portal.ui.reset.searchbox=Ponastavi
 _portal.ui.viewingrelateditems=Pregledujete sorodne predmete
-_register-request.emailalreadyregistered=Uporabnik s tem elektronskim naslovom se je že registriral
-_register.email.has.been.sent=Na navedeni naslov smo poslali sporočilo
-_register.emailclicktoconfirm=Za potrditev registracije prosimo sledite spodnji povezavi
-_register.emailuse=Uporabniško ime in geslo boste potrebovali za prijavo na stran
-_register.entervalidemail=Prosimo vnesite veljaven elektronski naslov
-_register.enteryouremail=Vnesite vaš elektronski naslov
-_register.errordetails=Podrobnosti o napaki
-_register.finishregistration=Zaključi registracijo
-_register.iagree=Strinjam se
-_register.linkexpired=Povezava, ki ste jo vnesli za zaključek registracije, je neveljavna oziroma je potekla.
-_register.mycodeofconduct=Storitev Moja Europeana mi omogoča ustvarjanje zaznamkov za kateri koli predmet. Zavedam se, da ustvarjanje zaznamkov z namenom klevetanja, oškodovanja, groženja, obrekovanja, žaljenja, podžiganja rasnih, etničnih ali drugih predsodkov, nadlegovanja, goljufanja, širjenja neprimernih vsebin, kršenja osebnih ali drugih pravic, ali kakršne koli druge zlorabe storitve ni dovoljeno. S klikom na »Strinjam se« izražam svoje soglasje k zgornjim pogojem; strinjam se tudi, da se mi, v kolikor navedenih pogojev ne bom spoštoval, članstvo lahko ukine.
-_register.mycodeofconductrequired=Za registracijo v storitev Moja Europeana morate potrditi, da se strinjate s pravili ravnanja
-_register.password=Geslo
-_register.password.choose=Izberite geslo
-_register.password.explain=Geslo mora biti dolgo od 6 do 30 črk.
-_register.pick.user.name=Vaše uporabniško ime bo prikazano, ko boste prijavljeni
-_register.please.follow.link=Za zaključek registracije prosimo sledite povezavi v sporočilu
-_register.register=Registracija
-_register.registration.failed=Med obdelavo vaše registracije je prišlo do napake. Prosimo, poskusite znova
-_register.repeat.password=Ponovno vnesite geslo
-_register.requiredfield=To polje je obvezno
-_register.username.choose=Izberite uporabniško ime
-_register.username.explain=Vaše uporabniško ime bo prikazano, ko boste prijavljeni
 _search.boolean.and=in
 _search.boolean.not=in ne
 _search.boolean.or=ali
 _search.field.any.field=Vsa polja
+_search.field.country=Država
 _search.field.creator=Avtor
 _search.field.date=Datum
 _search.field.description=Opis
@@ -225,7 +226,6 @@ _unused.bosnia.and.herzegovina=Bosna in Hercegovina
 _unused.browse.through.time=Brskajte po času
 _unused.contacts=Kontakt
 _unused.contributors=Prispevali
-_unused.country=Država
 _unused.createaccount=Ustvari račun
 _unused.emailwelcome=Dobrodošli na Moji Europeani
 _unused.enewsoptin=Obveščajte me o novostih na Europeani.
