--- a/portal/src/main/resources/i18n/messages_sv.properties
+++ b/portal/src/main/resources/i18n/messages_sv.properties
@@ -7,6 +7,7 @@ _action.alt.more.info=Klicka här för mer information
 _action.alt.next.page=Klicka här för nästa sida bland resultaten
 _action.alt.previous.page=Klicka här för föregående sida bland resultaten
 _action.alt.table.view=Tabellvisning
+_action.chooselanguage=Välj språk
 _action.personal.page=Mitt Europeana
 _action.previous=Föregående
 _action.refine.your.search=Förfina din sökning
@@ -95,10 +96,6 @@ _locale.sk=Slovakiska (slo)
 _locale.sl=Slovenska (slv)
 _locale.sr=Serbiska (scc)
 _locale.sv=Svenska (sve/swe)
-_menu.i18n.chooselanguage=Välj språk
-_messages.error.emailformaterror=Kontrollera att e-postadressen är rättstavad och försök igen
-_messages.error.emailsendfailed=Det gick inte att skicka e-post
-_messages.notification.emailsent=E-post har skickats
 _metadata.dc.contributor=Medarbetare
 _metadata.dc.coverage=Täckning
 _metadata.dc.creator=Författare
@@ -153,6 +150,33 @@ _mine.saved.items=Sparade objekt
 _mine.saved.searches=Sparade sökningar
 _mine.saved.tags=Sparade märkningar
 _mine.user.information=Användaruppgifter
+_mine.user.notification.emailformaterror=Kontrollera att e-postadressen är rättstavad och försök igen
+_mine.user.notification.emailsendfailed=Det gick inte att skicka e-post
+_mine.user.notification.emailsent=E-post har skickats
+_mine.user.notification.failure.search.saved=Det gick inte att spara sökningen
+_mine.user.register-request.emailalreadyregistered=Den här e-postadressen har redan registrerats
+_mine.user.register.email.has.been.sent=E-post har skickats till följande adress
+_mine.user.register.emailclicktoconfirm=Bekräfta din registering genom att klicka på länken nedan
+_mine.user.register.emailuse=Du loggar in på webbplatsen med din e-postadress och ett lösenord
+_mine.user.register.entervalidemail=Ange en giltig e-postadress
+_mine.user.register.enteryouremail=Ange din e-postadress
+_mine.user.register.errordetails=Felinformation
+_mine.user.register.finishregistration=Sluför registreringen
+_mine.user.register.iagree=Jag accepterar
+_mine.user.register.linkexpired=Länken som du använde för att slutföra registreringen är ogiltig eller inaktuell
+_mine.user.register.mycodeofconduct=Jag är medveten om att jag kan lägga till märkningar för vilket objekt som helst på My Personal Page. Jag lovar att inte att skapa några märkningar som skulle kunna uppfattas som ärekränkande, hotfulla, lagstridiga, nedsättande, rättighetskränkande, provocerande, pornografiska, obscena, falska, hatiska eller stötande med avseende på etnicitet och ursprung, eller som skulle kunna vara till skada för någon eller tolkas som smutskastning, trakasseri, kränkning av publiceringsrätt eller privatlivets helgd. Genom att klicka i den här rutan lovar jag att följa reglerna i det här avtalet, och jag är medveten om att medlemskapet i My Europeana annars avslutas.
+_mine.user.register.mycodeofconductrequired=Du måste acceptera våra regler för uppförande innan du kan registrera dig på My Personal Page
+_mine.user.register.password=Lösenord
+_mine.user.register.password.choose=Välj ett lösenord
+_mine.user.register.password.explain=Lösenord får vara 6-30 ord långa
+_mine.user.register.pick.user.name=Ditt användarnamn visas när du har loggat in
+_mine.user.register.please.follow.link=Klicka på länken i e-postmeddelandet och gör klart registreringen
+_mine.user.register.register=Registrera
+_mine.user.register.registration.failed=Ett fel uppstod vid behandlingen av din registrering. Försök igen
+_mine.user.register.repeat.password=Upprepa lösenordet
+_mine.user.register.requiredfield=Detta är ett obligatoriskt fält
+_mine.user.register.username.choose=Välj ett användarnamn
+_mine.user.register.username.explain=Ditt användarnamn visas när du har loggat in
 _mine.user.registration.notification.succeed=Du har nu registrerat dig
 _mine.user.validation.username.in.use=används redan. Välj ett annat användarnamn
 _mine.username=Användarnamn
@@ -171,37 +195,14 @@ _portal.ui.navigation.of=av
 _portal.ui.navigation.page=Sida
 _portal.ui.navigation.results=Resultat
 _portal.ui.notification.error=Fel
-_portal.ui.notification.failure.search.saved=Det gick inte att spara sökningen
 _portal.ui.notification.noitemsfound=Inga objekt hittades
 _portal.ui.reset.searchbox=Återställ
 _portal.ui.viewingrelateditems=Du visar liknande objekt
-_register-request.emailalreadyregistered=Den här e-postadressen har redan registrerats
-_register.email.has.been.sent=E-post har skickats till följande adress
-_register.emailclicktoconfirm=Bekräfta din registering genom att klicka på länken nedan
-_register.emailuse=Du loggar in på webbplatsen med din e-postadress och ett lösenord
-_register.entervalidemail=Ange en giltig e-postadress
-_register.enteryouremail=Ange din e-postadress
-_register.errordetails=Felinformation
-_register.finishregistration=Sluför registreringen
-_register.iagree=Jag accepterar
-_register.linkexpired=Länken som du använde för att slutföra registreringen är ogiltig eller inaktuell
-_register.mycodeofconduct=Jag är medveten om att jag kan lägga till märkningar för vilket objekt som helst på My Personal Page. Jag lovar att inte att skapa några märkningar som skulle kunna uppfattas som ärekränkande, hotfulla, lagstridiga, nedsättande, rättighetskränkande, provocerande, pornografiska, obscena, falska, hatiska eller stötande med avseende på etnicitet och ursprung, eller som skulle kunna vara till skada för någon eller tolkas som smutskastning, trakasseri, kränkning av publiceringsrätt eller privatlivets helgd. Genom att klicka i den här rutan lovar jag att följa reglerna i det här avtalet, och jag är medveten om att medlemskapet i My Europeana annars avslutas.
-_register.mycodeofconductrequired=Du måste acceptera våra regler för uppförande innan du kan registrera dig på My Personal Page
-_register.password=Lösenord
-_register.password.choose=Välj ett lösenord
-_register.password.explain=Lösenord får vara 6-30 ord långa
-_register.pick.user.name=Ditt användarnamn visas när du har loggat in
-_register.please.follow.link=Klicka på länken i e-postmeddelandet och gör klart registreringen
-_register.register=Registrera
-_register.registration.failed=Ett fel uppstod vid behandlingen av din registrering. Försök igen
-_register.repeat.password=Upprepa lösenordet
-_register.requiredfield=Detta är ett obligatoriskt fält
-_register.username.choose=Välj ett användarnamn
-_register.username.explain=Ditt användarnamn visas när du har loggat in
 _search.boolean.and=och
 _search.boolean.not=inte
 _search.boolean.or=eller
 _search.field.any.field=Alla fält
+_search.field.country=Land
 _search.field.creator=Upphovsperson
 _search.field.date=Datum
 _search.field.description=Beskrivning
@@ -225,7 +226,6 @@ _unused.bosnia.and.herzegovina=Bosnien och Hercegovina
 _unused.browse.through.time=Bläddra bland alla tider
 _unused.contacts=Kontakt
 _unused.contributors=Medverkande
-_unused.country=Land
 _unused.createaccount=Skapa ett konto
 _unused.emailwelcome=Välkommen till Mitt Europeana
 _unused.enewsoptin=Håll mig underrättad om ny utveckling inom Europeana
