--- a/portal/src/main/resources/i18n/messages_xx.properties
+++ b/portal/src/main/resources/i18n/messages_xx.properties
@@ -7,6 +7,7 @@ _action.alt.more.info=XXXXXX
 _action.alt.next.page=XXXXXX
 _action.alt.previous.page=XXXXXX
 _action.alt.table.view=XXXXXX
+_action.chooselanguage=XXXXXX
 _action.personal.page=XXXXXX
 _action.previous=XXXXXX
 _action.refine.your.search=XXXXXX
@@ -95,10 +96,6 @@ _locale.sk=XXXXXX
 _locale.sl=XXXXXX
 _locale.sr=XXXXXX
 _locale.sv=XXXXXX
-_menu.i18n.chooselanguage=XXXXXX
-_messages.error.emailformaterror=XXXXXX
-_messages.error.emailsendfailed=XXXXXX
-_messages.notification.emailsent=XXXXXX
 _metadata.dc.contributor=XXXXXX
 _metadata.dc.coverage=XXXXXX
 _metadata.dc.creator=XXXXXX
@@ -153,6 +150,33 @@ _mine.saved.items=XXXXXX
 _mine.saved.searches=XXXXXX
 _mine.saved.tags=XXXXXX
 _mine.user.information=XXXXXX
+_mine.user.notification.emailformaterror=XXXXXX
+_mine.user.notification.emailsendfailed=XXXXXX
+_mine.user.notification.emailsent=XXXXXX
+_mine.user.notification.failure.search.saved=XXXXXX
+_mine.user.register-request.emailalreadyregistered=XXXXXX
+_mine.user.register.email.has.been.sent=XXXXXX
+_mine.user.register.emailclicktoconfirm=XXXXXX
+_mine.user.register.emailuse=XXXXXX
+_mine.user.register.entervalidemail=XXXXXX
+_mine.user.register.enteryouremail=XXXXXX
+_mine.user.register.errordetails=XXXXXX
+_mine.user.register.finishregistration=XXXXXX
+_mine.user.register.iagree=XXXXXX
+_mine.user.register.linkexpired=XXXXXX
+_mine.user.register.mycodeofconduct=XXXXXX
+_mine.user.register.mycodeofconductrequired=XXXXXX
+_mine.user.register.password=XXXXXX
+_mine.user.register.password.choose=XXXXXX
+_mine.user.register.password.explain=XXXXXX
+_mine.user.register.pick.user.name=XXXXXX
+_mine.user.register.please.follow.link=XXXXXX
+_mine.user.register.register=XXXXXX
+_mine.user.register.registration.failed=XXXXXX
+_mine.user.register.repeat.password=XXXXXX
+_mine.user.register.requiredfield=XXXXXX
+_mine.user.register.username.choose=XXXXXX
+_mine.user.register.username.explain=XXXXXX
 _mine.user.registration.notification.succeed=XXXXXX
 _mine.user.validation.username.in.use=XXXXXX
 _mine.username=XXXXXX
@@ -171,37 +195,14 @@ _portal.ui.navigation.of=XXXXXX
 _portal.ui.navigation.page=XXXXXX
 _portal.ui.navigation.results=XXXXXX
 _portal.ui.notification.error=XXXXXX
-_portal.ui.notification.failure.search.saved=XXXXXX
 _portal.ui.notification.noitemsfound=XXXXXX
 _portal.ui.reset.searchbox=XXXXXX
 _portal.ui.viewingrelateditems=XXXXXX
-_register-request.emailalreadyregistered=XXXXXX
-_register.email.has.been.sent=XXXXXX
-_register.emailclicktoconfirm=XXXXXX
-_register.emailuse=XXXXXX
-_register.entervalidemail=XXXXXX
-_register.enteryouremail=XXXXXX
-_register.errordetails=XXXXXX
-_register.finishregistration=XXXXXX
-_register.iagree=XXXXXX
-_register.linkexpired=XXXXXX
-_register.mycodeofconduct=XXXXXX
-_register.mycodeofconductrequired=XXXXXX
-_register.password=XXXXXX
-_register.password.choose=XXXXXX
-_register.password.explain=XXXXXX
-_register.pick.user.name=XXXXXX
-_register.please.follow.link=XXXXXX
-_register.register=XXXXXX
-_register.registration.failed=XXXXXX
-_register.repeat.password=XXXXXX
-_register.requiredfield=XXXXXX
-_register.username.choose=XXXXXX
-_register.username.explain=XXXXXX
 _search.boolean.and=XXXXXX
 _search.boolean.not=XXXXXX
 _search.boolean.or=XXXXXX
 _search.field.any.field=XXXXXX
+_search.field.country=XXXXXX
 _search.field.creator=XXXXXX
 _search.field.date=XXXXXX
 _search.field.description=XXXXXX
@@ -225,7 +226,6 @@ _unused.bosnia.and.herzegovina=XXXXXX
 _unused.browse.through.time=XXXXXX
 _unused.contacts=XXXXXX
 _unused.contributors=XXXXXX
-_unused.country=XXXXXX
 _unused.createaccount=XXXXXX
 _unused.emailwelcome=XXXXXX
 _unused.enewsoptin=XXXXXX
