--- a/portal/src/main/resources/i18n/messages_en.properties
+++ b/portal/src/main/resources/i18n/messages_en.properties
@@ -7,6 +7,7 @@ _action.alt.more.info=Click for more information
 _action.alt.next.page=Click here for next page of results
 _action.alt.previous.page=click here for previous page of results
 _action.alt.table.view=Table view
+_action.chooselanguage=Choose a language
 _action.form.submit=Submit
 _action.personal.page=My Personal Page
 _action.previous=Previous
@@ -15,11 +16,11 @@ _action.return.to.results=Return to results
 _action.save.this.search=Save this search
 _action.save.to.mine=Save to My Personal Page
 _action.search=Search
+_action.search.order.by=Order by
 _action.see.all.related.items=See all related items
 _action.send=Send
 _action.share.with.friend=Share with a friend
 _action.view.in.original.context=View in original context
-_actions.search.order.by=Order by
 _cms.administration.images=Image administration
 _cms.administration.pages=Page administration
 _cms.administration.title=Administration
@@ -141,10 +142,6 @@ _locale.sk=Slovak (slo)
 _locale.sl=Slovenian (slv)
 _locale.sr=Serbian (scc)
 _locale.sv=Swedish (sve/swe)
-_menu.i18n.chooselanguage=Choose a language
-_messages.error.emailformaterror=Please make sure your email is correctly formatted and try again
-_messages.error.emailsendfailed=Email could not be sent
-_messages.notification.emailsent=Email sent
 _metadata.abm.contentprovider=Provider
 _metadata.abm.county=County
 _metadata.abm.data.provider=Provider
@@ -209,7 +206,34 @@ _mine.saved.searches=Saved searches
 _mine.saved.tags=Saved tags
 _mine.user.information=User information
 _mine.user.last.login.date=Last login date
+_mine.user.notification.emailformaterror=Please make sure your email is correctly formatted and try again
+_mine.user.notification.emailsendfailed=Email could not be sent
+_mine.user.notification.emailsent=Email sent
+_mine.user.notification.failure.search.saved=Saving search failed
 _mine.user.notification.login.required=You must login or register
+_mine.user.register-request.emailalreadyregistered=This email is already registered
+_mine.user.register.email.has.been.sent=An email has been sent to the following address
+_mine.user.register.emailclicktoconfirm=Please click on the following link to confirm your registration
+_mine.user.register.emailuse=You will use your email together with your password to log into the site
+_mine.user.register.entervalidemail=Please enter a valid email address
+_mine.user.register.enteryouremail=Enter your email
+_mine.user.register.errordetails=Error details
+_mine.user.register.finishregistration=Finish registration
+_mine.user.register.iagree=I agree
+_mine.user.register.linkexpired=The link you used to complete registration is invalid or has expired.
+_mine.user.register.mycodeofconduct=I understand that the Delving portal gives me the opportunity to create tags for any item I wish. I agree that I will not create any tags that could be considered libelous, harmful, threatening, unlawful, defamatory, infringing, abusive, inflammatory, harassing, pornographic, obscene, fraudulent, invasive of privacy or publicity rights, hateful, or racially, ethnically or otherwise objectionable. By clicking this box I agree to abide by this agreement, and understand that if I don't my login on the portal will be terminated.
+_mine.user.register.mycodeofconductrequired=You must agree to our code of conduct to register for portal membership
+_mine.user.register.password=Password
+_mine.user.register.password.choose=Choose a password
+_mine.user.register.password.explain=Passwords must be 6-30 characters in length
+_mine.user.register.pick.user.name=Your username will be displayed when you have logged in
+_mine.user.register.please.follow.link=Please follow the link provided in the email and finish the registration process
+_mine.user.register.register=Register
+_mine.user.register.registration.failed=An error occurred while trying to process your registration. Please try again
+_mine.user.register.repeat.password=Repeat password
+_mine.user.register.requiredfield=This is a required field
+_mine.user.register.username.choose=Choose a username
+_mine.user.register.username.explain=Your username will be displayed when you have logged in
 _mine.user.registration.date=Registration date
 _mine.user.registration.notification.succeed=You have successfully registered
 _mine.user.validation.disclaimer.unchecked=Disclaimer must be accepted
@@ -236,37 +260,14 @@ _portal.ui.navigation.of=of
 _portal.ui.navigation.page=Page
 _portal.ui.navigation.results=Results
 _portal.ui.notification.error=Error
-_portal.ui.notification.failure.search.saved=Saving search failed
 _portal.ui.notification.noitemsfound=No items found
 _portal.ui.reset.searchbox=Reset
 _portal.ui.viewingrelateditems=You are viewing related items
-_register-request.emailalreadyregistered=This email is already registered
-_register.email.has.been.sent=An email has been sent to the following address
-_register.emailclicktoconfirm=Please click on the following link to confirm your registration
-_register.emailuse=You will use your email together with your password to log into the site
-_register.entervalidemail=Please enter a valid email address
-_register.enteryouremail=Enter your email
-_register.errordetails=Error details
-_register.finishregistration=Finish registration
-_register.iagree=I agree
-_register.linkexpired=The link you used to complete registration is invalid or has expired.
-_register.mycodeofconduct=I understand that the Delving portal gives me the opportunity to create tags for any item I wish. I agree that I will not create any tags that could be considered libelous, harmful, threatening, unlawful, defamatory, infringing, abusive, inflammatory, harassing, pornographic, obscene, fraudulent, invasive of privacy or publicity rights, hateful, or racially, ethnically or otherwise objectionable. By clicking this box I agree to abide by this agreement, and understand that if I don't my login on the portal will be terminated.
-_register.mycodeofconductrequired=You must agree to our code of conduct to register for portal membership
-_register.password=Password
-_register.password.choose=Choose a password
-_register.password.explain=Passwords must be 6-30 characters in length
-_register.pick.user.name=Your username will be displayed when you have logged in
-_register.please.follow.link=Please follow the link provided in the email and finish the registration process
-_register.register=Register
-_register.registration.failed=An error occurred while trying to process your registration. Please try again
-_register.repeat.password=Repeat password
-_register.requiredfield=This is a required field
-_register.username.choose=Choose a username
-_register.username.explain=Your username will be displayed when you have logged in
 _search.boolean.and=and
 _search.boolean.not=not
 _search.boolean.or=or
 _search.field.any.field=Any field
+_search.field.country=Country
 _search.field.creator=Creator
 _search.field.date=Date
 _search.field.description=Description
@@ -290,7 +291,6 @@ _unused.bosnia.and.herzegovina=Bosnia and Herzegovina
 _unused.browse.through.time=Browse through time
 _unused.contacts=Contacts
 _unused.contributors=Contributors
-_unused.country=Country
 _unused.createaccount=Create an account
 _unused.emailwelcome=Welcome to My Personal Page
 _unused.enewsoptin=Keep me in touch with new developments to Europeana
