--- a/portal/src/main/resources/i18n/messages_it.properties
+++ b/portal/src/main/resources/i18n/messages_it.properties
@@ -7,6 +7,7 @@ _action.alt.more.info=Cliccare qui per ulteriori informazioni
 _action.alt.next.page=Cliccare qui per visualizzare la successiva pagina dei risultati
 _action.alt.previous.page=Cliccare qui per visualizzare la precedente pagina dei risultati
 _action.alt.table.view=Vedi la tabella
+_action.chooselanguage=Scegli una lingua
 _action.personal.page=My Personal Page
 _action.previous=Precedente
 _action.refine.your.search=Raffina la ricerca
@@ -95,10 +96,6 @@ _locale.sk=slovacco
 _locale.sl=sloveno
 _locale.sr=serbo
 _locale.sv=svedese
-_menu.i18n.chooselanguage=Scegli una lingua
-_messages.error.emailformaterror=Verificare che la e-mail sia formattata correttamente e provare di nuovo
-_messages.error.emailsendfailed=La e-mail non ha potuto essere inviata
-_messages.notification.emailsent=E-mail inviata
 _metadata.dc.contributor=Autore di contributo subordinato
 _metadata.dc.coverage=Copertura
 _metadata.dc.creator=Autore
@@ -153,6 +150,33 @@ _mine.saved.items=Oggetti salvati
 _mine.saved.searches=Ricerche salvate
 _mine.saved.tags=Tag salvati
 _mine.user.information=Informazioni utente
+_mine.user.notification.emailformaterror=Verificare che la e-mail sia formattata correttamente e provare di nuovo
+_mine.user.notification.emailsendfailed=La e-mail non ha potuto essere inviata
+_mine.user.notification.emailsent=E-mail inviata
+_mine.user.notification.failure.search.saved=Salvataggio ricerca fallito
+_mine.user.register-request.emailalreadyregistered=Questa e-mail è stata già registrata
+_mine.user.register.email.has.been.sent=E' stata inviata una e-mail al seguente indirizzo
+_mine.user.register.emailclicktoconfirm=Cliccare sul link seguente per confermare la registrazione
+_mine.user.register.emailuse=Per entrare nel sito sono necessari username e password
+_mine.user.register.entervalidemail=Per favore inserire un indirizzo e-mail valido
+_mine.user.register.enteryouremail=Inserire la e-mail
+_mine.user.register.errordetails=Specifiche dell'errore
+_mine.user.register.finishregistration=Termina la registrazione
+_mine.user.register.iagree=Accetto
+_mine.user.register.linkexpired=Il link usato per completare la registrazione non è valido o è scaduto
+_mine.user.register.mycodeofconduct=Capisco che My Personal Page mi offre l'opportunità di creare tag per qualsiasi elemento desideri. Mi impegno a non creare alcun tag che possa essere considerato calunnioso, dannoso, minaccioso, illecito, diffamatorio, illegale, abusivo, molesto, pornografico, osceno, fraudolento, invasivo della privacy, istigatore all’odio razziale o etnico o altrimenti deplorevole. Cliccando su questa casella mi impegno a rispettare questo accordo; accetto che, in caso contrario, la mia adesione a My Personal Page verrà revocata.
+_mine.user.register.mycodeofconductrequired=Devi accettare il nostro codice di condotta per poterti registrare in My Personal Page
+_mine.user.register.password=Password
+_mine.user.register.password.choose=Scegliere una password
+_mine.user.register.password.explain=La password deve contenere da 6 a 30 caratteri
+_mine.user.register.pick.user.name=Lo username apparirà una volta entrati nel sistema
+_mine.user.register.please.follow.link=Seguire il link inviato per e-mail per terminare uil processo di registrazione
+_mine.user.register.register=Registrati
+_mine.user.register.registration.failed=Si è verificato un errore durante il processo di registrazione. Per favore riprovare
+_mine.user.register.repeat.password=Ripeti la password
+_mine.user.register.requiredfield=Questo campo è obbligatorio
+_mine.user.register.username.choose=Scegliere uno username
+_mine.user.register.username.explain=Lo username apparirà una volta entrati nel sistema
 _mine.user.registration.notification.succeed=La tua registrazione e'avvenuta con successo
 _mine.user.validation.username.in.use=non è disponibile. Sceglierne un altro
 _mine.username=Username
@@ -171,37 +195,14 @@ _portal.ui.navigation.of=di
 _portal.ui.navigation.page=Pagina
 _portal.ui.navigation.results=Risultati
 _portal.ui.notification.error=Errore
-_portal.ui.notification.failure.search.saved=Salvataggio ricerca fallito
 _portal.ui.notification.noitemsfound=Nessun oggetto trovato
 _portal.ui.reset.searchbox=Reset
 _portal.ui.viewingrelateditems=Stai visualizzando gli oggetti correlati
-_register-request.emailalreadyregistered=Questa e-mail è stata già registrata
-_register.email.has.been.sent=E' stata inviata una e-mail al seguente indirizzo
-_register.emailclicktoconfirm=Cliccare sul link seguente per confermare la registrazione
-_register.emailuse=Per entrare nel sito sono necessari username e password
-_register.entervalidemail=Per favore inserire un indirizzo e-mail valido
-_register.enteryouremail=Inserire la e-mail
-_register.errordetails=Specifiche dell'errore
-_register.finishregistration=Termina la registrazione
-_register.iagree=Accetto
-_register.linkexpired=Il link usato per completare la registrazione non è valido o è scaduto
-_register.mycodeofconduct=Capisco che My Personal Page mi offre l'opportunità di creare tag per qualsiasi elemento desideri. Mi impegno a non creare alcun tag che possa essere considerato calunnioso, dannoso, minaccioso, illecito, diffamatorio, illegale, abusivo, molesto, pornografico, osceno, fraudolento, invasivo della privacy, istigatore all’odio razziale o etnico o altrimenti deplorevole. Cliccando su questa casella mi impegno a rispettare questo accordo; accetto che, in caso contrario, la mia adesione a My Personal Page verrà revocata.
-_register.mycodeofconductrequired=Devi accettare il nostro codice di condotta per poterti registrare in My Personal Page
-_register.password=Password
-_register.password.choose=Scegliere una password
-_register.password.explain=La password deve contenere da 6 a 30 caratteri
-_register.pick.user.name=Lo username apparirà una volta entrati nel sistema
-_register.please.follow.link=Seguire il link inviato per e-mail per terminare uil processo di registrazione
-_register.register=Registrati
-_register.registration.failed=Si è verificato un errore durante il processo di registrazione. Per favore riprovare
-_register.repeat.password=Ripeti la password
-_register.requiredfield=Questo campo è obbligatorio
-_register.username.choose=Scegliere uno username
-_register.username.explain=Lo username apparirà una volta entrati nel sistema
 _search.boolean.and=e
 _search.boolean.not=non
 _search.boolean.or=o
 _search.field.any.field=Tutti i campi
+_search.field.country=Paese
 _search.field.creator=Creatore
 _search.field.date=Data
 _search.field.description=Descrizione
@@ -225,7 +226,6 @@ _unused.bosnia.and.herzegovina=Bosnia Erzegovina
 _unused.browse.through.time=Naviga attraverso il tempo
 _unused.contacts=Contatti
 _unused.contributors=Autori di contributi
-_unused.country=Paese
 _unused.createaccount=Creare un account
 _unused.emailwelcome=Benvenuti in My Personal Page
 _unused.enewsoptin=Tienimi aggiornato sui nuovi sviluppi di Europeana
