--- a/portal/src/main/resources/i18n/messages_mk.properties
+++ b/portal/src/main/resources/i18n/messages_mk.properties
@@ -7,6 +7,7 @@ _action.alt.more.info=Click for more information
 _action.alt.next.page=Click here for next page of results
 _action.alt.previous.page=click here for previous page of results
 _action.alt.table.view=Table view
+_action.chooselanguage=Choose a language
 _action.personal.page=My Personal Page
 _action.previous=Previous
 _action.refine.your.search=Refine your search
@@ -95,10 +96,6 @@ _locale.sk=Словачки (сло)
 _locale.sl=Словенечки (слв)
 _locale.sr=Српски (срп)
 _locale.sv=Шведски (шве)
-_menu.i18n.chooselanguage=Choose a language
-_messages.error.emailformaterror=Please make sure your email is correctly formatted and try again
-_messages.error.emailsendfailed=Email could not be sent
-_messages.notification.emailsent=Email sent
 _metadata.dc.contributor=Соработник
 _metadata.dc.coverage=Опсег
 _metadata.dc.creator=Автор
@@ -153,6 +150,32 @@ _mine.saved.items=Saved items
 _mine.saved.searches=Saved searches
 _mine.saved.tags=Saved tags
 _mine.user.information=User information
+_mine.user.notification.emailformaterror=Please make sure your email is correctly formatted and try again
+_mine.user.notification.emailsendfailed=Email could not be sent
+_mine.user.notification.emailsent=Email sent
+_mine.user.notification.failure.search.saved=Saving search failed
+_mine.user.register-request.emailalreadyregistered=This email is already registered
+_mine.user.register.email.has.been.sent=An email has been sent to the following address
+_mine.user.register.emailclicktoconfirm=Please click on the following link to confirm your registration
+_mine.user.register.emailuse=You will use your email together with your password to log into the site
+_mine.user.register.entervalidemail=Please enter a valid email address
+_mine.user.register.enteryouremail=Enter your email
+_mine.user.register.errordetails=Error details
+_mine.user.register.finishregistration=Finish registration
+_mine.user.register.iagree=I agree
+_mine.user.register.linkexpired=The link you used to complete registration is invalid or has expired.
+_mine.user.register.mycodeofconduct=I understand that the Delving portal gives me the opportunity to create tags for any item I wish. I agree that I will not create any tags that could be considered libelous, harmful, threatening, unlawful, defamatory, infringing, abusive, inflammatory, harassing, pornographic, obscene, fraudulent, invasive of privacy or publicity rights, hateful, or racially, ethnically or otherwise objectionable. By clicking this box I agree to abide by this agreement, and understand that if I don't my login on the portal will be terminated. MyCodeOfConductRequired_t=You must agree to our code of conduct to register for portal membership
+_mine.user.register.password=Лозинка
+_mine.user.register.password.choose=Choose a password
+_mine.user.register.password.explain=Passwords must be 6-30 characters in length
+_mine.user.register.pick.user.name=Your username will be displayed when you have logged in
+_mine.user.register.please.follow.link=Please follow the link provided in the email and finish the registration process
+_mine.user.register.register=Регистрирајте се
+_mine.user.register.registration.failed=Се појави грешка додека се процесираше Вашето пријавување. Ве молиме обидете се повторно
+_mine.user.register.repeat.password=Repeat password
+_mine.user.register.requiredfield=This is a required field
+_mine.user.register.username.choose=Choose a username
+_mine.user.register.username.explain=Your username will be displayed when you have logged in
 _mine.user.registration.notification.succeed=Успешно сте регистрирани
 _mine.user.validation.username.in.use=Веќе е искористено. Ве молиме одберете друго корисничко име
 _mine.username=Корисничко име
@@ -171,36 +194,14 @@ _portal.ui.navigation.of=of
 _portal.ui.navigation.page=Page
 _portal.ui.navigation.results=Results
 _portal.ui.notification.error=Error
-_portal.ui.notification.failure.search.saved=Saving search failed
 _portal.ui.notification.noitemsfound=No items found
 _portal.ui.reset.searchbox=Reset
 _portal.ui.viewingrelateditems=You are viewing related items
-_register-request.emailalreadyregistered=This email is already registered
-_register.email.has.been.sent=An email has been sent to the following address
-_register.emailclicktoconfirm=Please click on the following link to confirm your registration
-_register.emailuse=You will use your email together with your password to log into the site
-_register.entervalidemail=Please enter a valid email address
-_register.enteryouremail=Enter your email
-_register.errordetails=Error details
-_register.finishregistration=Finish registration
-_register.iagree=I agree
-_register.linkexpired=The link you used to complete registration is invalid or has expired.
-_register.mycodeofconduct=I understand that the Delving portal gives me the opportunity to create tags for any item I wish. I agree that I will not create any tags that could be considered libelous, harmful, threatening, unlawful, defamatory, infringing, abusive, inflammatory, harassing, pornographic, obscene, fraudulent, invasive of privacy or publicity rights, hateful, or racially, ethnically or otherwise objectionable. By clicking this box I agree to abide by this agreement, and understand that if I don't my login on the portal will be terminated. MyCodeOfConductRequired_t=You must agree to our code of conduct to register for portal membership
-_register.password=Лозинка
-_register.password.choose=Choose a password
-_register.password.explain=Passwords must be 6-30 characters in length
-_register.pick.user.name=Your username will be displayed when you have logged in
-_register.please.follow.link=Please follow the link provided in the email and finish the registration process
-_register.register=Регистрирајте се
-_register.registration.failed=Се појави грешка додека се процесираше Вашето пријавување. Ве молиме обидете се повторно
-_register.repeat.password=Repeat password
-_register.requiredfield=This is a required field
-_register.username.choose=Choose a username
-_register.username.explain=Your username will be displayed when you have logged in
 _search.boolean.and=и
 _search.boolean.not=не
 _search.boolean.or=или
 _search.field.any.field=Било која област
+_search.field.country=??????
 _search.field.creator=Creator
 _search.field.date=Date
 _search.field.description=Description
@@ -224,7 +225,6 @@ _unused.bosnia.and.herzegovina=Босна и Херцеговина
 _unused.browse.through.time=Browse through time
 _unused.contacts=Contacts
 _unused.contributors=Contributors
-_unused.country=??????
 _unused.createaccount=Create an account
 _unused.emailwelcome=Welcome to My Personal Page
 _unused.enewsoptin=Keep me in touch with new developments to Europeana
