--- a/portal/src/main/resources/i18n/messages_nl.properties
+++ b/portal/src/main/resources/i18n/messages_nl.properties
@@ -7,6 +7,7 @@ _action.alt.more.info=Klik voor meer informatie
 _action.alt.next.page=Klik hier voor volgende pagina van resultaten
 _action.alt.previous.page=Klik hier voor vorige pagina van resultaten
 _action.alt.table.view=Tabelweergave
+_action.chooselanguage=Kies een taal
 _action.personal.page=Mijn Europeana
 _action.previous=Vorige
 _action.refine.your.search=Zoekopdracht verfijnen
@@ -14,11 +15,11 @@ _action.return.to.results=Terug naar resultaten
 _action.save.this.search=Bewaar deze zoekopdracht
 _action.save.to.mine=Bewaar in Mijn Europeana
 _action.search=Zoek
+_action.search.order.by=Sorteren op
 _action.see.all.related.items=Bekijk alle gerelateerde items
 _action.send=Verstuur
 _action.share.with.friend=Deel met een vriend
 _action.view.in.original.context=Bekijk in oorspronkelijke context
-_actions.search.order.by=Sorteren op
 _cms.administration.images=Afbeeldingen beheren
 _cms.administration.pages=Paginas beheren
 _cms.administration.title=Beheer
@@ -124,10 +125,6 @@ _locale.sk=Slowaaks (slo)
 _locale.sl=Sloveens (slv)
 _locale.sr=Servisch (ser)
 _locale.sv=Zweeds (zwe)
-_menu.i18n.chooselanguage=Kies een taal
-_messages.error.emailformaterror=Controleer of uw email correct is opgemaakt en probeer het opnieuw
-_messages.error.emailsendfailed=Email kan niet worden verzonden
-_messages.notification.emailsent=Email verzonden
 _metadata.dc.contributor=Met bijdrage van
 _metadata.dc.coverage=Herkomst
 _metadata.dc.creator=Vervaardiger
@@ -182,6 +179,34 @@ _mine.saved.items=Bewaarde items
 _mine.saved.searches=Bewaarde zoekopdrachten
 _mine.saved.tags=Bewaarde tags
 _mine.user.information=Gebruikersinformatie
+_mine.user.notification.emailformaterror=Controleer of uw email correct is opgemaakt en probeer het opnieuw
+_mine.user.notification.emailsendfailed=Email kan niet worden verzonden
+_mine.user.notification.emailsent=Email verzonden
+_mine.user.notification.failure.search.saved=Zoekopdracht opslaan mislukt
+_mine.user.register-request.emailalreadyregistered=Deze email adres is reeds geregistreerd
+_mine.user.register.email.has.been.sent=Een email is verzonden naar het volgende adres
+_mine.user.register.emailclicktoconfirm=Klik op de volgende link om uw registratie te bevestigen
+_mine.user.register.emailuse=U gebruikt uw email samen met uw wachtwoord om in te loggen op de site
+_mine.user.register.entervalidemail=Voer a.u.b. een geldig email adres in
+_mine.user.register.enteryouremail=Geef uw email
+_mine.user.register.erase=Wissen
+_mine.user.register.errordetails=Fout details
+_mine.user.register.finishregistration=Registratie voltooien
+_mine.user.register.iagree=Ik ga akkoord
+_mine.user.register.linkexpired=De link die u heeft gebruikt voor het voltooien van uw registratie is ongeldig of verlopen
+_mine.user.register.mycodeofconduct=Ik begrijp dat registreren mij de mogelijkheid biedt tags te creëren voor ieder gewenst item. Ik ga ermee akkoord dat ik geen tags zal creëren die beschouwd zouden kunnen worden als lasterlijk, schadelijk, bedreigend, onwettig, smadend, schendend, beledigend, opruiend, treiterend, pornografisch, onzedelijk, frauduleus, de privacy- of publiciteitsrechten schendend, kwaadaardig, of racistisch of vanuit een etnisch of ander oogpunt aanstootgevend. Door het aanklikken van deze knop verklaar ik dat ik mij zal houden aan deze overeenkomst en ik begrijp dat als ik dat niet doe, mijn registratie zal worden beëindigd.
+_mine.user.register.mycodeofconductrequired=U dient in te stemmen met onze gedragscode om u te laten registreren voor My Europeana
+_mine.user.register.password=Wachtwoord
+_mine.user.register.password.choose=Kies een wachtwoord
+_mine.user.register.password.explain=Wachtwoorden dienen 6-30 karakters lang te zijn
+_mine.user.register.pick.user.name=Uw gebruikersnaam wordt weergegeven wanneer u bent ingelogd
+_mine.user.register.please.follow.link=Volg de link in de email om de registratie af te ronden
+_mine.user.register.register=Registreren
+_mine.user.register.registration.failed=Een fout is opgetreden tijdens het verwerken van uw registratie. Probeert het opnieuw
+_mine.user.register.repeat.password=Herhaal wachtwoord
+_mine.user.register.requiredfield=Dit is een verplicht veld
+_mine.user.register.username.choose=Kies een gebruikersnaam
+_mine.user.register.username.explain=Uw gebruikersnaam wordt weergegeven wanneer u bent ingelogd
 _mine.user.registration.notification.succeed=U bent met succes geregistreerd
 _mine.user.validation.disclaimer.unchecked=Voorwaarden moeten geaccepteerd worden
 _mine.user.validation.password.long=Wachtwoord te lang
@@ -207,38 +232,14 @@ _portal.ui.navigation.of=van
 _portal.ui.navigation.page=Pagina
 _portal.ui.navigation.results=Resultaten
 _portal.ui.notification.error=Fout
-_portal.ui.notification.failure.search.saved=Zoekopdracht opslaan mislukt
 _portal.ui.notification.noitemsfound=Geen items gevonden
 _portal.ui.reset.searchbox=Reset
 _portal.ui.viewingrelateditems=U bekijkt gerelateerde items
-_register-request.emailalreadyregistered=Deze email adres is reeds geregistreerd
-_register.email.has.been.sent=Een email is verzonden naar het volgende adres
-_register.emailclicktoconfirm=Klik op de volgende link om uw registratie te bevestigen
-_register.emailuse=U gebruikt uw email samen met uw wachtwoord om in te loggen op de site
-_register.entervalidemail=Voer a.u.b. een geldig email adres in
-_register.enteryouremail=Geef uw email
-_register.erase=Wissen
-_register.errordetails=Fout details
-_register.finishregistration=Registratie voltooien
-_register.iagree=Ik ga akkoord
-_register.linkexpired=De link die u heeft gebruikt voor het voltooien van uw registratie is ongeldig of verlopen
-_register.mycodeofconduct=Ik begrijp dat registreren mij de mogelijkheid biedt tags te creëren voor ieder gewenst item. Ik ga ermee akkoord dat ik geen tags zal creëren die beschouwd zouden kunnen worden als lasterlijk, schadelijk, bedreigend, onwettig, smadend, schendend, beledigend, opruiend, treiterend, pornografisch, onzedelijk, frauduleus, de privacy- of publiciteitsrechten schendend, kwaadaardig, of racistisch of vanuit een etnisch of ander oogpunt aanstootgevend. Door het aanklikken van deze knop verklaar ik dat ik mij zal houden aan deze overeenkomst en ik begrijp dat als ik dat niet doe, mijn registratie zal worden beëindigd.
-_register.mycodeofconductrequired=U dient in te stemmen met onze gedragscode om u te laten registreren voor My Europeana
-_register.password=Wachtwoord
-_register.password.choose=Kies een wachtwoord
-_register.password.explain=Wachtwoorden dienen 6-30 karakters lang te zijn
-_register.pick.user.name=Uw gebruikersnaam wordt weergegeven wanneer u bent ingelogd
-_register.please.follow.link=Volg de link in de email om de registratie af te ronden
-_register.register=Registreren
-_register.registration.failed=Een fout is opgetreden tijdens het verwerken van uw registratie. Probeert het opnieuw
-_register.repeat.password=Herhaal wachtwoord
-_register.requiredfield=Dit is een verplicht veld
-_register.username.choose=Kies een gebruikersnaam
-_register.username.explain=Uw gebruikersnaam wordt weergegeven wanneer u bent ingelogd
 _search.boolean.and=en
 _search.boolean.not=niet
 _search.boolean.or=of
 _search.field.any.field=Elk veld
+_search.field.country=Land
 _search.field.creator=Auteur
 _search.field.date=Datum
 _search.field.description=Omschrijving
@@ -262,7 +263,6 @@ _unused.bosnia.and.herzegovina=Bosnië en Herzegovina
 _unused.browse.through.time=Browse door de tijd
 _unused.contacts=Contact
 _unused.contributors=Bijdragende organisaties
-_unused.country=Land
 _unused.createaccount=Maak een account
 _unused.emailwelcome=Welkom bij Mijn Europeana
 _unused.enewsoptin=Houd mij op de hoogte van nieuwe ontwikkelingen binnen Europeana
