--- a/portal/src/main/resources/i18n/messages_no.properties
+++ b/portal/src/main/resources/i18n/messages_no.properties
@@ -7,6 +7,7 @@ _action.alt.more.info=Klikk her for mere info
 _action.alt.next.page=Klikk her for neste resultatside
 _action.alt.previous.page=Klikk her for forrige resultatside
 _action.alt.table.view=Tabellvisning
+_action.chooselanguage=Velg språk
 _action.personal.page=Mitt Norvegiana
 _action.previous=Forrige
 _action.refine.your.search=Begrens søket
@@ -95,10 +96,6 @@ _locale.sk=Slovakisk
 _locale.sl=Slovensk
 _locale.sr=Serbisk
 _locale.sv=Svensk
-_menu.i18n.chooselanguage=Velg språk
-_messages.error.emailformaterror=Vær vennlig å forsikre deg om at emailadressen er korrekt
-_messages.error.emailsendfailed=Email kunne ikke sendes
-_messages.notification.emailsent=Email sendt
 _metadata.abm.contentprovider=Institusjon
 _metadata.abm.county=Fylke
 _metadata.abm.municipality=Kommune
@@ -160,6 +157,33 @@ _mine.saved.items=Lagrede objekter
 _mine.saved.searches=Lagrede søk
 _mine.saved.tags=Lagrede tags
 _mine.user.information=Brukerinfo
+_mine.user.notification.emailformaterror=Vær vennlig å forsikre deg om at emailadressen er korrekt
+_mine.user.notification.emailsendfailed=Email kunne ikke sendes
+_mine.user.notification.emailsent=Email sendt
+_mine.user.notification.failure.search.saved=Lagring av søk feilet
+_mine.user.register-request.emailalreadyregistered=Denne emailadressen er allerede registert
+_mine.user.register.email.has.been.sent=En email er blitt sendt til denne adressen
+_mine.user.register.emailclicktoconfirm=Klikk på denne lenken for å bekrefte registreringen
+_mine.user.register.emailuse=Du vil måtte bruke din emailadresse sammen med passordet for å logge på nettstedet
+_mine.user.register.entervalidemail=Vær vennlig å skriv inn en gyldig emailadresse
+_mine.user.register.enteryouremail=Skriv inn din emailadresse
+_mine.user.register.errordetails=Feilinformasjon
+_mine.user.register.finishregistration=Ferdigstill registrering
+_mine.user.register.iagree=Jeg godtar
+_mine.user.register.linkexpired=Lenken du brukte for å ferdigstille registreringen er ugyldig eller har fått tidsavbrudd.
+_mine.user.register.mycodeofconduct=Jeg forstår at Mitt Norvegiana gir meg mulighet til å generere tags for alle objekter jeg måtte ønske .Jeg aksepterer at jeg ikke kan generere tags som kan oppfattes som injurierende, skadelige, truende, ulovlige, nedsettende, støtende, oppviglerske, pornografiske, obskøne, svindlende, invaderende i privatrettslig eller offentlig forstand, hatefulle, eller rasistiske, etniske eller på annet vis anstøtende. Ved å klikke i denne boksen godtar jeg å følge denne avtalen, og forstår at dersom jeg bryter mot denne, vil jeg bli utestengt fra Mitt Norvegiana.
+_mine.user.register.mycodeofconductrequired=Du må godta reglene for oppførsel for å registrere deg til Mitt Norvegiana
+_mine.user.register.password=Passord
+_mine.user.register.password.choose=Velg passord
+_mine.user.register.password.explain=Passordet må være 6-30 karakterer langt
+_mine.user.register.pick.user.name=Ditt brukernavn vil vises etter pålogging
+_mine.user.register.please.follow.link=Vær vennlig å følg lenken som følger i emailen og ferdigstill registreringen
+_mine.user.register.register=Registrer
+_mine.user.register.registration.failed=Det oppsto en feil i forbindelse med registreringen. Prøv igjen.
+_mine.user.register.repeat.password=Gjenta passord
+_mine.user.register.requiredfield=Dette er et oblogatorisk felt
+_mine.user.register.username.choose=Velg brukernavn
+_mine.user.register.username.explain=Brukernavnet vill vises når du har logget på
 _mine.user.registration.notification.succeed=Du er nå registrert
 _mine.user.validation.username.in.use=er i bruk. Velg et annet brukernavn
 _mine.username=Brukernavn
@@ -178,37 +202,14 @@ _portal.ui.navigation.of=av
 _portal.ui.navigation.page=Side
 _portal.ui.navigation.results=Resultater
 _portal.ui.notification.error=Feil
-_portal.ui.notification.failure.search.saved=Lagring av søk feilet
 _portal.ui.notification.noitemsfound=Ingen objekter funnet
 _portal.ui.reset.searchbox=Reset
 _portal.ui.viewingrelateditems=Du ser relatert innhold
-_register-request.emailalreadyregistered=Denne emailadressen er allerede registert
-_register.email.has.been.sent=En email er blitt sendt til denne adressen
-_register.emailclicktoconfirm=Klikk på denne lenken for å bekrefte registreringen
-_register.emailuse=Du vil måtte bruke din emailadresse sammen med passordet for å logge på nettstedet
-_register.entervalidemail=Vær vennlig å skriv inn en gyldig emailadresse
-_register.enteryouremail=Skriv inn din emailadresse
-_register.errordetails=Feilinformasjon
-_register.finishregistration=Ferdigstill registrering
-_register.iagree=Jeg godtar
-_register.linkexpired=Lenken du brukte for å ferdigstille registreringen er ugyldig eller har fått tidsavbrudd.
-_register.mycodeofconduct=Jeg forstår at Mitt Norvegiana gir meg mulighet til å generere tags for alle objekter jeg måtte ønske .Jeg aksepterer at jeg ikke kan generere tags som kan oppfattes som injurierende, skadelige, truende, ulovlige, nedsettende, støtende, oppviglerske, pornografiske, obskøne, svindlende, invaderende i privatrettslig eller offentlig forstand, hatefulle, eller rasistiske, etniske eller på annet vis anstøtende. Ved å klikke i denne boksen godtar jeg å følge denne avtalen, og forstår at dersom jeg bryter mot denne, vil jeg bli utestengt fra Mitt Norvegiana.
-_register.mycodeofconductrequired=Du må godta reglene for oppførsel for å registrere deg til Mitt Norvegiana
-_register.password=Passord
-_register.password.choose=Velg passord
-_register.password.explain=Passordet må være 6-30 karakterer langt
-_register.pick.user.name=Ditt brukernavn vil vises etter pålogging
-_register.please.follow.link=Vær vennlig å følg lenken som følger i emailen og ferdigstill registreringen
-_register.register=Registrer
-_register.registration.failed=Det oppsto en feil i forbindelse med registreringen. Prøv igjen.
-_register.repeat.password=Gjenta passord
-_register.requiredfield=Dette er et oblogatorisk felt
-_register.username.choose=Velg brukernavn
-_register.username.explain=Brukernavnet vill vises når du har logget på
 _search.boolean.and=og
 _search.boolean.not=ikke
 _search.boolean.or=eller
 _search.field.any.field=Alle felt
+_search.field.country=Land
 _search.field.creator=Produsent
 _search.field.date=Dato
 _search.field.description=Beskrivelse
@@ -234,7 +235,6 @@ _unused.bosnia.and.herzegovina=Bosnia Herzegovina
 _unused.browse.through.time=Browse via tidslinje
 _unused.contacts=Kontakter
 _unused.contributors=Bidragsytere
-_unused.country=Land
 _unused.createaccount=Generer en konto
 _unused.emailwelcome=Velkommen til Mitt Norvegiana
 _unused.enewsoptin=Oppdater meg på ny utvikling av Norvegiana
