--- a/portal/src/main/resources/i18n/messages_pt.properties
+++ b/portal/src/main/resources/i18n/messages_pt.properties
@@ -7,6 +7,7 @@ _action.alt.more.info=Clique para mais informação
 _action.alt.next.page=Cloque aqui para a página de resultados seguinte
 _action.alt.previous.page=clique aqui para a página de resultados anterior
 _action.alt.table.view=Apresentação de tabela
+_action.chooselanguage=Escolha uma língua
 _action.personal.page=Minha Europeana
 _action.previous=Anterior
 _action.refine.your.search=Refine a sua pesquisa
@@ -95,10 +96,6 @@ _locale.sk=Eslovaco (slo)
 _locale.sl=Esloveno (slv)
 _locale.sr=Servo-croata(Sérvia) (scc)
 _locale.sv=Sueco (sve/swe)
-_menu.i18n.chooselanguage=Escolha uma língua
-_messages.error.emailformaterror=Por favor, confira se o email está correcto e tente novamente
-_messages.error.emailsendfailed=O email não pôde ser enviado
-_messages.notification.emailsent=Email enviado
 _metadata.dc.contributor=Outro Contribuinte
 _metadata.dc.coverage=Cobertura
 _metadata.dc.creator=Autor
@@ -153,6 +150,33 @@ _mine.saved.items=Items guardados
 _mine.saved.searches=Pesquisas guardadas
 _mine.saved.tags=Etiquetas guardadas
 _mine.user.information=Informação do utilizador
+_mine.user.notification.emailformaterror=Por favor, confira se o email está correcto e tente novamente
+_mine.user.notification.emailsendfailed=O email não pôde ser enviado
+_mine.user.notification.emailsent=Email enviado
+_mine.user.notification.failure.search.saved=Guardar a pesquisa falhou
+_mine.user.register-request.emailalreadyregistered=Este email já foi registado
+_mine.user.register.email.has.been.sent=Foi-lhe enviado um email para o seguinte endereço
+_mine.user.register.emailclicktoconfirm=Por favor, clique nesta ligação para confirmar o seu registo
+_mine.user.register.emailuse=Utilizará o seu endereço de email juntamente com a palavra-passe para entrar no sítio Web
+_mine.user.register.entervalidemail=Por favor, insira um endereço de correio electrónico válido
+_mine.user.register.enteryouremail=Introduza o seu endereço
+_mine.user.register.errordetails=Detalhes do erro
+_mine.user.register.finishregistration=Terminar o registo
+_mine.user.register.iagree=Aceito
+_mine.user.register.linkexpired=A ligação que usou para completar o registo é inválida ou já expirou
+_mine.user.register.mycodeofconduct=Tenho conhecimento de que a Minha Europeana me dá oportunidade de criar etiquetas para qualquer item que queira. Comprometo-me a não criar quaisquer etiquetas que possam ser consideradas caluniosas, ofensivas, ameaçadoras, ilegítimas, difamatórias, infractoras, abusivas, provocadoras, persecutórias, pornográficas, obscenas, fraudulentas, invasivas de direitos de privacidade e publicidade, inspiradoras de ódio ou de algum modo reprováveis em termos raciais ou étnicos. Ao clicar neste botão, aceito cumprir este acordo e que, se o não cumprir, o meu registo na Minha Europeana será terminado.
+_mine.user.register.mycodeofconductrequired=Deve aceitar o nosso código de conduta para se registar em Minha Europeana
+_mine.user.register.password=Palavra-passe
+_mine.user.register.password.choose=Escolha uma palavra-passe
+_mine.user.register.password.explain=As palavras-passe devem ter entre 6-30 caracteres
+_mine.user.register.pick.user.name=O seu nome de utilizador será apresentado quando tiver feito login
+_mine.user.register.please.follow.link=Por favor, siga a ligação que surge no email e termine o processo de registo
+_mine.user.register.register=Registo
+_mine.user.register.registration.failed=Ocorreu um erro no processamente do seu registo. Por favor tente novamente
+_mine.user.register.repeat.password=Repetir palavra-passe
+_mine.user.register.requiredfield=Este campo é obrigatório
+_mine.user.register.username.choose=Escolha um nome de utilizador
+_mine.user.register.username.explain=O seu nome de utilizador surgirá no écran ao entrar
 _mine.user.registration.notification.succeed=O seu registo foi efectuado com sucesso
 _mine.user.validation.username.in.use=está a ser utilizado. Por favor escolha outro nome de utilizador
 _mine.username=Nome de utilizador
@@ -171,37 +195,14 @@ _portal.ui.navigation.of=de
 _portal.ui.navigation.page=Página
 _portal.ui.navigation.results=Resultados
 _portal.ui.notification.error=Erro
-_portal.ui.notification.failure.search.saved=Guardar a pesquisa falhou
 _portal.ui.notification.noitemsfound=Não foram encontrados items
 _portal.ui.reset.searchbox=Limpar
 _portal.ui.viewingrelateditems=Está a visualizar items relacionados
-_register-request.emailalreadyregistered=Este email já foi registado
-_register.email.has.been.sent=Foi-lhe enviado um email para o seguinte endereço
-_register.emailclicktoconfirm=Por favor, clique nesta ligação para confirmar o seu registo
-_register.emailuse=Utilizará o seu endereço de email juntamente com a palavra-passe para entrar no sítio Web
-_register.entervalidemail=Por favor, insira um endereço de correio electrónico válido
-_register.enteryouremail=Introduza o seu endereço
-_register.errordetails=Detalhes do erro
-_register.finishregistration=Terminar o registo
-_register.iagree=Aceito
-_register.linkexpired=A ligação que usou para completar o registo é inválida ou já expirou
-_register.mycodeofconduct=Tenho conhecimento de que a Minha Europeana me dá oportunidade de criar etiquetas para qualquer item que queira. Comprometo-me a não criar quaisquer etiquetas que possam ser consideradas caluniosas, ofensivas, ameaçadoras, ilegítimas, difamatórias, infractoras, abusivas, provocadoras, persecutórias, pornográficas, obscenas, fraudulentas, invasivas de direitos de privacidade e publicidade, inspiradoras de ódio ou de algum modo reprováveis em termos raciais ou étnicos. Ao clicar neste botão, aceito cumprir este acordo e que, se o não cumprir, o meu registo na Minha Europeana será terminado.
-_register.mycodeofconductrequired=Deve aceitar o nosso código de conduta para se registar em Minha Europeana
-_register.password=Palavra-passe
-_register.password.choose=Escolha uma palavra-passe
-_register.password.explain=As palavras-passe devem ter entre 6-30 caracteres
-_register.pick.user.name=O seu nome de utilizador será apresentado quando tiver feito login
-_register.please.follow.link=Por favor, siga a ligação que surge no email e termine o processo de registo
-_register.register=Registo
-_register.registration.failed=Ocorreu um erro no processamente do seu registo. Por favor tente novamente
-_register.repeat.password=Repetir palavra-passe
-_register.requiredfield=Este campo é obrigatório
-_register.username.choose=Escolha um nome de utilizador
-_register.username.explain=O seu nome de utilizador surgirá no écran ao entrar
 _search.boolean.and=e
 _search.boolean.not=excepto
 _search.boolean.or=ou
 _search.field.any.field=Qualquer campo
+_search.field.country=País
 _search.field.creator=Criador
 _search.field.date=Data
 _search.field.description=Descrição
@@ -225,7 +226,6 @@ _unused.bosnia.and.herzegovina=Bósnia e Herzegovina
 _unused.browse.through.time=Percorra atrvés do tempo
 _unused.contacts=Contactos
 _unused.contributors=Participantes
-_unused.country=País
 _unused.createaccount=Criar uma conta
 _unused.emailwelcome=Bem-vindo a Minha Europeana
 _unused.enewsoptin=Mantenham-me informado dos novos desenvolvimentos da Europeana
