--- a/portal/src/main/resources/i18n/messages_sk.properties
+++ b/portal/src/main/resources/i18n/messages_sk.properties
@@ -7,6 +7,7 @@ _action.alt.more.info=Kliknite, ak chcete viac informácií
 _action.alt.next.page=kliknite sem na zobrazenie nasledujúcej stránky s výsledkami
 _action.alt.previous.page=kliknite sem na zobrazenie predchádzajúcej stránky s výsledkami
 _action.alt.table.view=Zobrazenie v tabuľke
+_action.chooselanguage=Vyberte si jazyk
 _action.personal.page=Moja Europeana
 _action.previous=Predchádzajúce
 _action.refine.your.search=Spresnite Vaše vyhľadávanie
@@ -95,10 +96,6 @@ _locale.sk=Slovenský (slo)
 _locale.sl=Slovinský (slv)
 _locale.sr=Srbský (scc)
 _locale.sv=Švédsky (sve/swe)
-_menu.i18n.chooselanguage=Vyberte si jazyk
-_messages.error.emailformaterror=Uistite sa prosím, že e-mail má správny formát a skúste znova
-_messages.error.emailsendfailed=Správu sa nepodarilo odoslať
-_messages.notification.emailsent=Správa odoslaná
 _metadata.dc.contributor=Prispievateľ
 _metadata.dc.coverage=Pokrytie
 _metadata.dc.creator=Autor
@@ -153,6 +150,33 @@ _mine.saved.items=Uložené položky
 _mine.saved.searches=Uložené vyhľadávania
 _mine.saved.tags=Uložené tagy
 _mine.user.information=Informácie o používateľovi
+_mine.user.notification.emailformaterror=Uistite sa prosím, že e-mail má správny formát a skúste znova
+_mine.user.notification.emailsendfailed=Správu sa nepodarilo odoslať
+_mine.user.notification.emailsent=Správa odoslaná
+_mine.user.notification.failure.search.saved=Uloženie vyhľadávania zlyhalo
+_mine.user.register-request.emailalreadyregistered=Táto adresa elektronickej pošty je už registrovaná
+_mine.user.register.email.has.been.sent=E-mailová spráca bola odoslaná na túto adresu
+_mine.user.register.emailclicktoconfirm=Kliknite prosím na nasledovné prepojenie, ak chcete potvrdiť Vašu registráciu
+_mine.user.register.emailuse=Na prihlásenie sa do portálu použijete Vašu e-mailovú adresu spolu s heslom
+_mine.user.register.entervalidemail=Zadajte prosím platnú adresu elektronickej pošty
+_mine.user.register.enteryouremail=Napíšte Vašu e-mailovú adresu
+_mine.user.register.errordetails=Podrobnosti o chybe
+_mine.user.register.finishregistration=Dokončiť registráciu
+_mine.user.register.iagree=Súhlasím
+_mine.user.register.linkexpired=Linka, ktorú ste použili pri registrácii, je neplatná alebo neaktuálna
+_mine.user.register.mycodeofconduct=Rozumiem, že Moja Europeana mi dáva možnosť vytvárať vlastné označenia (tagy) pre ktorýkoľvek objekt, ktorý chcem. Súhlasím s tým, že nebudem vytvárať tagy, ktoré sa môžu považovať za hanlivé, škodlivé, výhražné, nezákonné, nactiutŕhačské, narušujúce práva, vulgárne, poburujúce, obťažujúce, pornografické, obscénne, ľstivé, útočiace na súkromie alebo právo na publicitu, nenávistné alebo neprípustné z rasových, etnických alebo iných dôvodov. Kliknutím na toto okienko súhlasím, že sa budem riadiť touto dohodou a chápem, že v opačnom prípade bude moje členstvo v Mojej Europeane ukončené.
+_mine.user.register.mycodeofconductrequired=Musíte súhlasiť s pravidlami, aby ste sa mohli zaregistrovať do Mojej Europeany
+_mine.user.register.password=Heslo
+_mine.user.register.password.choose=Vyberte si heslo
+_mine.user.register.password.explain=Heslo musí mať 6 až 30 znakov
+_mine.user.register.pick.user.name=Vaše používateľské meno sa zobrazí po prihlásení
+_mine.user.register.please.follow.link=Kliknite prosím na linku uvedenú v e-mailovej správe a dokončite proces registrácie
+_mine.user.register.register=Registrácia
+_mine.user.register.registration.failed=Počas pokusu o spracovanie Vašej registrácie sa vyskytla chyba. Skúste to prosím znova
+_mine.user.register.repeat.password=Zopakujte heslo
+_mine.user.register.requiredfield=Toto pole je povinné
+_mine.user.register.username.choose=Vyberte si meno používateľa
+_mine.user.register.username.explain=Vaše meno používateľa sa zobrazí po prihlásení
 _mine.user.registration.notification.succeed=Vaša registrácia bola úspešná
 _mine.user.validation.username.in.use=sa používa. Vyberte si prosím iné meno.
 _mine.username=Meno používateľa
@@ -171,37 +195,14 @@ _portal.ui.navigation.of=z
 _portal.ui.navigation.page=Strana
 _portal.ui.navigation.results=Výsledky
 _portal.ui.notification.error=Chyba
-_portal.ui.notification.failure.search.saved=Uloženie vyhľadávania zlyhalo
 _portal.ui.notification.noitemsfound=Nenašli sa žiadne položky
 _portal.ui.reset.searchbox=Vynulovať
 _portal.ui.viewingrelateditems=Prezeráte si súvisiace položky
-_register-request.emailalreadyregistered=Táto adresa elektronickej pošty je už registrovaná
-_register.email.has.been.sent=E-mailová spráca bola odoslaná na túto adresu
-_register.emailclicktoconfirm=Kliknite prosím na nasledovné prepojenie, ak chcete potvrdiť Vašu registráciu
-_register.emailuse=Na prihlásenie sa do portálu použijete Vašu e-mailovú adresu spolu s heslom
-_register.entervalidemail=Zadajte prosím platnú adresu elektronickej pošty
-_register.enteryouremail=Napíšte Vašu e-mailovú adresu
-_register.errordetails=Podrobnosti o chybe
-_register.finishregistration=Dokončiť registráciu
-_register.iagree=Súhlasím
-_register.linkexpired=Linka, ktorú ste použili pri registrácii, je neplatná alebo neaktuálna
-_register.mycodeofconduct=Rozumiem, že Moja Europeana mi dáva možnosť vytvárať vlastné označenia (tagy) pre ktorýkoľvek objekt, ktorý chcem. Súhlasím s tým, že nebudem vytvárať tagy, ktoré sa môžu považovať za hanlivé, škodlivé, výhražné, nezákonné, nactiutŕhačské, narušujúce práva, vulgárne, poburujúce, obťažujúce, pornografické, obscénne, ľstivé, útočiace na súkromie alebo právo na publicitu, nenávistné alebo neprípustné z rasových, etnických alebo iných dôvodov. Kliknutím na toto okienko súhlasím, že sa budem riadiť touto dohodou a chápem, že v opačnom prípade bude moje členstvo v Mojej Europeane ukončené.
-_register.mycodeofconductrequired=Musíte súhlasiť s pravidlami, aby ste sa mohli zaregistrovať do Mojej Europeany
-_register.password=Heslo
-_register.password.choose=Vyberte si heslo
-_register.password.explain=Heslo musí mať 6 až 30 znakov
-_register.pick.user.name=Vaše používateľské meno sa zobrazí po prihlásení
-_register.please.follow.link=Kliknite prosím na linku uvedenú v e-mailovej správe a dokončite proces registrácie
-_register.register=Registrácia
-_register.registration.failed=Počas pokusu o spracovanie Vašej registrácie sa vyskytla chyba. Skúste to prosím znova
-_register.repeat.password=Zopakujte heslo
-_register.requiredfield=Toto pole je povinné
-_register.username.choose=Vyberte si meno používateľa
-_register.username.explain=Vaše meno používateľa sa zobrazí po prihlásení
 _search.boolean.and=a
 _search.boolean.not=nie
 _search.boolean.or=alebo
 _search.field.any.field=Akékoľvek pole
+_search.field.country=Krajina
 _search.field.creator=Tvorca
 _search.field.date=Dátum
 _search.field.description=Opis
@@ -225,7 +226,6 @@ _unused.bosnia.and.herzegovina=Bosna a Hercegovina
 _unused.browse.through.time=Prezeranie v čase
 _unused.contacts=Kontakty
 _unused.contributors=Prispievatelia
-_unused.country=Krajina
 _unused.createaccount=Vytvorenie konta
 _unused.emailwelcome=Vitajte v MojaEuropeana
 _unused.enewsoptin=Informujte ma o najnovšom vývoji súvisiacim s Europeanou
